Add source for jdk-7