@@ -1,8 +1,26 @@
 /*
- * @(#)DatagramSocket.java	1.101 06/06/08
+ * Copyright (c) 1995, 2010, Oracle and/or its affiliates. All rights reserved.
+ * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  *
- * Copyright 2006 Sun Microsystems, Inc. All rights reserved.
- * SUN PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
  */
 
 package java.net;
@@ -23,32 +41,32 @@ import java.security.PrivilegedExceptionAction;
  * one machine to another may be routed differently, and may arrive in
  * any order.
  *
- * <p>UDP broadcasts sends are always enabled on a DatagramSocket.
- * In order to receive broadcast packets a DatagramSocket
- * should be bound to the wildcard address. In some
- * implementations, broadcast packets may also be received when
+ * <p> Where possible, a newly constructed {@code DatagramSocket} has the
+ * {@link SocketOptions#SO_BROADCAST SO_BROADCAST} socket option enabled so as
+ * to allow the transmission of broadcast datagrams. In order to receive
+ * broadcast packets a DatagramSocket should be bound to the wildcard address.
+ * In some implementations, broadcast packets may also be received when
  * a DatagramSocket is bound to a more specific address.
  * <p>
  * Example:
  * <code>
- *		DatagramSocket s = new DatagramSocket(null);
- *		s.bind(new InetSocketAddress(8888));
+ *              DatagramSocket s = new DatagramSocket(null);
+ *              s.bind(new InetSocketAddress(8888));
  * </code>
  * Which is equivalent to:
  * <code>
- *		DatagramSocket s = new DatagramSocket(8888);
+ *              DatagramSocket s = new DatagramSocket(8888);
  * </code>
  * Both cases will create a DatagramSocket able to receive broadcasts on
  * UDP port 8888.
  *
  * @author  Pavani Diwanji
- * @version 1.101, 06/08/06
  * @see     java.net.DatagramPacket
  * @see     java.nio.channels.DatagramChannel
  * @since JDK1.0
  */
 public
-class DatagramSocket {
+class DatagramSocket implements java.io.Closeable {
     /**
      * Various states of this socket.
      */
@@ -90,7 +108,7 @@ class DatagramSocket {
      * Binds socket if not already bound.
      * <p>
      * @param   addr    The remote address.
-     * @param	port	The remote port
+     * @param   port    The remote port
      * @throws  SocketException if binding the socket fails.
      */
     private synchronized void connectInternal(InetAddress address, int port) throws SocketException {
@@ -100,6 +118,7 @@ class DatagramSocket {
         if (address == null) {
             throw new IllegalArgumentException("connect: null address");
         }
+        checkAddress (address, "connect");
         if (isClosed())
             return;
         SecurityManager security = System.getSecurityManager();
@@ -112,24 +131,24 @@ class DatagramSocket {
             }
         }
 
-	if (!isBound())
-	  bind(new InetSocketAddress(0));
+        if (!isBound())
+          bind(new InetSocketAddress(0));
 
-	// old impls do not support connect/disconnect
-	if (oldImpl) {
-	    connectState = ST_CONNECTED_NO_IMPL;
-	} else {
-	    try {
-	        getImpl().connect(address, port);
+        // old impls do not support connect/disconnect
+        if (oldImpl) {
+            connectState = ST_CONNECTED_NO_IMPL;
+        } else {
+            try {
+                getImpl().connect(address, port);
 
-		// socket is now connected by the impl
-		connectState = ST_CONNECTED;
-	    } catch (SocketException se) {
+                // socket is now connected by the impl
+                connectState = ST_CONNECTED;
+            } catch (SocketException se) {
 
-		// connection will be emulated by DatagramSocket
-		connectState = ST_CONNECTED_NO_IMPL;
-	    }
-	}
+                // connection will be emulated by DatagramSocket
+                connectState = ST_CONNECTED_NO_IMPL;
+            }
+        }
 
         connectedAddress = address;
         connectedPort = port;
@@ -138,31 +157,32 @@ class DatagramSocket {
 
     /**
      * Constructs a datagram socket and binds it to any available port
-     * on the local host machine.  The socket will be bound to the wildcard
-     * address, an IP address chosen by the kernel.
-     * 
-     * <p>If there is a security manager, 
+     * on the local host machine.  The socket will be bound to the
+     * {@link InetAddress#isAnyLocalAddress wildcard} address,
+     * an IP address chosen by the kernel.
+     *
+     * <p>If there is a security manager,
      * its <code>checkListen</code> method is first called
-     * with 0 as its argument to ensure the operation is allowed. 
+     * with 0 as its argument to ensure the operation is allowed.
      * This could result in a SecurityException.
      *
      * @exception  SocketException  if the socket could not be opened,
      *               or the socket could not bind to the specified local port.
-     * @exception  SecurityException  if a security manager exists and its  
+     * @exception  SecurityException  if a security manager exists and its
      *             <code>checkListen</code> method doesn't allow the operation.
-     * 
+     *
      * @see SecurityManager#checkListen
      */
     public DatagramSocket() throws SocketException {
-	// create a datagram socket.
-	createImpl();
-	try {
-	    bind(new InetSocketAddress(0));
-	} catch (SocketException se) {
-	    throw se;
-	} catch(IOException e) {
-	    throw new SocketException(e.getMessage());
-	}
+        // create a datagram socket.
+        createImpl();
+        try {
+            bind(new InetSocketAddress(0));
+        } catch (SocketException se) {
+            throw se;
+        } catch(IOException e) {
+            throw new SocketException(e.getMessage());
+        }
     }
 
     /**
@@ -176,8 +196,8 @@ class DatagramSocket {
     protected DatagramSocket(DatagramSocketImpl impl) {
         if (impl == null)
             throw new NullPointerException();
-	this.impl = impl;
-	checkOldImpl();
+        this.impl = impl;
+        checkOldImpl();
     }
 
     /**
@@ -186,151 +206,135 @@ class DatagramSocket {
      * <p>
      * If, if the address is <code>null</code>, creates an unbound socket.
      * <p>
-     * <p>If there is a security manager, 
+     * <p>If there is a security manager,
      * its <code>checkListen</code> method is first called
      * with the port from the socket address
-     * as its argument to ensure the operation is allowed. 
+     * as its argument to ensure the operation is allowed.
      * This could result in a SecurityException.
-     * 
+     *
      * @param bindaddr local socket address to bind, or <code>null</code>
-     *		       for an unbound socket.
-     * 
+     *                 for an unbound socket.
+     *
      * @exception  SocketException  if the socket could not be opened,
      *               or the socket could not bind to the specified local port.
-     * @exception  SecurityException  if a security manager exists and its  
+     * @exception  SecurityException  if a security manager exists and its
      *             <code>checkListen</code> method doesn't allow the operation.
-     * 
+     *
      * @see SecurityManager#checkListen
      * @since   1.4
      */
     public DatagramSocket(SocketAddress bindaddr) throws SocketException {
-	// create a datagram socket.
-	createImpl();
-	if (bindaddr != null) {
-	    bind(bindaddr);
-	}
+        // create a datagram socket.
+        createImpl();
+        if (bindaddr != null) {
+            bind(bindaddr);
+        }
     }
 
     /**
      * Constructs a datagram socket and binds it to the specified port
-     * on the local host machine.  The socket will be bound to the wildcard
-     * address, an IP address chosen by the kernel.
-     * 
-     * <p>If there is a security manager, 
+     * on the local host machine.  The socket will be bound to the
+     * {@link InetAddress#isAnyLocalAddress wildcard} address,
+     * an IP address chosen by the kernel.
+     *
+     * <p>If there is a security manager,
      * its <code>checkListen</code> method is first called
      * with the <code>port</code> argument
-     * as its argument to ensure the operation is allowed. 
+     * as its argument to ensure the operation is allowed.
      * This could result in a SecurityException.
      *
      * @param      port port to use.
      * @exception  SocketException  if the socket could not be opened,
      *               or the socket could not bind to the specified local port.
-     * @exception  SecurityException  if a security manager exists and its  
+     * @exception  SecurityException  if a security manager exists and its
      *             <code>checkListen</code> method doesn't allow the operation.
-     * 
+     *
      * @see SecurityManager#checkListen
      */
     public DatagramSocket(int port) throws SocketException {
-	this(port, null);
+        this(port, null);
     }
 
     /**
      * Creates a datagram socket, bound to the specified local
      * address.  The local port must be between 0 and 65535 inclusive.
      * If the IP address is 0.0.0.0, the socket will be bound to the
-     * wildcard address, an IP address chosen by the kernel.
-     * 
-     * <p>If there is a security manager, 
+     * {@link InetAddress#isAnyLocalAddress wildcard} address,
+     * an IP address chosen by the kernel.
+     *
+     * <p>If there is a security manager,
      * its <code>checkListen</code> method is first called
      * with the <code>port</code> argument
-     * as its argument to ensure the operation is allowed. 
+     * as its argument to ensure the operation is allowed.
      * This could result in a SecurityException.
-     * 
+     *
      * @param port local port to use
      * @param laddr local address to bind
-     * 
+     *
      * @exception  SocketException  if the socket could not be opened,
      *               or the socket could not bind to the specified local port.
-     * @exception  SecurityException  if a security manager exists and its  
+     * @exception  SecurityException  if a security manager exists and its
      *             <code>checkListen</code> method doesn't allow the operation.
-     * 
+     *
      * @see SecurityManager#checkListen
      * @since   JDK1.1
      */
     public DatagramSocket(int port, InetAddress laddr) throws SocketException {
-	this(new InetSocketAddress(laddr, port));
+        this(new InetSocketAddress(laddr, port));
     }
 
     private void checkOldImpl() {
-	if (impl == null)
-	    return;
-	// DatagramSocketImpl.peekdata() is a protected method, therefore we need to use
-	// getDeclaredMethod, therefore we need permission to access the member
-	try {
-	    AccessController.doPrivileged(new PrivilegedExceptionAction() {
-		    public Object run() throws NoSuchMethodException {
-			Class[] cl = new Class[1];
-			cl[0] = DatagramPacket.class;
-			impl.getClass().getDeclaredMethod("peekData", cl);
-			return null;
-		    }
-		});
-	} catch (java.security.PrivilegedActionException e) {
-	    oldImpl = true;
-	}
+        if (impl == null)
+            return;
+        // DatagramSocketImpl.peekdata() is a protected method, therefore we need to use
+        // getDeclaredMethod, therefore we need permission to access the member
+        try {
+            AccessController.doPrivileged(
+                new PrivilegedExceptionAction<Void>() {
+                    public Void run() throws NoSuchMethodException {
+                        Class[] cl = new Class[1];
+                        cl[0] = DatagramPacket.class;
+                        impl.getClass().getDeclaredMethod("peekData", cl);
+                        return null;
+                    }
+                });
+        } catch (java.security.PrivilegedActionException e) {
+            oldImpl = true;
+        }
     }
 
     static Class implClass = null;
 
     void createImpl() throws SocketException {
-	if (impl == null) {
-	    if (factory != null) {
-		impl = factory.createDatagramSocketImpl();
-		checkOldImpl();
-	    } else {
-		if (implClass == null) {
-		    String prefix = null;
-		    try {
-			prefix = (String) AccessController.doPrivileged(
-			    new sun.security.action.GetPropertyAction("impl.prefix", "Plain"));
-			implClass = Class.forName("java.net."+prefix+"DatagramSocketImpl");
-		    } catch (Exception e) {
-			System.err.println("Can't find class: java.net." + 
-					   prefix +
-					   "DatagramSocketImpl: check impl.prefix property");
-		    }
-		    if (implClass == null)
-			implClass = java.net.PlainDatagramSocketImpl.class;
-		}
-		try {
-		    impl = (DatagramSocketImpl) implClass.newInstance();
-		} catch (Exception e) {
-		    throw new SocketException("can't instantiate DatagramSocketImpl");
-		}
-		// No need to do a checkOldImpl() here, we know it's an up to date
-		// SocketImpl!
-		if (!(impl instanceof java.net.PlainDatagramSocketImpl))
-		    checkOldImpl();
-	    }
-	}
-	// creates a udp socket
-	impl.create();
-	created = true;
+        if (impl == null) {
+            if (factory != null) {
+                impl = factory.createDatagramSocketImpl();
+                checkOldImpl();
+            } else {
+                boolean isMulticast = (this instanceof MulticastSocket) ? true : false;
+                impl = DefaultDatagramSocketImplFactory.createDatagramSocketImpl(isMulticast);
+
+                checkOldImpl();
+            }
+        }
+        // creates a udp socket
+        impl.create();
+        created = true;
     }
 
     /**
-     * Get the <code>DatagramSocketImpl</code> attached to this socket, 
+     * Get the <code>DatagramSocketImpl</code> attached to this socket,
      * creating it if necessary.
      *
-     * @return	the <code>DatagramSocketImpl</code> attached to that 
-     * 		DatagramSocket
+     * @return  the <code>DatagramSocketImpl</code> attached to that
+     *          DatagramSocket
      * @throws SocketException if creation fails.
      * @since 1.4
      */
     DatagramSocketImpl getImpl() throws SocketException {
-	if (!created)
-	    createImpl();
-	return impl;
+        if (!created)
+            createImpl();
+        return impl;
     }
 
     /**
@@ -339,42 +343,53 @@ class DatagramSocket {
      * If the address is <code>null</code>, then the system will pick up
      * an ephemeral port and a valid local address to bind the socket.
      *<p>
-     * @param	addr The address & port to bind to.
-     * @throws	SocketException if any error happens during the bind, or if the
-     *		socket is already bound.
-     * @throws	SecurityException  if a security manager exists and its  
+     * @param   addr The address & port to bind to.
+     * @throws  SocketException if any error happens during the bind, or if the
+     *          socket is already bound.
+     * @throws  SecurityException  if a security manager exists and its
      *             <code>checkListen</code> method doesn't allow the operation.
      * @throws IllegalArgumentException if addr is a SocketAddress subclass
      *         not supported by this socket.
      * @since 1.4
      */
     public synchronized void bind(SocketAddress addr) throws SocketException {
-	if (isClosed())
-	    throw new SocketException("Socket is closed");
-	if (isBound())
-	    throw new SocketException("already bound");
-	if (addr == null)
-	    addr = new InetSocketAddress(0);
-	if (!(addr instanceof InetSocketAddress))
-	    throw new IllegalArgumentException("Unsupported address type!");
-	InetSocketAddress epoint = (InetSocketAddress) addr;
-	if (epoint.isUnresolved())
-	    throw new SocketException("Unresolved address");
-	SecurityManager sec = System.getSecurityManager();
-	if (sec != null) {
-	    sec.checkListen(epoint.getPort());
-	}
-	try {
-	    getImpl().bind(epoint.getPort(), 
-			   epoint.getAddress());
-	} catch (SocketException e) {
-	    getImpl().close();
-	    throw e;
-	}
-	bound = true;
+        if (isClosed())
+            throw new SocketException("Socket is closed");
+        if (isBound())
+            throw new SocketException("already bound");
+        if (addr == null)
+            addr = new InetSocketAddress(0);
+        if (!(addr instanceof InetSocketAddress))
+            throw new IllegalArgumentException("Unsupported address type!");
+        InetSocketAddress epoint = (InetSocketAddress) addr;
+        if (epoint.isUnresolved())
+            throw new SocketException("Unresolved address");
+        InetAddress iaddr = epoint.getAddress();
+        int port = epoint.getPort();
+        checkAddress(iaddr, "bind");
+        SecurityManager sec = System.getSecurityManager();
+        if (sec != null) {
+            sec.checkListen(port);
+        }
+        try {
+            getImpl().bind(port, iaddr);
+        } catch (SocketException e) {
+            getImpl().close();
+            throw e;
+        }
+        bound = true;
     }
 
-    /** 
+    void checkAddress (InetAddress addr, String op) {
+        if (addr == null) {
+            return;
+        }
+        if (!(addr instanceof Inet4Address || addr instanceof Inet6Address)) {
+            throw new IllegalArgumentException(op + ": invalid address type");
+        }
+    }
+
+    /**
      * Connects the socket to a remote address for this socket. When a
      * socket is connected to a remote address, packets may only be
      * sent to or received from that address. By default a datagram
@@ -382,125 +397,169 @@ class DatagramSocket {
      *
      * <p>If the remote destination to which the socket is connected does not
      * exist, or is otherwise unreachable, and if an ICMP destination unreachable
-     * packet has been received for that address, then a subsequent call to 
-     * send or receive may throw a PortUnreachableException. Note, there is no 
+     * packet has been received for that address, then a subsequent call to
+     * send or receive may throw a PortUnreachableException. Note, there is no
      * guarantee that the exception will be thrown.
      *
-     * <p>A caller's permission to send and receive datagrams to a
-     * given host and port are checked at connect time. When a socket
-     * is connected, receive and send <b>will not
-     * perform any security checks</b> on incoming and outgoing
-     * packets, other than matching the packet's and the socket's
-     * address and port. On a send operation, if the packet's address
-     * is set and the packet's address and the socket's address do not
-     * match, an IllegalArgumentException will be thrown. A socket
-     * connected to a multicast address may only be used to send packets.
+     * <p> If a security manager has been installed then it is invoked to check
+     * access to the remote address. Specifically, if the given {@code address}
+     * is a {@link InetAddress#isMulticastAddress multicast address},
+     * the security manager's {@link
+     * java.lang.SecurityManager#checkMulticast(InetAddress)
+     * checkMulticast} method is invoked with the given {@code address}.
+     * Otherwise, the security manager's {@link
+     * java.lang.SecurityManager#checkConnect(String,int) checkConnect}
+     * and {@link java.lang.SecurityManager#checkAccept checkAccept} methods
+     * are invoked, with the given {@code address} and {@code port}, to
+     * verify that datagrams are permitted to be sent and received
+     * respectively.
+     *
+     * <p> When a socket is connected, {@link #receive receive} and
+     * {@link #send send} <b>will not perform any security checks</b>
+     * on incoming and outgoing packets, other than matching the packet's
+     * and the socket's address and port. On a send operation, if the
+     * packet's address is set and the packet's address and the socket's
+     * address do not match, an {@code IllegalArgumentException} will be
+     * thrown. A socket connected to a multicast address may only be used
+     * to send packets.
      *
      * @param address the remote address for the socket
      *
      * @param port the remote port for the socket.
      *
-     * @exception IllegalArgumentException if the address is null,
-     * or the port is out of range.
+     * @throws IllegalArgumentException
+     *         if the address is null, or the port is out of range.
      *
-     * @exception SecurityException if the caller is not allowed to
-     * send datagrams to and receive datagrams from the address and port.
+     * @throws SecurityException
+     *         if a security manager has been installed and it does
+     *         not permit access to the given remote address
      *
      * @see #disconnect
-     * @see #send
-     * @see #receive 
      */
     public void connect(InetAddress address, int port) {
-	try {
-	    connectInternal(address, port);
-	} catch (SocketException se) { 
-	    throw new Error("connect failed", se);
-	}
+        try {
+            connectInternal(address, port);
+        } catch (SocketException se) {
+            throw new Error("connect failed", se);
+        }
     }
 
     /**
      * Connects this socket to a remote socket address (IP address + port number).
-     * <p>
-     * @param	addr	The remote address.
-     * @throws	SocketException if the connect fails
-     * @throws	IllegalArgumentException if addr is null or addr is a SocketAddress
-     *		subclass not supported by this socket
+     *
+     * <p> If given an {@link InetSocketAddress InetSocketAddress}, this method
+     * behaves as if invoking {@link #connect(InetAddress,int) connect(InetAddress,int)}
+     * with the the given socket addresses IP address and port number.
+     *
+     * @param   addr    The remote address.
+     *
+     * @throws  SocketException
+     *          if the connect fails
+     *
+     * @throws IllegalArgumentException
+     *         if {@code addr} is {@code null}, or {@code addr} is a SocketAddress
+     *         subclass not supported by this socket
+     *
+     * @throws SecurityException
+     *         if a security manager has been installed and it does
+     *         not permit access to the given remote address
+     *
      * @since 1.4
-     * @see #connect
      */
     public void connect(SocketAddress addr) throws SocketException {
-	if (addr == null)
-	    throw new IllegalArgumentException("Address can't be null");
-	if (!(addr instanceof InetSocketAddress))
-	    throw new IllegalArgumentException("Unsupported address type");
-	InetSocketAddress epoint = (InetSocketAddress) addr;
-	if (epoint.isUnresolved())
-	    throw new SocketException("Unresolved address");
-	connectInternal(epoint.getAddress(), epoint.getPort());
+        if (addr == null)
+            throw new IllegalArgumentException("Address can't be null");
+        if (!(addr instanceof InetSocketAddress))
+            throw new IllegalArgumentException("Unsupported address type");
+        InetSocketAddress epoint = (InetSocketAddress) addr;
+        if (epoint.isUnresolved())
+            throw new SocketException("Unresolved address");
+        connectInternal(epoint.getAddress(), epoint.getPort());
     }
 
-    /** 
-     * Disconnects the socket. This does nothing if the socket is not
-     * connected.
+    /**
+     * Disconnects the socket. If the socket is closed or not connected,
+     * then this method has no effect.
      *
      * @see #connect
      */
     public void disconnect() {
-	synchronized (this) {
-	    if (isClosed())
-		return;
-	    if (connectState == ST_CONNECTED) {
-	    	impl.disconnect ();
-	    }
-	    connectedAddress = null;
-	    connectedPort = -1;
-	    connectState = ST_NOT_CONNECTED;
-	}
+        synchronized (this) {
+            if (isClosed())
+                return;
+            if (connectState == ST_CONNECTED) {
+                impl.disconnect ();
+            }
+            connectedAddress = null;
+            connectedPort = -1;
+            connectState = ST_NOT_CONNECTED;
+        }
     }
 
     /**
      * Returns the binding state of the socket.
+     * <p>
+     * If the socket was bound prior to being {@link #close closed},
+     * then this method will continue to return <code>true</code>
+     * after the socket is closed.
      *
-     * @return true if the socket succesfuly bound to an address
+     * @return true if the socket successfully bound to an address
      * @since 1.4
      */
     public boolean isBound() {
-	return bound;
+        return bound;
     }
 
     /**
      * Returns the connection state of the socket.
+     * <p>
+     * If the socket was connected prior to being {@link #close closed},
+     * then this method will continue to return <code>true</code>
+     * after the socket is closed.
      *
-     * @return true if the socket succesfuly connected to a server
+     * @return true if the socket successfully connected to a server
      * @since 1.4
      */
     public boolean isConnected() {
-	return connectState != ST_NOT_CONNECTED;
+        return connectState != ST_NOT_CONNECTED;
     }
 
     /**
-     * Returns the address to which this socket is connected. Returns null
-     * if the socket is not connected.
+     * Returns the address to which this socket is connected. Returns
+     * <code>null</code> if the socket is not connected.
+     * <p>
+     * If the socket was connected prior to being {@link #close closed},
+     * then this method will continue to return the connected address
+     * after the socket is closed.
      *
      * @return the address to which this socket is connected.
      */
     public InetAddress getInetAddress() {
-	return connectedAddress;
+        return connectedAddress;
     }
 
     /**
-     * Returns the port for this socket. Returns -1 if the socket is not
-     * connected.
+     * Returns the port number to which this socket is connected.
+     * Returns <code>-1</code> if the socket is not connected.
+     * <p>
+     * If the socket was connected prior to being {@link #close closed},
+     * then this method will continue to return the connected port number
+     * after the socket is closed.
      *
-     * @return the port to which this socket is connected.
+     * @return the port number to which this socket is connected.
      */
     public int getPort() {
-	return connectedPort;
+        return connectedPort;
     }
 
     /**
      * Returns the address of the endpoint this socket is connected to, or
      * <code>null</code> if it is unconnected.
+     * <p>
+     * If the socket was connected prior to being {@link #close closed},
+     * then this method will continue to return the connected address
+     * after the socket is closed.
+     *
      * @return a <code>SocketAddress</code> representing the remote
      *         endpoint of this socket, or <code>null</code> if it is
      *         not connected yet.
@@ -510,17 +569,16 @@ class DatagramSocket {
      * @since 1.4
      */
     public SocketAddress getRemoteSocketAddress() {
-	if (!isConnected())
-	    return null;
-	return new InetSocketAddress(getInetAddress(), getPort());
+        if (!isConnected())
+            return null;
+        return new InetSocketAddress(getInetAddress(), getPort());
     }
 
     /**
-     * Returns the address of the endpoint this socket is bound to, or
-     * <code>null</code> if it is not bound yet.
+     * Returns the address of the endpoint this socket is bound to.
      *
      * @return a <code>SocketAddress</code> representing the local endpoint of this
-     *	       socket, or <code>null</code> if it is not bound yet.
+     *         socket, or <code>null</code> if it is closed or not bound yet.
      * @see #getLocalAddress()
      * @see #getLocalPort()
      * @see #bind(SocketAddress)
@@ -528,9 +586,11 @@ class DatagramSocket {
      */
 
     public SocketAddress getLocalSocketAddress() {
-	if (!isBound())
-	    return null;
-	return new InetSocketAddress(getLocalAddress(), getLocalPort());
+        if (isClosed())
+            return null;
+        if (!isBound())
+            return null;
+        return new InetSocketAddress(getLocalAddress(), getLocalPort());
     }
 
     /**
@@ -546,25 +606,27 @@ class DatagramSocket {
      * security manager's <code>checkMulticast</code> method
      * with <code>p.getAddress()</code> as its argument.
      * If the evaluation of that expression is false,
-     * this method instead calls the security manager's 
+     * this method instead calls the security manager's
      * <code>checkConnect</code> method with arguments
      * <code>p.getAddress().getHostAddress()</code> and
      * <code>p.getPort()</code>. Each call to a security manager method
      * could result in a SecurityException if the operation is not allowed.
-     * 
+     *
      * @param      p   the <code>DatagramPacket</code> to be sent.
-     * 
+     *
      * @exception  IOException  if an I/O error occurs.
-     * @exception  SecurityException  if a security manager exists and its  
-     *             <code>checkMulticast</code> or <code>checkConnect</code> 
+     * @exception  SecurityException  if a security manager exists and its
+     *             <code>checkMulticast</code> or <code>checkConnect</code>
      *             method doesn't allow the send.
      * @exception  PortUnreachableException may be thrown if the socket is connected
-     *             to a currently unreachable destination. Note, there is no 
-     * 		   guarantee that the exception will be thrown.
+     *             to a currently unreachable destination. Note, there is no
+     *             guarantee that the exception will be thrown.
      * @exception  java.nio.channels.IllegalBlockingModeException
      *             if this socket has an associated channel,
      *             and the channel is in non-blocking mode.
-     * 
+     * @exception  IllegalArgumentException if the socket is connected,
+     *             and connected address and packet address differ.
+     *
      * @see        java.net.DatagramPacket
      * @see        SecurityManager#checkMulticast(InetAddress)
      * @see        SecurityManager#checkConnect
@@ -572,44 +634,45 @@ class DatagramSocket {
      * @spec JSR-51
      */
     public void send(DatagramPacket p) throws IOException  {
-	InetAddress packetAddress = null;
-	synchronized (p) {
-	    if (isClosed())
-		throw new SocketException("Socket is closed");
-	    if (connectState == ST_NOT_CONNECTED) {
-		// check the address is ok wiht the security manager on every send.
-		SecurityManager security = System.getSecurityManager();
+        InetAddress packetAddress = null;
+        synchronized (p) {
+            if (isClosed())
+                throw new SocketException("Socket is closed");
+            checkAddress (p.getAddress(), "send");
+            if (connectState == ST_NOT_CONNECTED) {
+                // check the address is ok wiht the security manager on every send.
+                SecurityManager security = System.getSecurityManager();
 
-		// The reason you want to synchronize on datagram packet
-		// is because you dont want an applet to change the address 
-		// while you are trying to send the packet for example 
-		// after the security check but before the send.
-		if (security != null) {
-		    if (p.getAddress().isMulticastAddress()) {
-			security.checkMulticast(p.getAddress());
-		    } else {
-			security.checkConnect(p.getAddress().getHostAddress(), 
-					      p.getPort());
-		    }
-		}
-	    } else {
-		// we're connected
-		packetAddress = p.getAddress();
-		if (packetAddress == null) {
-		    p.setAddress(connectedAddress);
-		    p.setPort(connectedPort);
-		} else if ((!packetAddress.equals(connectedAddress)) ||
-			   p.getPort() != connectedPort) {
-		    throw new IllegalArgumentException("connected address " +
-						       "and packet address" +
-						       " differ");
-		}
-	    }
-	    // Check whether the socket is bound
-	    if (!isBound())
-		bind(new InetSocketAddress(0));
-	    // call the  method to send
-	    getImpl().send(p);
+                // The reason you want to synchronize on datagram packet
+                // is because you dont want an applet to change the address
+                // while you are trying to send the packet for example
+                // after the security check but before the send.
+                if (security != null) {
+                    if (p.getAddress().isMulticastAddress()) {
+                        security.checkMulticast(p.getAddress());
+                    } else {
+                        security.checkConnect(p.getAddress().getHostAddress(),
+                                              p.getPort());
+                    }
+                }
+            } else {
+                // we're connected
+                packetAddress = p.getAddress();
+                if (packetAddress == null) {
+                    p.setAddress(connectedAddress);
+                    p.setPort(connectedPort);
+                } else if ((!packetAddress.equals(connectedAddress)) ||
+                           p.getPort() != connectedPort) {
+                    throw new IllegalArgumentException("connected address " +
+                                                       "and packet address" +
+                                                       " differ");
+                }
+            }
+            // Check whether the socket is bound
+            if (!isBound())
+                bind(new InetSocketAddress(0));
+            // call the  method to send
+            getImpl().send(p);
         }
     }
 
@@ -627,15 +690,15 @@ class DatagramSocket {
      * If there is a security manager, a packet cannot be received if the
      * security manager's <code>checkAccept</code> method
      * does not allow it.
-     * 
+     *
      * @param      p   the <code>DatagramPacket</code> into which to place
      *                 the incoming data.
      * @exception  IOException  if an I/O error occurs.
      * @exception  SocketTimeoutException  if setSoTimeout was previously called
-     *		       and the timeout has expired.
+     *                 and the timeout has expired.
      * @exception  PortUnreachableException may be thrown if the socket is connected
-     *       	   to a currently unreachable destination. Note, there is no guarantee that the
-     *       	   exception will be thrown.
+     *             to a currently unreachable destination. Note, there is no guarantee that the
+     *             exception will be thrown.
      * @exception  java.nio.channels.IllegalBlockingModeException
      *             if this socket has an associated channel,
      *             and the channel is in non-blocking mode.
@@ -645,72 +708,72 @@ class DatagramSocket {
      * @spec JSR-51
      */
     public synchronized void receive(DatagramPacket p) throws IOException {
-      	synchronized (p) {
-	    if (!isBound())
-		bind(new InetSocketAddress(0));
-	    if (connectState == ST_NOT_CONNECTED) {
-		// check the address is ok with the security manager before every recv.
-		SecurityManager security = System.getSecurityManager();
-		if (security != null) {
-		    while(true) {
-			String peekAd = null;
-			int peekPort = 0;
-			// peek at the packet to see who it is from.
-			if (!oldImpl) {
-			    // We can use the new peekData() API
-			    DatagramPacket peekPacket = new DatagramPacket(new byte[1], 1);
-			    peekPort = getImpl().peekData(peekPacket);
-			    peekAd = peekPacket.getAddress().getHostAddress();
-			} else {
-			    InetAddress adr = new InetAddress();
-			    peekPort = getImpl().peek(adr);
-			    peekAd = adr.getHostAddress();
-			}
-			try {
-			    security.checkAccept(peekAd, peekPort);
-			    // security check succeeded - so now break
-			    // and recv the packet.
-			    break;
-			} catch (SecurityException se) {
-			    // Throw away the offending packet by consuming
-			    // it in a tmp buffer.
-			    DatagramPacket tmp = new DatagramPacket(new byte[1], 1);
-			    getImpl().receive(tmp);
-			
-			    // silently discard the offending packet
-			    // and continue: unknown/malicious
-			    // entities on nets should not make
-			    // runtime throw security exception and
-			    // disrupt the applet by sending random
-			    // datagram packets.
-			    continue;
-			} 
-		    } // end of while
-		}
-	    }
-	    if (connectState == ST_CONNECTED_NO_IMPL) {
-		// We have to do the filtering the old fashioned way since
-		// the native impl doesn't support connect or the connect
-		// via the impl failed.
-		boolean stop = false;
-		while (!stop) {
-		    // peek at the packet to see who it is from.
-		    InetAddress peekAddress = new InetAddress();
-		    int peekPort = getImpl().peek(peekAddress);
-		    if ((!connectedAddress.equals(peekAddress)) ||
-			(connectedPort != peekPort)) {
-			// throw the packet away and silently continue
-			DatagramPacket tmp = new DatagramPacket(new byte[1], 1);
-			getImpl().receive(tmp);
-		    } else {
-			stop = true;
-		    }
-		}
-	    }
-	    // If the security check succeeds, or the datagram is
-	    // connected then receive the packet
-	    getImpl().receive(p);
-	}
+        synchronized (p) {
+            if (!isBound())
+                bind(new InetSocketAddress(0));
+            if (connectState == ST_NOT_CONNECTED) {
+                // check the address is ok with the security manager before every recv.
+                SecurityManager security = System.getSecurityManager();
+                if (security != null) {
+                    while(true) {
+                        String peekAd = null;
+                        int peekPort = 0;
+                        // peek at the packet to see who it is from.
+                        if (!oldImpl) {
+                            // We can use the new peekData() API
+                            DatagramPacket peekPacket = new DatagramPacket(new byte[1], 1);
+                            peekPort = getImpl().peekData(peekPacket);
+                            peekAd = peekPacket.getAddress().getHostAddress();
+                        } else {
+                            InetAddress adr = new InetAddress();
+                            peekPort = getImpl().peek(adr);
+                            peekAd = adr.getHostAddress();
+                        }
+                        try {
+                            security.checkAccept(peekAd, peekPort);
+                            // security check succeeded - so now break
+                            // and recv the packet.
+                            break;
+                        } catch (SecurityException se) {
+                            // Throw away the offending packet by consuming
+                            // it in a tmp buffer.
+                            DatagramPacket tmp = new DatagramPacket(new byte[1], 1);
+                            getImpl().receive(tmp);
+
+                            // silently discard the offending packet
+                            // and continue: unknown/malicious
+                            // entities on nets should not make
+                            // runtime throw security exception and
+                            // disrupt the applet by sending random
+                            // datagram packets.
+                            continue;
+                        }
+                    } // end of while
+                }
+            }
+            if (connectState == ST_CONNECTED_NO_IMPL) {
+                // We have to do the filtering the old fashioned way since
+                // the native impl doesn't support connect or the connect
+                // via the impl failed.
+                boolean stop = false;
+                while (!stop) {
+                    // peek at the packet to see who it is from.
+                    InetAddress peekAddress = new InetAddress();
+                    int peekPort = getImpl().peek(peekAddress);
+                    if ((!connectedAddress.equals(peekAddress)) ||
+                        (connectedPort != peekPort)) {
+                        // throw the packet away and silently continue
+                        DatagramPacket tmp = new DatagramPacket(new byte[1], 1);
+                        getImpl().receive(tmp);
+                    } else {
+                        stop = true;
+                    }
+                }
+            }
+            // If the security check succeeds, or the datagram is
+            // connected then receive the packet
+            getImpl().receive(p);
+        }
     }
 
     /**
@@ -722,45 +785,50 @@ class DatagramSocket {
      * as its arguments to see if the operation is allowed.
      *
      * @see SecurityManager#checkConnect
-     * @return  the local address to which the socket is bound, or
-     *		an <code>InetAddress</code> representing any local
-     *		address if either the socket is not bound, or
-     *		the security manager <code>checkConnect</code>
-     *		method does not allow the operation
+     * @return  the local address to which the socket is bound,
+     *          <code>null</code> if the socket is closed, or
+     *          an <code>InetAddress</code> representing
+     *          {@link InetAddress#isAnyLocalAddress wildcard}
+     *          address if either the socket is not bound, or
+     *          the security manager <code>checkConnect</code>
+     *          method does not allow the operation
      * @since   1.1
      */
     public InetAddress getLocalAddress() {
-	if (isClosed())
-	    return null;
-	InetAddress in = null;
-	try {
-	    in = (InetAddress) getImpl().getOption(SocketOptions.SO_BINDADDR);
-	    if (in.isAnyLocalAddress()) {
-		in = InetAddress.anyLocalAddress();
-	    }
-	    SecurityManager s = System.getSecurityManager();
-	    if (s != null) {
-		s.checkConnect(in.getHostAddress(), -1);
-	    }
-	} catch (Exception e) {
-	    in = InetAddress.anyLocalAddress(); // "0.0.0.0"
-	}
-	return in;
+        if (isClosed())
+            return null;
+        InetAddress in = null;
+        try {
+            in = (InetAddress) getImpl().getOption(SocketOptions.SO_BINDADDR);
+            if (in.isAnyLocalAddress()) {
+                in = InetAddress.anyLocalAddress();
+            }
+            SecurityManager s = System.getSecurityManager();
+            if (s != null) {
+                s.checkConnect(in.getHostAddress(), -1);
+            }
+        } catch (Exception e) {
+            in = InetAddress.anyLocalAddress(); // "0.0.0.0"
+        }
+        return in;
     }
 
     /**
-     * Returns the port number on the local host to which this socket is bound.
+     * Returns the port number on the local host to which this socket
+     * is bound.
      *
-     * @return  the port number on the local host to which this socket is bound.
+     * @return  the port number on the local host to which this socket is bound,
+                <code>-1</code> if the socket is closed, or
+                <code>0</code> if it is not bound yet.
      */
     public int getLocalPort() {
-	if (isClosed())
-	    return -1;
-	try {
-	    return getImpl().getLocalPort();
-	} catch (Exception e) {
-	    return 0;
-	}
+        if (isClosed())
+            return -1;
+        try {
+            return getImpl().getLocalPort();
+        } catch (Exception e) {
+            return 0;
+        }
     }
 
     /** Enable/disable SO_TIMEOUT with the specified timeout, in
@@ -774,14 +842,14 @@ class DatagramSocket {
      *  A timeout of zero is interpreted as an infinite timeout.
      *
      * @param timeout the specified timeout in milliseconds.
-     * @throws SocketException if there is an error in the underlying protocol, such as an UDP error. 
+     * @throws SocketException if there is an error in the underlying protocol, such as an UDP error.
      * @since   JDK1.1
      * @see #getSoTimeout()
      */
     public synchronized void setSoTimeout(int timeout) throws SocketException {
-	if (isClosed())
-	    throw new SocketException("Socket is closed");
-	getImpl().setOption(SocketOptions.SO_TIMEOUT, new Integer(timeout));
+        if (isClosed())
+            throw new SocketException("Socket is closed");
+        getImpl().setOption(SocketOptions.SO_TIMEOUT, new Integer(timeout));
     }
 
     /**
@@ -794,35 +862,35 @@ class DatagramSocket {
      * @see #setSoTimeout(int)
      */
     public synchronized int getSoTimeout() throws SocketException {
-	if (isClosed())
-	    throw new SocketException("Socket is closed");
-	if (getImpl() == null)
-	    return 0;
-	Object o = getImpl().getOption(SocketOptions.SO_TIMEOUT);
-	/* extra type safety */
-	if (o instanceof Integer) {
-	    return ((Integer) o).intValue();
-	} else {
-	    return 0;
-	}
+        if (isClosed())
+            throw new SocketException("Socket is closed");
+        if (getImpl() == null)
+            return 0;
+        Object o = getImpl().getOption(SocketOptions.SO_TIMEOUT);
+        /* extra type safety */
+        if (o instanceof Integer) {
+            return ((Integer) o).intValue();
+        } else {
+            return 0;
+        }
     }
 
     /**
      * Sets the SO_SNDBUF option to the specified value for this
-     * <tt>DatagramSocket</tt>. The SO_SNDBUF option is used by the 
+     * <tt>DatagramSocket</tt>. The SO_SNDBUF option is used by the
      * network implementation as a hint to size the underlying
-     * network I/O buffers. The SO_SNDBUF setting may also be used 
+     * network I/O buffers. The SO_SNDBUF setting may also be used
      * by the network implementation to determine the maximum size
      * of the packet that can be sent on this socket.
      * <p>
      * As SO_SNDBUF is a hint, applications that want to verify
      * what size the buffer is should call {@link #getSendBufferSize()}.
      * <p>
-     * Increasing the buffer size may allow multiple outgoing packets 
+     * Increasing the buffer size may allow multiple outgoing packets
      * to be queued by the network implementation when the send rate
-     * is high. 
+     * is high.
      * <p>
-     * Note: If {@link #send(DatagramPacket)} is used to send a 
+     * Note: If {@link #send(DatagramPacket)} is used to send a
      * <code>DatagramPacket</code> that is larger than the setting
      * of SO_SNDBUF then it is implementation specific if the
      * packet is sent or discarded.
@@ -830,7 +898,7 @@ class DatagramSocket {
      * @param size the size to which to set the send buffer
      * size. This value must be greater than 0.
      *
-     * @exception SocketException if there is an error 
+     * @exception SocketException if there is an error
      * in the underlying protocol, such as an UDP error.
      * @exception IllegalArgumentException if the value is 0 or is
      * negative.
@@ -838,12 +906,12 @@ class DatagramSocket {
      */
     public synchronized void setSendBufferSize(int size)
     throws SocketException{
-	if (!(size > 0)) {
-	    throw new IllegalArgumentException("negative send size");
-	}
-	if (isClosed())
-	    throw new SocketException("Socket is closed");
-	getImpl().setOption(SocketOptions.SO_SNDBUF, new Integer(size));
+        if (!(size > 0)) {
+            throw new IllegalArgumentException("negative send size");
+        }
+        if (isClosed())
+            throw new SocketException("Socket is closed");
+        getImpl().setOption(SocketOptions.SO_SNDBUF, new Integer(size));
     }
 
     /**
@@ -851,19 +919,19 @@ class DatagramSocket {
      * buffer size used by the platform for output on this <tt>DatagramSocket</tt>.
      *
      * @return the value of the SO_SNDBUF option for this <tt>DatagramSocket</tt>
-     * @exception SocketException if there is an error in 
+     * @exception SocketException if there is an error in
      * the underlying protocol, such as an UDP error.
      * @see #setSendBufferSize
      */
     public synchronized int getSendBufferSize() throws SocketException {
-	if (isClosed())
-	    throw new SocketException("Socket is closed");
-	int result = 0;
-	Object o = getImpl().getOption(SocketOptions.SO_SNDBUF);
-	if (o instanceof Integer) {
-	    result = ((Integer)o).intValue();
-	}
-	return result;
+        if (isClosed())
+            throw new SocketException("Socket is closed");
+        int result = 0;
+        Object o = getImpl().getOption(SocketOptions.SO_SNDBUF);
+        if (o instanceof Integer) {
+            result = ((Integer)o).intValue();
+        }
+        return result;
     }
 
     /**
@@ -888,7 +956,7 @@ class DatagramSocket {
      * @param size the size to which to set the receive buffer
      * size. This value must be greater than 0.
      *
-     * @exception SocketException if there is an error in 
+     * @exception SocketException if there is an error in
      * the underlying protocol, such as an UDP error.
      * @exception IllegalArgumentException if the value is 0 or is
      * negative.
@@ -896,12 +964,12 @@ class DatagramSocket {
      */
     public synchronized void setReceiveBufferSize(int size)
     throws SocketException{
-	if (size <= 0) {
-	    throw new IllegalArgumentException("invalid receive size");
-	}
-	if (isClosed())
-	    throw new SocketException("Socket is closed");
-	getImpl().setOption(SocketOptions.SO_RCVBUF, new Integer(size));
+        if (size <= 0) {
+            throw new IllegalArgumentException("invalid receive size");
+        }
+        if (isClosed())
+            throw new SocketException("Socket is closed");
+        getImpl().setOption(SocketOptions.SO_RCVBUF, new Integer(size));
     }
 
     /**
@@ -914,14 +982,14 @@ class DatagramSocket {
      */
     public synchronized int getReceiveBufferSize()
     throws SocketException{
-	if (isClosed())
-	    throw new SocketException("Socket is closed");
-	int result = 0;
-	Object o = getImpl().getOption(SocketOptions.SO_RCVBUF);
-	if (o instanceof Integer) {
-	    result = ((Integer)o).intValue();
-	}
-	return result;
+        if (isClosed())
+            throw new SocketException("Socket is closed");
+        int result = 0;
+        Object o = getImpl().getOption(SocketOptions.SO_RCVBUF);
+        if (o instanceof Integer) {
+            result = ((Integer)o).intValue();
+        }
+        return result;
     }
 
     /**
@@ -947,25 +1015,25 @@ class DatagramSocket {
      * The behaviour when <tt>SO_REUSEADDR</tt> is enabled or
      * disabled after a socket is bound (See {@link #isBound()})
      * is not defined.
-     * 
-     * @param on  whether to enable or disable the 
+     *
+     * @param on  whether to enable or disable the
      * @exception SocketException if an error occurs enabling or
      *            disabling the <tt>SO_RESUEADDR</tt> socket option,
-     *	   	  or the socket is closed.
+     *            or the socket is closed.
      * @since 1.4
-     * @see #getReuseAddress()     
-     * @see #bind(SocketAddress)     
+     * @see #getReuseAddress()
+     * @see #bind(SocketAddress)
      * @see #isBound()
      * @see #isClosed()
      */
     public synchronized void setReuseAddress(boolean on) throws SocketException {
-	if (isClosed())
-	    throw new SocketException("Socket is closed");
-	// Integer instead of Boolean for compatibility with older DatagramSocketImpl
+        if (isClosed())
+            throw new SocketException("Socket is closed");
+        // Integer instead of Boolean for compatibility with older DatagramSocketImpl
         if (oldImpl)
-	    getImpl().setOption(SocketOptions.SO_REUSEADDR, new Integer(on?-1:0));
-	else
-	    getImpl().setOption(SocketOptions.SO_REUSEADDR, Boolean.valueOf(on));
+            getImpl().setOption(SocketOptions.SO_REUSEADDR, new Integer(on?-1:0));
+        else
+            getImpl().setOption(SocketOptions.SO_REUSEADDR, Boolean.valueOf(on));
     }
 
     /**
@@ -973,28 +1041,37 @@ class DatagramSocket {
      *
      * @return a <code>boolean</code> indicating whether or not SO_REUSEADDR is enabled.
      * @exception SocketException if there is an error
-     * in the underlying protocol, such as an UDP error. 
+     * in the underlying protocol, such as an UDP error.
      * @since   1.4
      * @see #setReuseAddress(boolean)
      */
     public synchronized boolean getReuseAddress() throws SocketException {
-	if (isClosed())
-	    throw new SocketException("Socket is closed");
-	Object o = getImpl().getOption(SocketOptions.SO_REUSEADDR);
-	return ((Boolean)o).booleanValue();
+        if (isClosed())
+            throw new SocketException("Socket is closed");
+        Object o = getImpl().getOption(SocketOptions.SO_REUSEADDR);
+        return ((Boolean)o).booleanValue();
     }
 
     /**
      * Enable/disable SO_BROADCAST.
-     * @param on     whether or not to have broadcast turned on.
-     * @exception SocketException if there is an error
-     * in the underlying protocol, such as an UDP error.
+     *
+     * <p> Some operating systems may require that the Java virtual machine be
+     * started with implementation specific privileges to enable this option or
+     * send broadcast datagrams.
+     *
+     * @param  on
+     *         whether or not to have broadcast turned on.
+     *
+     * @throws  SocketException
+     *          if there is an error in the underlying protocol, such as an UDP
+     *          error.
+     *
      * @since 1.4
      * @see #getBroadcast()
      */
     public synchronized void setBroadcast(boolean on) throws SocketException {
-	if (isClosed())
-	    throw new SocketException("Socket is closed");
+        if (isClosed())
+            throw new SocketException("Socket is closed");
         getImpl().setOption(SocketOptions.SO_BROADCAST, Boolean.valueOf(on));
     }
 
@@ -1007,8 +1084,8 @@ class DatagramSocket {
      * @see #setBroadcast(boolean)
      */
     public synchronized boolean getBroadcast() throws SocketException {
-	if (isClosed())
-	    throw new SocketException("Socket is closed");
+        if (isClosed())
+            throw new SocketException("Socket is closed");
         return ((Boolean)(getImpl().getOption(SocketOptions.SO_BROADCAST))).booleanValue();
     }
 
@@ -1021,10 +1098,11 @@ class DatagramSocket {
      * <P> The tc <B>must</B> be in the range <code> 0 <= tc <=
      * 255</code> or an IllegalArgumentException will be thrown.
      * <p>Notes:
-     * <p> for Internet Protocol v4 the value consists of an octet
-     * with precedence and TOS fields as detailed in RFC 1349. The
-     * TOS field is bitset created by bitwise-or'ing values such
-     * the following :-
+     * <p>For Internet Protocol v4 the value consists of an
+     * <code>integer</code>, the least significant 8 bits of which
+     * represent the value of the TOS octet in IP packets sent by
+     * the socket.
+     * RFC 1349 defines the TOS values as follows:
      * <p>
      * <UL>
      * <LI><CODE>IPTOS_LOWCOST (0x02)</CODE></LI>
@@ -1035,36 +1113,36 @@ class DatagramSocket {
      * The last low order bit is always ignored as this
      * corresponds to the MBZ (must be zero) bit.
      * <p>
-     * Setting bits in the precedence field may result in a 
+     * Setting bits in the precedence field may result in a
      * SocketException indicating that the operation is not
      * permitted.
      * <p>
-     * for Internet Protocol v6 <code>tc</code> is the value that 
+     * for Internet Protocol v6 <code>tc</code> is the value that
      * would be placed into the sin6_flowinfo field of the IP header.
      *
-     * @param tc	an <code>int</code> value for the bitset.
+     * @param tc        an <code>int</code> value for the bitset.
      * @throws SocketException if there is an error setting the
-     * traffic class or type-of-service 
+     * traffic class or type-of-service
      * @since 1.4
      * @see #getTrafficClass
      */
     public synchronized void setTrafficClass(int tc) throws SocketException {
-	if (tc < 0 || tc > 255)
-	    throw new IllegalArgumentException("tc is not in range 0 -- 255");
+        if (tc < 0 || tc > 255)
+            throw new IllegalArgumentException("tc is not in range 0 -- 255");
 
-	if (isClosed())
-	    throw new SocketException("Socket is closed");
+        if (isClosed())
+            throw new SocketException("Socket is closed");
         getImpl().setOption(SocketOptions.IP_TOS, new Integer(tc));
     }
 
     /**
-     * Gets traffic class or type-of-service in the IP datagram 
+     * Gets traffic class or type-of-service in the IP datagram
      * header for packets sent from this DatagramSocket.
      * <p>
      * As the underlying network implementation may ignore the
      * traffic class or type-of-service set using {@link #setTrafficClass(int)}
      * this method may return a different value than was previously
-     * set using the {@link #setTrafficClass(int)} method on this 
+     * set using the {@link #setTrafficClass(int)} method on this
      * DatagramSocket.
      *
      * @return the traffic class or type-of-service already set
@@ -1074,8 +1152,8 @@ class DatagramSocket {
      * @see #setTrafficClass(int)
      */
     public synchronized int getTrafficClass() throws SocketException {
-	if (isClosed())
-	    throw new SocketException("Socket is closed");
+        if (isClosed())
+            throw new SocketException("Socket is closed");
         return ((Integer)(getImpl().getOption(SocketOptions.IP_TOS))).intValue();
     }
 
@@ -1092,14 +1170,14 @@ class DatagramSocket {
      * @spec JSR-51
      */
     public void close() {
-	synchronized(closeLock) {
-	    if (isClosed())
-		return;
-	    impl.close();
-	    closed = true;
-	}
+        synchronized(closeLock) {
+            if (isClosed())
+                return;
+            impl.close();
+            closed = true;
+        }
     }
- 
+
     /**
      * Returns whether the socket is closed or not.
      *
@@ -1107,9 +1185,9 @@ class DatagramSocket {
      * @since 1.4
      */
     public boolean isClosed() {
-	synchronized(closeLock) {
-	    return closed;
-	}
+        synchronized(closeLock) {
+            return closed;
+        }
     }
 
     /**
@@ -1127,14 +1205,14 @@ class DatagramSocket {
      * @spec JSR-51
      */
     public DatagramChannel getChannel() {
-	return null;
+        return null;
     }
 
     /**
-     * The factory for all datagram sockets.
+     * User defined factory for all datagram sockets.
      */
     static DatagramSocketImplFactory factory;
- 
+
     /**
      * Sets the datagram socket implementation factory for the
      * application. The factory can be specified only once.
@@ -1145,35 +1223,35 @@ class DatagramSocket {
      * <p>
      * Passing <code>null</code> to the method is a no-op unless the factory
      * was already set.
-     * 
+     *
      * <p>If there is a security manager, this method first calls
-     * the security manager's <code>checkSetFactory</code> method 
-     * to ensure the operation is allowed. 
+     * the security manager's <code>checkSetFactory</code> method
+     * to ensure the operation is allowed.
      * This could result in a SecurityException.
      *
      * @param      fac   the desired factory.
      * @exception  IOException  if an I/O error occurs when setting the
      *              datagram socket factory.
      * @exception  SocketException  if the factory is already defined.
-     * @exception  SecurityException  if a security manager exists and its  
-     *             <code>checkSetFactory</code> method doesn't allow the 
+     * @exception  SecurityException  if a security manager exists and its
+     *             <code>checkSetFactory</code> method doesn't allow the
      operation.
-     * @see        
+     * @see
      java.net.DatagramSocketImplFactory#createDatagramSocketImpl()
      * @see       SecurityManager#checkSetFactory
      * @since 1.3
      */
-    public static synchronized void 
+    public static synchronized void
     setDatagramSocketImplFactory(DatagramSocketImplFactory fac)
        throws IOException
     {
         if (factory != null) {
-	    throw new SocketException("factory already defined");
-	}
- 	SecurityManager security = System.getSecurityManager();
- 	if (security != null) {
-	    security.checkSetFactory();
- 	}
- 	factory = fac;
+            throw new SocketException("factory already defined");
+        }
+        SecurityManager security = System.getSecurityManager();
+        if (security != null) {
+            security.checkSetFactory();
+        }
+        factory = fac;
     }
 }
