@@ -1,8 +1,26 @@
 /*
- * @(#)OpenMBeanConstructorInfoSupport.java	3.28 06/03/15
- * 
- * Copyright 2006 Sun Microsystems, Inc. All rights reserved.
- * SUN PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ * Copyright (c) 2000, 2008, Oracle and/or its affiliates. All rights reserved.
+ * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
  */
 
 
@@ -12,6 +30,7 @@ package javax.management.openmbean;
 // java import
 //
 import java.util.Arrays;
+
 import javax.management.Descriptor;
 import javax.management.MBeanConstructorInfo;
 import javax.management.MBeanParameterInfo;
@@ -20,11 +39,8 @@ import javax.management.MBeanParameterInfo;
 /**
  * Describes a constructor of an Open MBean.
  *
- * @version     3.28  06/03/15
- * @author      Sun Microsystems, Inc.
  *
  * @since 1.5
- * @since.unbundled JMX 1.1
  */
 public class OpenMBeanConstructorInfoSupport
     extends MBeanConstructorInfo
@@ -62,10 +78,10 @@ public class OpenMBeanConstructorInfoSupport
      * @throws ArrayStoreException If {@code signature} is not an
      * array of instances of a subclass of {@code MBeanParameterInfo}.
      */
-    public OpenMBeanConstructorInfoSupport(String name, 
-					   String description, 
-					   OpenMBeanParameterInfo[] signature) {
-	this(name, description, signature, (Descriptor) null);
+    public OpenMBeanConstructorInfoSupport(String name,
+                                           String description,
+                                           OpenMBeanParameterInfo[] signature) {
+        this(name, description, signature, (Descriptor) null);
     }
 
     /**
@@ -96,38 +112,38 @@ public class OpenMBeanConstructorInfoSupport
      *
      * @since 1.6
      */
-    public OpenMBeanConstructorInfoSupport(String name, 
-					   String description, 
-					   OpenMBeanParameterInfo[] signature,
-					   Descriptor descriptor) {
-	super(name, 
-	      description, 
-	      arrayCopyCast(signature), // may throw an ArrayStoreException
-	      descriptor);
+    public OpenMBeanConstructorInfoSupport(String name,
+                                           String description,
+                                           OpenMBeanParameterInfo[] signature,
+                                           Descriptor descriptor) {
+        super(name,
+              description,
+              arrayCopyCast(signature), // may throw an ArrayStoreException
+              descriptor);
 
-	// check parameters that should not be null or empty
-	// (unfortunately it is not done in superclass :-( ! )
-	//
-	if (name == null || name.trim().equals("")) {
-	    throw new IllegalArgumentException("Argument name cannot be " +
-					       "null or empty");
-	}
-	if (description == null || description.trim().equals("")) {
-	    throw new IllegalArgumentException("Argument description cannot " +
-					       "be null or empty");
-	}
+        // check parameters that should not be null or empty
+        // (unfortunately it is not done in superclass :-( ! )
+        //
+        if (name == null || name.trim().equals("")) {
+            throw new IllegalArgumentException("Argument name cannot be " +
+                                               "null or empty");
+        }
+        if (description == null || description.trim().equals("")) {
+            throw new IllegalArgumentException("Argument description cannot " +
+                                               "be null or empty");
+        }
 
     }
 
     private static MBeanParameterInfo[]
-	    arrayCopyCast(OpenMBeanParameterInfo[] src) {
-	if (src == null)
-	    return null;
+            arrayCopyCast(OpenMBeanParameterInfo[] src) {
+        if (src == null)
+            return null;
 
-	MBeanParameterInfo[] dst = new MBeanParameterInfo[src.length];
-	System.arraycopy(src, 0, dst, 0, src.length);
-	// may throw an ArrayStoreException
-	return dst;
+        MBeanParameterInfo[] dst = new MBeanParameterInfo[src.length];
+        System.arraycopy(src, 0, dst, 0, src.length);
+        // may throw an ArrayStoreException
+        return dst;
     }
 
 
@@ -156,44 +172,44 @@ public class OpenMBeanConstructorInfoSupport
      *
      * @param obj the object to be compared for equality with this
      * {@code OpenMBeanConstructorInfoSupport} instance;
-     * 
+     *
      * @return {@code true} if the specified object is equal to this
      * {@code OpenMBeanConstructorInfoSupport} instance.
      */
-    public boolean equals(Object obj) { 
+    public boolean equals(Object obj) {
 
-	// if obj is null, return false
-	//
-	if (obj == null) {
-	    return false;
-	}
+        // if obj is null, return false
+        //
+        if (obj == null) {
+            return false;
+        }
 
-	// if obj is not a OpenMBeanConstructorInfo, return false
-	//
-	OpenMBeanConstructorInfo other;
-	try {
-	    other = (OpenMBeanConstructorInfo) obj;
-	} catch (ClassCastException e) {
-	    return false;
-	}
+        // if obj is not a OpenMBeanConstructorInfo, return false
+        //
+        OpenMBeanConstructorInfo other;
+        try {
+            other = (OpenMBeanConstructorInfo) obj;
+        } catch (ClassCastException e) {
+            return false;
+        }
 
-	// Now, really test for equality between this
-	// OpenMBeanConstructorInfo implementation and the other:
-	//
-	
-	// their Name should be equal
-	if ( ! this.getName().equals(other.getName()) ) {
-	    return false;
-	}
+        // Now, really test for equality between this
+        // OpenMBeanConstructorInfo implementation and the other:
+        //
 
-	// their Signatures should be equal
-	if ( ! Arrays.equals(this.getSignature(), other.getSignature()) ) {
-	    return false;
-	}
-       
-	// All tests for equality were successfull
-	//
-	return true;
+        // their Name should be equal
+        if ( ! this.getName().equals(other.getName()) ) {
+            return false;
+        }
+
+        // their Signatures should be equal
+        if ( ! Arrays.equals(this.getSignature(), other.getSignature()) ) {
+            return false;
+        }
+
+        // All tests for equality were successfull
+        //
+        return true;
     }
 
     /**
@@ -229,19 +245,19 @@ public class OpenMBeanConstructorInfoSupport
      */
     public int hashCode() {
 
-	// Calculate the hash code value if it has not yet been done
-	// (ie 1st call to hashCode())
-	//
-	if (myHashCode == null) {
-	    int value = 0;
-	    value += this.getName().hashCode();
-	    value += Arrays.asList(this.getSignature()).hashCode();
-	    myHashCode = new Integer(value);
-	}
-	
-	// return always the same hash code for this instance (immutable)
-	//
-	return myHashCode.intValue();
+        // Calculate the hash code value if it has not yet been done
+        // (ie 1st call to hashCode())
+        //
+        if (myHashCode == null) {
+            int value = 0;
+            value += this.getName().hashCode();
+            value += Arrays.asList(this.getSignature()).hashCode();
+            myHashCode = Integer.valueOf(value);
+        }
+
+        // return always the same hash code for this instance (immutable)
+        //
+        return myHashCode.intValue();
     }
 
     /**
@@ -258,32 +274,32 @@ public class OpenMBeanConstructorInfoSupport
      * immutable, the string representation for this instance is
      * calculated once, on the first call to {@code toString}, and
      * then the same value is returned for subsequent calls.</p>
-     * 
+     *
      * @return a string representation of this {@code
      * OpenMBeanConstructorInfoSupport} instance
      */
-    public String toString() { 
+    public String toString() {
 
-	// Calculate the string value if it has not yet been done (ie
-	// 1st call to toString())
-	//
-	if (myToString == null) {
-	    myToString = new StringBuffer()
-		.append(this.getClass().getName())
-		.append("(name=")
-		.append(this.getName())
-		.append(",signature=")
-		.append(Arrays.asList(this.getSignature()).toString())
-		.append(",descriptor=")
-		.append(this.getDescriptor())
-		.append(")")
-		.toString();
-	}
+        // Calculate the string value if it has not yet been done (ie
+        // 1st call to toString())
+        //
+        if (myToString == null) {
+            myToString = new StringBuilder()
+                .append(this.getClass().getName())
+                .append("(name=")
+                .append(this.getName())
+                .append(",signature=")
+                .append(Arrays.asList(this.getSignature()).toString())
+                .append(",descriptor=")
+                .append(this.getDescriptor())
+                .append(")")
+                .toString();
+        }
 
-	// return always the same string representation for this
-	// instance (immutable)
-	//
-	return myToString;
+        // return always the same string representation for this
+        // instance (immutable)
+        //
+        return myToString;
     }
 
 }
