@@ -1,8 +1,26 @@
 /*
- * @(#)DebugGraphicsInfo.java	1.14 05/11/17
+ * Copyright (c) 1997, 2008, Oracle and/or its affiliates. All rights reserved.
+ * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  *
- * Copyright 2006 Sun Microsystems, Inc. All rights reserved.
- * SUN PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
  */
 
 package javax.swing;
@@ -13,36 +31,35 @@ import java.util.*;
 /** Class used by DebugGraphics for maintaining information about how
   * to render graphics calls.
   *
-  * @version 1.14 11/17/05
   * @author Dave Karlton
   */
 class DebugGraphicsInfo {
     Color                flashColor = Color.red;
     int                  flashTime = 100;
     int                  flashCount = 2;
-    Hashtable            componentToDebug;
+    Hashtable<JComponent, Integer> componentToDebug;
     JFrame               debugFrame = null;
     java.io.PrintStream  stream = System.out;
 
     void setDebugOptions(JComponent component, int debug) {
-	if (debug == 0) {
-	    return;
-	}
-        if (componentToDebug == null) {
-            componentToDebug = new Hashtable();
+        if (debug == 0) {
+            return;
         }
-	if (debug > 0) {
-	    componentToDebug.put(component, new Integer(debug));
-	} else {
-	    componentToDebug.remove(component);
-	}
+        if (componentToDebug == null) {
+            componentToDebug = new Hashtable<JComponent, Integer>();
+        }
+        if (debug > 0) {
+            componentToDebug.put(component, Integer.valueOf(debug));
+        } else {
+            componentToDebug.remove(component);
+        }
     }
 
     int getDebugOptions(JComponent component) {
         if (componentToDebug == null) {
             return 0;
         } else {
-            Integer integer = (Integer)componentToDebug.get(component);
+            Integer integer = componentToDebug.get(component);
 
             return integer == null ? 0 : integer.intValue();
         }
@@ -52,5 +69,3 @@ class DebugGraphicsInfo {
         stream.println(string);
     }
 }
-
-
