@@ -1,12 +1,30 @@
 /*
- * @(#)JInternalFrame.java	1.161 09/08/07
+ * Copyright (c) 1997, 2008, Oracle and/or its affiliates. All rights reserved.
+ * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  *
- * Copyright 2006 Sun Microsystems, Inc. All rights reserved.
- * SUN PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
  */
 
 package javax.swing;
- 
+
 import java.awt.*;
 
 import java.beans.PropertyVetoException;
@@ -20,6 +38,7 @@ import javax.accessibility.*;
 
 import java.io.ObjectOutputStream;
 import java.io.IOException;
+import java.lang.StringBuilder;
 import java.beans.PropertyChangeListener;
 import sun.awt.AppContext;
 import sun.swing.SwingUtilities2;
@@ -53,9 +72,9 @@ import sun.swing.SwingUtilities2;
  * And the child will be added to the contentPane.
  * The content pane is actually managed by an instance of
  * <code>JRootPane</code>,
- * which also manages a layout pane, glass pane, and 
+ * which also manages a layout pane, glass pane, and
  * optional menu bar for the internal frame. Please see the
- * <code>JRootPane</code> 
+ * <code>JRootPane</code>
  * documentation for a complete description of these components.
  * Refer to {@link javax.swing.RootPaneContainer}
  * for details on adding, removing and setting the <code>LayoutManager</code>
@@ -82,16 +101,15 @@ import sun.swing.SwingUtilities2;
  * @see JRootPane
  * @see javax.swing.RootPaneContainer
  *
- * @version 1.161 08/07/09
  * @author David Kloba
  * @author Rich Schiavi
  * @beaninfo
  *      attribute: isContainer true
  *      attribute: containerDelegate getContentPane
- *      description: A frame container which is contained within 
+ *      description: A frame container which is contained within
  *                   another window.
  */
-public class JInternalFrame extends JComponent implements 
+public class JInternalFrame extends JComponent implements
         Accessible, WindowConstants,
         RootPaneContainer
 {
@@ -104,7 +122,7 @@ public class JInternalFrame extends JComponent implements
     /**
      * The <code>JRootPane</code> instance that manages the
      * content pane
-     * and optional menu bar for this internal frame, as well as the 
+     * and optional menu bar for this internal frame, as well as the
      * glass pane.
      *
      * @see JRootPane
@@ -130,23 +148,23 @@ public class JInternalFrame extends JComponent implements
     protected boolean isClosed;
     /** The frame can be expanded to the size of the desktop pane. */
     protected boolean maximizable;
-    /** 
+    /**
      * The frame has been expanded to its maximum size.
      * @see #maximizable
      */
-    protected boolean isMaximum;   
-    /** 
+    protected boolean isMaximum;
+    /**
      * The frame can "iconified" (shrunk down and displayed as
-     * an icon-image). 
+     * an icon-image).
      * @see JInternalFrame.JDesktopIcon
      * @see #setIconifiable
      */
     protected boolean iconable;
-    /** 
-     * The frame has been iconified. 
+    /**
+     * The frame has been iconified.
      * @see #isIcon()
      */
-    protected boolean isIcon;   
+    protected boolean isIcon;
     /** The frame's size can be changed. */
     protected boolean resizable;
     /** The frame is currently selected. */
@@ -155,7 +173,7 @@ public class JInternalFrame extends JComponent implements
     protected Icon frameIcon;
     /** The title displayed in this internal frame's title bar. */
     protected String  title;
-    /** 
+    /**
      * The icon that is displayed when this internal frame is iconified.
      * @see #iconable
      */
@@ -164,7 +182,7 @@ public class JInternalFrame extends JComponent implements
     private Cursor lastCursor;
 
     private boolean opened;
-  
+
     private Rectangle normalBounds = null;
 
     private int defaultCloseOperation = DISPOSE_ON_CLOSE;
@@ -204,15 +222,16 @@ public class JInternalFrame extends JComponent implements
     /** Constrained property name indicating that the internal frame is iconified. */
     public final static String IS_ICON_PROPERTY = "icon";
 
-    private static final Object PROPERTY_CHANGE_LISTENER_KEY = new Object(); // InternalFramePropertyChangeListener
+    private static final Object PROPERTY_CHANGE_LISTENER_KEY =
+        new StringBuilder("InternalFramePropertyChangeListener");
 
     private static void addPropertyChangeListenerIfNecessary() {
         if (AppContext.getAppContext().get(PROPERTY_CHANGE_LISTENER_KEY) ==
             null) {
-            PropertyChangeListener focusListener = 
+            PropertyChangeListener focusListener =
                 new FocusPropertyChangeListener();
 
-            AppContext.getAppContext().put(PROPERTY_CHANGE_LISTENER_KEY, 
+            AppContext.getAppContext().put(PROPERTY_CHANGE_LISTENER_KEY,
                 focusListener);
 
             KeyboardFocusManager.getCurrentKeyboardFocusManager().
@@ -220,7 +239,7 @@ public class JInternalFrame extends JComponent implements
         }
     }
 
-    private static class FocusPropertyChangeListener implements 
+    private static class FocusPropertyChangeListener implements
         PropertyChangeListener {
         public void propertyChange(PropertyChangeEvent e) {
             if (e.getPropertyName() == "permanentFocusOwner") {
@@ -242,7 +261,7 @@ public class JInternalFrame extends JComponent implements
         }
     }
 
-    /** 
+    /**
      * Creates a non-resizable, non-closable, non-maximizable,
      * non-iconifiable <code>JInternalFrame</code> with no title.
      */
@@ -250,7 +269,7 @@ public class JInternalFrame extends JComponent implements
         this("", false, false, false, false);
     }
 
-    /** 
+    /**
      * Creates a non-resizable, non-closable, non-maximizable,
      * non-iconifiable <code>JInternalFrame</code> with the specified title.
      * Note that passing in a <code>null</code> <code>title</code> results in
@@ -263,8 +282,8 @@ public class JInternalFrame extends JComponent implements
         this(title, false, false, false, false);
     }
 
-    /** 
-     * Creates a non-closable, non-maximizable, non-iconifiable 
+    /**
+     * Creates a non-closable, non-maximizable, non-iconifiable
      * <code>JInternalFrame</code> with the specified title
      * and resizability.
      *
@@ -275,7 +294,7 @@ public class JInternalFrame extends JComponent implements
         this(title, resizable, false, false, false);
     }
 
-    /** 
+    /**
      * Creates a non-maximizable, non-iconifiable <code>JInternalFrame</code>
      * with the specified title, resizability, and
      * closability.
@@ -288,7 +307,7 @@ public class JInternalFrame extends JComponent implements
         this(title, resizable, closable, false, false);
     }
 
-    /** 
+    /**
      * Creates a non-iconifiable <code>JInternalFrame</code>
      * with the specified title,
      * resizability, closability, and maximizability.
@@ -303,7 +322,7 @@ public class JInternalFrame extends JComponent implements
         this(title, resizable, closable, maximizable, false);
     }
 
-    /** 
+    /**
      * Creates a <code>JInternalFrame</code> with the specified title,
      * resizability, closability, maximizability, and iconifiability.
      * All <code>JInternalFrame</code> constructors use this one.
@@ -314,9 +333,9 @@ public class JInternalFrame extends JComponent implements
      * @param maximizable if <code>true</code>, the internal frame can be maximized
      * @param iconifiable if <code>true</code>, the internal frame can be iconified
      */
-    public JInternalFrame(String title, boolean resizable, boolean closable, 
+    public JInternalFrame(String title, boolean resizable, boolean closable,
                                 boolean maximizable, boolean iconifiable) {
-        
+
         setRootPane(createRootPane());
         setLayout(new BorderLayout());
         this.title = title;
@@ -324,17 +343,17 @@ public class JInternalFrame extends JComponent implements
         this.closable = closable;
         this.maximizable = maximizable;
         isMaximum = false;
-        this.iconable = iconifiable;                         
+        this.iconable = iconifiable;
         isIcon = false;
-	setVisible(false);
+        setVisible(false);
         setRootPaneCheckingEnabled(true);
         desktopIcon = new JDesktopIcon(this);
-	updateUI();
+        updateUI();
         sun.awt.SunToolkit.checkAndSetPolicy(this, true);
         addPropertyChangeListenerIfNecessary();
     }
 
-    /** 
+    /**
      * Called by the constructor to set up the <code>JRootPane</code>.
      * @return  a new <code>JRootPane</code>
      * @see JRootPane
@@ -347,7 +366,7 @@ public class JInternalFrame extends JComponent implements
      * Returns the look-and-feel object that renders this component.
      *
      * @return the <code>InternalFrameUI</code> object that renders
-     *		this component
+     *          this component
      */
     public InternalFrameUI getUI() {
         return (InternalFrameUI)ui;
@@ -360,7 +379,7 @@ public class JInternalFrame extends JComponent implements
      *        bound: true
      *       hidden: true
      *    attribute: visualUpdate true
-     *  description: The UI object that implements the Component's LookAndFeel. 
+     *  description: The UI object that implements the Component's LookAndFeel.
      */
     public void setUI(InternalFrameUI ui) {
         boolean checkingEnabled = isRootPaneCheckingEnabled();
@@ -375,8 +394,8 @@ public class JInternalFrame extends JComponent implements
 
     /**
      * Notification from the <code>UIManager</code> that the look and feel
-     * has changed. 
-     * Replaces the current UI object with the latest version from the 
+     * has changed.
+     * Replaces the current UI object with the latest version from the
      * <code>UIManager</code>.
      *
      * @see JComponent#updateUI
@@ -398,8 +417,8 @@ public class JInternalFrame extends JComponent implements
         invalidate();
         Component[] children = getComponents();
         if (children != null) {
-            for(int i = 0; i < children.length; i++) {
-                SwingUtilities.updateComponentTreeUI(children[i]);
+            for (Component child : children) {
+                SwingUtilities.updateComponentTreeUI(child);
             }
         }
     }
@@ -422,10 +441,10 @@ public class JInternalFrame extends JComponent implements
     }
 
     /**
-     * Returns whether calls to <code>add</code> and 
+     * Returns whether calls to <code>add</code> and
      * <code>setLayout</code> are forwarded to the <code>contentPane</code>.
      *
-     * @return true if <code>add</code> and <code>setLayout</code> 
+     * @return true if <code>add</code> and <code>setLayout</code>
      *         are fowarded; false otherwise
      *
      * @see #addImpl
@@ -438,9 +457,9 @@ public class JInternalFrame extends JComponent implements
     }
 
     /**
-     * Sets whether calls to <code>add</code> and 
+     * Sets whether calls to <code>add</code> and
      * <code>setLayout</code> are forwarded to the <code>contentPane</code>.
-     * 
+     *
      * @param enabled  true if <code>add</code> and <code>setLayout</code>
      *        are forwarded, false if they should operate directly on the
      *        <code>JInternalFrame</code>.
@@ -464,15 +483,15 @@ public class JInternalFrame extends JComponent implements
      * By default, children are added to the <code>contentPane</code> instead
      * of the frame, refer to {@link javax.swing.RootPaneContainer} for
      * details.
-     * 
+     *
      * @param comp the component to be enhanced
      * @param constraints the constraints to be respected
      * @param index the index
      * @exception IllegalArgumentException if <code>index</code> is invalid
      * @exception IllegalArgumentException if adding the container's parent
-     *			to itself
+     *                  to itself
      * @exception IllegalArgumentException if adding a window to a container
-     * 
+     *
      * @see #setRootPaneCheckingEnabled
      * @see javax.swing.RootPaneContainer
      */
@@ -485,7 +504,7 @@ public class JInternalFrame extends JComponent implements
         }
     }
 
-    /** 
+    /**
      * Removes the specified component from the container. If
      * <code>comp</code> is not a child of the <code>JInternalFrame</code>
      * this will forward the call to the <code>contentPane</code>.
@@ -496,11 +515,11 @@ public class JInternalFrame extends JComponent implements
      * @see javax.swing.RootPaneContainer
      */
     public void remove(Component comp) {
-	int oldCount = getComponentCount();
-	super.remove(comp);
-	if (oldCount == getComponentCount()) {
-	    getContentPane().remove(comp);
-	}
+        int oldCount = getComponentCount();
+        super.remove(comp);
+        if (oldCount == getComponentCount()) {
+            getContentPane().remove(comp);
+        }
     }
 
 
@@ -510,7 +529,7 @@ public class JInternalFrame extends JComponent implements
      * <code>contentPane</code>.
      * Refer to {@link javax.swing.RootPaneContainer} for
      * more information.
-     * 
+     *
      * @param manager the <code>LayoutManager</code>
      * @see #setRootPaneCheckingEnabled
      */
@@ -551,9 +570,9 @@ public class JInternalFrame extends JComponent implements
      * @see #setJMenuBar
      */
     public JMenuBar getJMenuBar() {
-	return getRootPane().getJMenuBar();
+        return getRootPane().getJMenuBar();
     }
-    
+
     /**
      * Sets the <code>menuBar</code> property for this <code>JInternalFrame</code>.
      *
@@ -566,7 +585,7 @@ public class JInternalFrame extends JComponent implements
     public void setMenuBar(JMenuBar m) {
         JMenuBar oldValue = getMenuBar();
         getRootPane().setJMenuBar(m);
-        firePropertyChange(MENU_BAR_PROPERTY, oldValue, m);     
+        firePropertyChange(MENU_BAR_PROPERTY, oldValue, m);
     }
 
     /**
@@ -577,13 +596,13 @@ public class JInternalFrame extends JComponent implements
      * @beaninfo
      *     bound: true
      *     preferred: true
-     *     description: The menu bar for accessing pulldown menus 
+     *     description: The menu bar for accessing pulldown menus
      *                  from this internal frame.
      */
     public void setJMenuBar(JMenuBar m){
         JMenuBar oldValue = getMenuBar();
         getRootPane().setJMenuBar(m);
-        firePropertyChange(MENU_BAR_PROPERTY, oldValue, m);     
+        firePropertyChange(MENU_BAR_PROPERTY, oldValue, m);
     }
 
     // implements javax.swing.RootPaneContainer
@@ -599,7 +618,7 @@ public class JInternalFrame extends JComponent implements
     /**
      * Sets this <code>JInternalFrame</code>'s <code>contentPane</code>
      * property.
-     * 
+     *
      * @param c  the content pane for this internal frame
      *
      * @exception java.awt.IllegalComponentStateException (a runtime
@@ -608,7 +627,7 @@ public class JInternalFrame extends JComponent implements
      * @beaninfo
      *     bound: true
      *     hidden: true
-     *     description: The client area of the internal frame where child 
+     *     description: The client area of the internal frame where child
      *                  components are normally inserted.
      */
     public void setContentPane(Container c) {
@@ -624,12 +643,12 @@ public class JInternalFrame extends JComponent implements
      * @see RootPaneContainer#setLayeredPane
      * @see RootPaneContainer#getLayeredPane
      */
-    public JLayeredPane getLayeredPane() { 
-        return getRootPane().getLayeredPane(); 
+    public JLayeredPane getLayeredPane() {
+        return getRootPane().getLayeredPane();
     }
 
     /**
-     * Sets this <code>JInternalFrame</code>'s 
+     * Sets this <code>JInternalFrame</code>'s
      * <code>layeredPane</code> property.
      *
      * @param layered the <code>JLayeredPane</code> for this internal frame
@@ -645,7 +664,7 @@ public class JInternalFrame extends JComponent implements
     public void setLayeredPane(JLayeredPane layered) {
         JLayeredPane oldValue = getLayeredPane();
         getRootPane().setLayeredPane(layered);
-        firePropertyChange(LAYERED_PANE_PROPERTY, oldValue, layered);   
+        firePropertyChange(LAYERED_PANE_PROPERTY, oldValue, layered);
     }
 
     /**
@@ -654,12 +673,12 @@ public class JInternalFrame extends JComponent implements
      * @return the glass pane
      * @see RootPaneContainer#setGlassPane
      */
-    public Component getGlassPane() { 
-        return getRootPane().getGlassPane(); 
+    public Component getGlassPane() {
+        return getRootPane().getGlassPane();
     }
 
     /**
-     * Sets this <code>JInternalFrame</code>'s 
+     * Sets this <code>JInternalFrame</code>'s
      * <code>glassPane</code> property.
      *
      * @param glass the glass pane for this internal frame
@@ -672,7 +691,7 @@ public class JInternalFrame extends JComponent implements
     public void setGlassPane(Component glass) {
         Component oldValue = getGlassPane();
         getRootPane().setGlassPane(glass);
-        firePropertyChange(GLASS_PANE_PROPERTY, oldValue, glass);       
+        firePropertyChange(GLASS_PANE_PROPERTY, oldValue, glass);
     }
 
     /**
@@ -681,8 +700,8 @@ public class JInternalFrame extends JComponent implements
      * @return the <code>rootPane</code> property
      * @see RootPaneContainer#getRootPane
      */
-    public JRootPane getRootPane() { 
-        return rootPane; 
+    public JRootPane getRootPane() {
+        return rootPane;
     }
 
 
@@ -713,59 +732,59 @@ public class JInternalFrame extends JComponent implements
                 setRootPaneCheckingEnabled(checkingEnabled);
             }
         }
-        firePropertyChange(ROOT_PANE_PROPERTY, oldValue, root); 
+        firePropertyChange(ROOT_PANE_PROPERTY, oldValue, root);
     }
 
-    /** 
+    /**
      * Sets whether this <code>JInternalFrame</code> can be closed by
      * some user action.
-     * @param b a boolean value, where <code>true</code> means this internal frame can be closed 
+     * @param b a boolean value, where <code>true</code> means this internal frame can be closed
      * @beaninfo
      *     preferred: true
      *           bound: true
      *     description: Indicates whether this internal frame can be closed.
      */
     public void setClosable(boolean b) {
-        Boolean oldValue = closable ? Boolean.TRUE : Boolean.FALSE; 
+        Boolean oldValue = closable ? Boolean.TRUE : Boolean.FALSE;
         Boolean newValue = b ? Boolean.TRUE : Boolean.FALSE;
         closable = b;
         firePropertyChange("closable", oldValue, newValue);
     }
- 
-    /** 
+
+    /**
      * Returns whether this <code>JInternalFrame</code> can be closed by
-     * some user action. 
-     * @return <code>true</code> if this internal frame can be closed 
+     * some user action.
+     * @return <code>true</code> if this internal frame can be closed
      */
     public boolean isClosable() {
         return closable;
     }
 
-    /** 
-     * Returns whether this <code>JInternalFrame</code> is currently closed. 
+    /**
+     * Returns whether this <code>JInternalFrame</code> is currently closed.
      * @return <code>true</code> if this internal frame is closed, <code>false</code> otherwise
      */
     public boolean isClosed() {
         return isClosed;
     }
 
-    /** 
+    /**
      * Closes this internal frame if the argument is <code>true</code>.
      * Do not invoke this method with a <code>false</code> argument;
-     * the result of invoking <code>setClosed(false)</code> 
+     * the result of invoking <code>setClosed(false)</code>
      * is unspecified.
      *
      * <p>
      *
      * If the internal frame is already closed,
      * this method does nothing and returns immediately.
-     * Otherwise, 
+     * Otherwise,
      * this method begins by firing
      * an <code>INTERNAL_FRAME_CLOSING</code> event.
      * Then this method sets the <code>closed</code> property to <code>true</code>
      * unless a listener vetoes the property change.
      * This method finishes by making the internal frame
-     * invisible and unselected, 
+     * invisible and unselected,
      * and then firing an <code>INTERNAL_FRAME_CLOSED</code> event.
      *
      * <p>
@@ -778,10 +797,10 @@ public class JInternalFrame extends JComponent implements
      * that previously contained the internal frame.
      *
      * @param b must be <code>true</code>
-     *          
-     * @exception PropertyVetoException when the attempt to set the 
+     *
+     * @exception PropertyVetoException when the attempt to set the
      *            property is vetoed by the <code>JInternalFrame</code>
-     * 
+     *
      * @see #isClosed()
      * @see #setDefaultCloseOperation
      * @see #dispose
@@ -797,99 +816,99 @@ public class JInternalFrame extends JComponent implements
             return;
         }
 
-        Boolean oldValue = isClosed ? Boolean.TRUE : Boolean.FALSE; 
+        Boolean oldValue = isClosed ? Boolean.TRUE : Boolean.FALSE;
         Boolean newValue = b ? Boolean.TRUE : Boolean.FALSE;
-	if (b) {
-	  fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_CLOSING);
-	}
+        if (b) {
+          fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_CLOSING);
+        }
         fireVetoableChange(IS_CLOSED_PROPERTY, oldValue, newValue);
         isClosed = b;
         if (isClosed) {
           setVisible(false);
         }
-	firePropertyChange(IS_CLOSED_PROPERTY, oldValue, newValue);
+        firePropertyChange(IS_CLOSED_PROPERTY, oldValue, newValue);
         if (isClosed) {
-	  dispose();
+          dispose();
         } else if (!opened) {
-	  /* this bogus -- we haven't defined what
-	     setClosed(false) means. */
-	  //	    fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_OPENED);
-	  //            opened = true;
+          /* this bogus -- we haven't defined what
+             setClosed(false) means. */
+          //        fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_OPENED);
+          //            opened = true;
         }
     }
 
-    /** 
+    /**
      * Sets whether the <code>JInternalFrame</code> can be resized by some
      * user action.
      *
-     * @param b  a boolean, where <code>true</code> means this internal frame can be resized 
+     * @param b  a boolean, where <code>true</code> means this internal frame can be resized
      * @beaninfo
      *     preferred: true
      *           bound: true
-     *     description: Determines whether this internal frame can be resized 
+     *     description: Determines whether this internal frame can be resized
      *                  by the user.
      */
     public void setResizable(boolean b) {
-        Boolean oldValue = resizable ? Boolean.TRUE : Boolean.FALSE; 
+        Boolean oldValue = resizable ? Boolean.TRUE : Boolean.FALSE;
         Boolean newValue = b ? Boolean.TRUE : Boolean.FALSE;
         resizable = b;
         firePropertyChange("resizable", oldValue, newValue);
     }
- 
-    /** 
+
+    /**
      * Returns whether the <code>JInternalFrame</code> can be resized
      * by some user action.
      *
      * @return <code>true</code> if this internal frame can be resized, <code>false</code> otherwise
-     */ 
+     */
     public boolean isResizable() {
         // don't allow resizing when maximized.
-        return isMaximum ? false : resizable; 
+        return isMaximum ? false : resizable;
     }
 
-    /** 
-     * Sets the <code>iconable</code> property, 
+    /**
+     * Sets the <code>iconable</code> property,
      * which must be <code>true</code>
-     * for the user to be able to 
+     * for the user to be able to
      * make the <code>JInternalFrame</code> an icon.
      * Some look and feels might not implement iconification;
      * they will ignore this property.
      *
-     * @param b  a boolean, where <code>true</code> means this internal frame can be iconified 
+     * @param b  a boolean, where <code>true</code> means this internal frame can be iconified
      * @beaninfo
      *     preferred: true
                bound: true
      *     description: Determines whether this internal frame can be iconified.
      */
     public void setIconifiable(boolean b) {
-        Boolean oldValue = iconable ? Boolean.TRUE : Boolean.FALSE; 
+        Boolean oldValue = iconable ? Boolean.TRUE : Boolean.FALSE;
         Boolean newValue = b ? Boolean.TRUE : Boolean.FALSE;
         iconable = b;
         firePropertyChange("iconable", oldValue, newValue);
     }
- 
-    /** 
+
+    /**
      * Gets the <code>iconable</code> property,
-     * which by default is <code>false</code>. 
+     * which by default is <code>false</code>.
      *
      * @return the value of the <code>iconable</code> property.
      *
      * @see #setIconifiable
-     */ 
+     */
     public boolean isIconifiable() {
-        return iconable; 
+        return iconable;
     }
 
-    /** 
+    /**
      * Returns whether the <code>JInternalFrame</code> is currently iconified.
      *
      * @return <code>true</code> if this internal frame is iconified
-     */ 
+     */
     public boolean isIcon() {
         return isIcon;
     }
 
-    /** 
+    /**
      * Iconifies or de-iconifies this internal frame,
      * if the look and feel supports iconification.
      * If the internal frame's state changes to iconified,
@@ -899,7 +918,7 @@ public class JInternalFrame extends JComponent implements
      *
      * @param b a boolean, where <code>true</code> means to iconify this internal frame and
      *          <code>false</code> means to de-iconify it
-     * @exception PropertyVetoException when the attempt to set the 
+     * @exception PropertyVetoException when the attempt to set the
      *            property is vetoed by the <code>JInternalFrame</code>
      *
      * @see InternalFrameEvent#INTERNAL_FRAME_ICONIFIED
@@ -915,26 +934,26 @@ public class JInternalFrame extends JComponent implements
             return;
         }
 
-	/* If an internal frame is being iconified before it has a
-	   parent, (e.g., client wants it to start iconic), create the
-	   parent if possible so that we can place the icon in its
-	   proper place on the desktop. I am not sure the call to
-	   validate() is necessary, since we are not going to display
-	   this frame yet */
+        /* If an internal frame is being iconified before it has a
+           parent, (e.g., client wants it to start iconic), create the
+           parent if possible so that we can place the icon in its
+           proper place on the desktop. I am not sure the call to
+           validate() is necessary, since we are not going to display
+           this frame yet */
         firePropertyChange("ancestor", null, getParent());
 
-        Boolean oldValue = isIcon ? Boolean.TRUE : Boolean.FALSE; 
+        Boolean oldValue = isIcon ? Boolean.TRUE : Boolean.FALSE;
         Boolean newValue = b ? Boolean.TRUE : Boolean.FALSE;
         fireVetoableChange(IS_ICON_PROPERTY, oldValue, newValue);
         isIcon = b;
         firePropertyChange(IS_ICON_PROPERTY, oldValue, newValue);
-	if (b)
-	  fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_ICONIFIED);
-	else
-	  fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_DEICONIFIED);
+        if (b)
+          fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_ICONIFIED);
+        else
+          fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_DEICONIFIED);
     }
 
-    /** 
+    /**
      * Sets the <code>maximizable</code> property,
      * which determines whether the <code>JInternalFrame</code>
      * can be maximized by
@@ -949,23 +968,23 @@ public class JInternalFrame extends JComponent implements
      *     description: Determines whether this internal frame can be maximized.
      */
     public void setMaximizable(boolean b) {
-        Boolean oldValue = maximizable ? Boolean.TRUE : Boolean.FALSE; 
+        Boolean oldValue = maximizable ? Boolean.TRUE : Boolean.FALSE;
         Boolean newValue = b ? Boolean.TRUE : Boolean.FALSE;
         maximizable = b;
         firePropertyChange("maximizable", oldValue, newValue);
     }
- 
-    /** 
+
+    /**
      * Gets the value of the <code>maximizable</code> property.
      *
      * @return the value of the <code>maximizable</code> property
      * @see #setMaximizable
      */
     public boolean isMaximizable() {
-        return maximizable; 
+        return maximizable;
     }
 
-    /** 
+    /**
      * Returns whether the <code>JInternalFrame</code> is currently maximized.
      *
      * @return <code>true</code> if this internal frame is maximized, <code>false</code> otherwise
@@ -983,7 +1002,7 @@ public class JInternalFrame extends JComponent implements
      *
      * @param b  a boolean, where <code>true</code> maximizes this internal frame and <code>false</code>
      *           restores it
-     * @exception PropertyVetoException when the attempt to set the 
+     * @exception PropertyVetoException when the attempt to set the
      *            property is vetoed by the <code>JInternalFrame</code>
      * @beaninfo
      *     bound: true
@@ -998,9 +1017,9 @@ public class JInternalFrame extends JComponent implements
         Boolean oldValue = isMaximum ? Boolean.TRUE : Boolean.FALSE;
         Boolean newValue = b ? Boolean.TRUE : Boolean.FALSE;
         fireVetoableChange(IS_MAXIMUM_PROPERTY, oldValue, newValue);
-	/* setting isMaximum above the event firing means that
-	   property listeners that, for some reason, test it will
-	   get it wrong... See, for example, getNormalBounds() */
+        /* setting isMaximum above the event firing means that
+           property listeners that, for some reason, test it will
+           get it wrong... See, for example, getNormalBounds() */
         isMaximum = b;
         firePropertyChange(IS_MAXIMUM_PROPERTY, oldValue, newValue);
     }
@@ -1015,7 +1034,7 @@ public class JInternalFrame extends JComponent implements
         return title;
     }
 
-    /** 
+    /**
      * Sets the <code>JInternalFrame</code> title. <code>title</code>
      * may have a <code>null</code> value.
      * @see #getTitle
@@ -1037,7 +1056,7 @@ public class JInternalFrame extends JComponent implements
      * if it's showing.
      * A <code>JInternalFrame</code> normally draws its title bar
      * differently if it is
-     * the selected frame, which indicates to the user that this 
+     * the selected frame, which indicates to the user that this
      * internal frame has the focus.
      * When this method changes the state of the internal frame
      * from deselected to selected, it fires an
@@ -1049,7 +1068,7 @@ public class JInternalFrame extends JComponent implements
      * @param selected  a boolean, where <code>true</code> means this internal frame
      *                  should become selected (currently active)
      *                  and <code>false</code> means it should become deselected
-     * @exception PropertyVetoException when the attempt to set the 
+     * @exception PropertyVetoException when the attempt to set the
      *            property is vetoed by the <code>JInternalFrame</code>
      *
      * @see #isShowing
@@ -1059,7 +1078,7 @@ public class JInternalFrame extends JComponent implements
      * @beaninfo
      *     constrained: true
      *           bound: true
-     *     description: Indicates whether this internal frame is currently 
+     *     description: Indicates whether this internal frame is currently
      *                  the active frame.
      */
     public void setSelected(boolean selected) throws PropertyVetoException {
@@ -1072,7 +1091,7 @@ public class JInternalFrame extends JComponent implements
         }
         // The internal frame or the desktop icon must be showing to allow
         // selection.  We may deselect even if neither is showing.
-        if ((isSelected == selected) || (selected && 
+        if ((isSelected == selected) || (selected &&
             (isIcon ? !desktopIcon.isShowing() : !isShowing()))) {
             return;
         }
@@ -1081,27 +1100,27 @@ public class JInternalFrame extends JComponent implements
         Boolean newValue = selected ? Boolean.TRUE : Boolean.FALSE;
         fireVetoableChange(IS_SELECTED_PROPERTY, oldValue, newValue);
 
-	/* We don't want to leave focus in the previously selected
-	   frame, so we have to set it to *something* in case it
-	   doesn't get set in some other way (as if a user clicked on
-	   a component that doesn't request focus).  If this call is
-	   happening because the user clicked on a component that will
-	   want focus, then it will get transfered there later.
+        /* We don't want to leave focus in the previously selected
+           frame, so we have to set it to *something* in case it
+           doesn't get set in some other way (as if a user clicked on
+           a component that doesn't request focus).  If this call is
+           happening because the user clicked on a component that will
+           want focus, then it will get transfered there later.
 
-	   We test for parent.isShowing() above, because AWT throws a
-	   NPE if you try to request focus on a lightweight before its
-	   parent has been made visible */
+           We test for parent.isShowing() above, because AWT throws a
+           NPE if you try to request focus on a lightweight before its
+           parent has been made visible */
 
-	if (selected) {
-	    restoreSubcomponentFocus();
-	} 
+        if (selected) {
+            restoreSubcomponentFocus();
+        }
 
         isSelected = selected;
         firePropertyChange(IS_SELECTED_PROPERTY, oldValue, newValue);
-	if (isSelected)
-	  fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_ACTIVATED);
-	else
-	  fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_DEACTIVATED);	  
+        if (isSelected)
+          fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_ACTIVATED);
+        else
+          fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_DEACTIVATED);
         repaint();
     }
 
@@ -1114,12 +1133,12 @@ public class JInternalFrame extends JComponent implements
      */
     public boolean isSelected() {
         return isSelected;
-    } 
+    }
 
-    /** 
+    /**
      * Sets an image to be displayed in the titlebar of this internal frame (usually
      * in the top-left corner).
-     * This image is not the <code>desktopIcon</code> object, which 
+     * This image is not the <code>desktopIcon</code> object, which
      * is the image displayed in the <code>JDesktop</code> when
      * this internal frame is iconified.
      *
@@ -1138,13 +1157,13 @@ public class JInternalFrame extends JComponent implements
   public void setFrameIcon(Icon icon) {
         Icon oldIcon = frameIcon;
         frameIcon = icon;
-        firePropertyChange(FRAME_ICON_PROPERTY, oldIcon, icon);  
+        firePropertyChange(FRAME_ICON_PROPERTY, oldIcon, icon);
     }
 
-    /** 
+    /**
      * Returns the image displayed in the title bar of this internal frame (usually
      * in the top-left corner).
-     * 
+     *
      * @return the <code>Icon</code> displayed in the title bar
      * @see #setFrameIcon
      */
@@ -1153,7 +1172,7 @@ public class JInternalFrame extends JComponent implements
     }
 
     /**
-      * Convenience method that moves this component to position 0 if its 
+      * Convenience method that moves this component to position 0 if its
       * parent is a <code>JLayeredPane</code>.
       */
     public void moveToFront() {
@@ -1169,7 +1188,7 @@ public class JInternalFrame extends JComponent implements
     }
 
     /**
-      * Convenience method that moves this component to position -1 if its 
+      * Convenience method that moves this component to position -1 if its
       * parent is a <code>JLayeredPane</code>.
       */
     public void moveToBack() {
@@ -1207,7 +1226,7 @@ public class JInternalFrame extends JComponent implements
             return;
         }
         int type = cursor.getType();
-        if (!(type == Cursor.SW_RESIZE_CURSOR  || 
+        if (!(type == Cursor.SW_RESIZE_CURSOR  ||
               type == Cursor.SE_RESIZE_CURSOR  ||
               type == Cursor.NW_RESIZE_CURSOR  ||
               type == Cursor.NE_RESIZE_CURSOR  ||
@@ -1220,11 +1239,11 @@ public class JInternalFrame extends JComponent implements
         super.setCursor(cursor);
     }
 
-    /** 
+    /**
      * Convenience method for setting the layer attribute of this component.
      *
      * @param layer  an <code>Integer</code> object specifying this
-     *		frame's desktop layer
+     *          frame's desktop layer
      * @see JLayeredPane
      * @beaninfo
      *     expert: true
@@ -1244,7 +1263,7 @@ public class JInternalFrame extends JComponent implements
         }
     }
 
-    /** 
+    /**
      * Convenience method for setting the layer attribute of this component.
      * The method <code>setLayer(Integer)</code> should be used for
      * layer values predefined in <code>JLayeredPane</code>.
@@ -1262,14 +1281,14 @@ public class JInternalFrame extends JComponent implements
      *     description: Specifies what desktop layer is used.
      */
     public void setLayer(int layer) {
-      this.setLayer(new Integer(layer));
+      this.setLayer(Integer.valueOf(layer));
     }
 
     /**
      * Convenience method for getting the layer attribute of this component.
      *
      * @return  an <code>Integer</code> object specifying this
-     *		frame's desktop layer
+     *          frame's desktop layer
      * @see JLayeredPane
       */
     public int getLayer() {
@@ -1277,21 +1296,21 @@ public class JInternalFrame extends JComponent implements
     }
 
     /**
-      * Convenience method that searches the ancestor hierarchy for a 
+      * Convenience method that searches the ancestor hierarchy for a
       * <code>JDesktop</code> instance. If <code>JInternalFrame</code>
       * finds none, the <code>desktopIcon</code> tree is searched.
       *
       * @return the <code>JDesktopPane</code> this internal frame belongs to,
-      *		or <code>null</code> if none is found
+      *         or <code>null</code> if none is found
       */
-    public JDesktopPane getDesktopPane() { 
+    public JDesktopPane getDesktopPane() {
         Container p;
 
         // Search upward for desktop
         p = getParent();
         while(p != null && !(p instanceof JDesktopPane))
             p = p.getParent();
-        
+
         if(p == null) {
            // search its icon parent for desktop
            p = getDesktopIcon().getParent();
@@ -1299,7 +1318,7 @@ public class JInternalFrame extends JComponent implements
                 p = p.getParent();
         }
 
-        return (JDesktopPane)p; 
+        return (JDesktopPane)p;
     }
 
     /**
@@ -1312,21 +1331,21 @@ public class JInternalFrame extends JComponent implements
      *           bound: true
      *     description: The icon shown when this internal frame is minimized.
      */
-    public void setDesktopIcon(JDesktopIcon d) { 
-	JDesktopIcon oldValue = getDesktopIcon();
-	desktopIcon = d; 
-	firePropertyChange("desktopIcon", oldValue, d);
+    public void setDesktopIcon(JDesktopIcon d) {
+        JDesktopIcon oldValue = getDesktopIcon();
+        desktopIcon = d;
+        firePropertyChange("desktopIcon", oldValue, d);
     }
 
-    /** 
+    /**
      * Returns the <code>JDesktopIcon</code> used when this
      * <code>JInternalFrame</code> is iconified.
      *
      * @return the <code>JDesktopIcon</code> displayed on the desktop
      * @see #setDesktopIcon
      */
-    public JDesktopIcon getDesktopIcon() { 
-        return desktopIcon; 
+    public JDesktopIcon getDesktopIcon() {
+        return desktopIcon;
     }
 
     /**
@@ -1335,21 +1354,21 @@ public class JInternalFrame extends JComponent implements
      * <code>JInternalFrame</code> would be restored to.
      *
      * @return a <code>Rectangle</code> containing the bounds of this
-     *		frame when in the normal state
+     *          frame when in the normal state
      * @since 1.3
      */
     public Rectangle getNormalBounds() {
 
       /* we used to test (!isMaximum) here, but since this
-	 method is used by the property listener for the
-	 IS_MAXIMUM_PROPERTY, it ended up getting the wrong
-	 answer... Since normalBounds get set to null when the
-	 frame is restored, this should work better */
+         method is used by the property listener for the
+         IS_MAXIMUM_PROPERTY, it ended up getting the wrong
+         answer... Since normalBounds get set to null when the
+         frame is restored, this should work better */
 
       if (normalBounds != null) {
-	return normalBounds;
+        return normalBounds;
       } else {
-	return getBounds();
+        return getBounds();
       }
     }
 
@@ -1362,7 +1381,7 @@ public class JInternalFrame extends JComponent implements
      * @since 1.3
      */
     public void setNormalBounds(Rectangle r) {
-	normalBounds = r;
+        normalBounds = r;
     }
 
     /**
@@ -1379,7 +1398,7 @@ public class JInternalFrame extends JComponent implements
         }
         return null;
     }
-  
+
     /**
      * Returns the child component of this <code>JInternalFrame</code>
      * that will receive the
@@ -1422,7 +1441,7 @@ public class JInternalFrame extends JComponent implements
         }
         return getContentPane();
     }
- 
+
     /**
      * Requests the internal frame to restore focus to the
      * last subcomponent that had focus. This is used by the UI when
@@ -1436,19 +1455,22 @@ public class JInternalFrame extends JComponent implements
             SwingUtilities2.compositeRequestFocus(getDesktopIcon());
         }
         else {
-            // FocusPropertyChangeListener will eventually update
-            // lastFocusOwner. As focus requests are asynchronous
-            // lastFocusOwner may be accessed before it has been correctly
-            // updated. To avoid any problems, lastFocusOwner is immediately
-            // set, assuming the request will succeed.
-            lastFocusOwner = getMostRecentFocusOwner();
-            if (lastFocusOwner == null) {
-                // Make sure focus is restored somewhere, so that
-                // we don't leave a focused component in another frame while
-                // this frame is selected.
-                lastFocusOwner = getContentPane();
+            Component component = KeyboardFocusManager.getCurrentKeyboardFocusManager().getPermanentFocusOwner();
+            if ((component == null) || !SwingUtilities.isDescendingFrom(component, this)) {
+                // FocusPropertyChangeListener will eventually update
+                // lastFocusOwner. As focus requests are asynchronous
+                // lastFocusOwner may be accessed before it has been correctly
+                // updated. To avoid any problems, lastFocusOwner is immediately
+                // set, assuming the request will succeed.
+                setLastFocusOwner(getMostRecentFocusOwner());
+                if (lastFocusOwner == null) {
+                    // Make sure focus is restored somewhere, so that
+                    // we don't leave a focused component in another frame while
+                    // this frame is selected.
+                    setLastFocusOwner(getContentPane());
+                }
+                lastFocusOwner.requestFocus();
             }
-            lastFocusOwner.requestFocus();
         }
     }
 
@@ -1483,7 +1505,7 @@ public class JInternalFrame extends JComponent implements
      * frame events from this internal frame.
      *
      * @param l the internal frame listener
-     */ 
+     */
     public void addInternalFrameListener(InternalFrameListener l) {  // remind: sync ??
       listenerList.add(InternalFrameListener.class, l);
       // remind: needed?
@@ -1495,25 +1517,24 @@ public class JInternalFrame extends JComponent implements
      * receives internal frame events from this internal frame.
      *
      * @param l the internal frame listener
-     */ 
+     */
     public void removeInternalFrameListener(InternalFrameListener l) {  // remind: sync??
       listenerList.remove(InternalFrameListener.class, l);
     }
 
     /**
      * Returns an array of all the <code>InternalFrameListener</code>s added
-     * to this <code>JInternalFrame</code> with 
+     * to this <code>JInternalFrame</code> with
      * <code>addInternalFrameListener</code>.
      *
      * @return all of the <code>InternalFrameListener</code>s added or an empty
      *         array if no listeners have been added
      * @since 1.4
-     * 
+     *
      * @see #addInternalFrameListener
      */
     public InternalFrameListener[] getInternalFrameListeners() {
-        return (InternalFrameListener[])listenerList.getListeners(
-                InternalFrameListener.class);
+        return listenerList.getListeners(InternalFrameListener.class);
     }
 
     // remind: name ok? all one method ok? need to be synchronized?
@@ -1532,55 +1553,55 @@ public class JInternalFrame extends JComponent implements
      * </ul>
      * If the event type is not one of the above, nothing happens.
      */
-    protected void fireInternalFrameEvent(int id){  
+    protected void fireInternalFrameEvent(int id){
       Object[] listeners = listenerList.getListenerList();
       InternalFrameEvent e = null;
       for (int i = listeners.length -2; i >=0; i -= 2){
-	if (listeners[i] == InternalFrameListener.class){
-	  if (e == null){ 
-	    e = new InternalFrameEvent(this, id);
-	    //	    System.out.println("InternalFrameEvent: " + e.paramString());
-	  }
-	  switch(e.getID()) {
-	  case InternalFrameEvent.INTERNAL_FRAME_OPENED:
-	    ((InternalFrameListener)listeners[i+1]).internalFrameOpened(e);
-	    break;
-	  case InternalFrameEvent.INTERNAL_FRAME_CLOSING:
-	    ((InternalFrameListener)listeners[i+1]).internalFrameClosing(e);
-	    break;
-	  case InternalFrameEvent.INTERNAL_FRAME_CLOSED:
-	    ((InternalFrameListener)listeners[i+1]).internalFrameClosed(e);
-	    break;
-	  case InternalFrameEvent.INTERNAL_FRAME_ICONIFIED:
-	    ((InternalFrameListener)listeners[i+1]).internalFrameIconified(e);
-	    break;
-	  case InternalFrameEvent.INTERNAL_FRAME_DEICONIFIED:
-	    ((InternalFrameListener)listeners[i+1]).internalFrameDeiconified(e);
-	    break;
-	  case InternalFrameEvent.INTERNAL_FRAME_ACTIVATED:
-	    ((InternalFrameListener)listeners[i+1]).internalFrameActivated(e);
-	    break;
-	  case InternalFrameEvent.INTERNAL_FRAME_DEACTIVATED:
-	    ((InternalFrameListener)listeners[i+1]).internalFrameDeactivated(e);
-	    break;
-	  default:
-	    break;
-	  }
-	}
+        if (listeners[i] == InternalFrameListener.class){
+          if (e == null){
+            e = new InternalFrameEvent(this, id);
+            //      System.out.println("InternalFrameEvent: " + e.paramString());
+          }
+          switch(e.getID()) {
+          case InternalFrameEvent.INTERNAL_FRAME_OPENED:
+            ((InternalFrameListener)listeners[i+1]).internalFrameOpened(e);
+            break;
+          case InternalFrameEvent.INTERNAL_FRAME_CLOSING:
+            ((InternalFrameListener)listeners[i+1]).internalFrameClosing(e);
+            break;
+          case InternalFrameEvent.INTERNAL_FRAME_CLOSED:
+            ((InternalFrameListener)listeners[i+1]).internalFrameClosed(e);
+            break;
+          case InternalFrameEvent.INTERNAL_FRAME_ICONIFIED:
+            ((InternalFrameListener)listeners[i+1]).internalFrameIconified(e);
+            break;
+          case InternalFrameEvent.INTERNAL_FRAME_DEICONIFIED:
+            ((InternalFrameListener)listeners[i+1]).internalFrameDeiconified(e);
+            break;
+          case InternalFrameEvent.INTERNAL_FRAME_ACTIVATED:
+            ((InternalFrameListener)listeners[i+1]).internalFrameActivated(e);
+            break;
+          case InternalFrameEvent.INTERNAL_FRAME_DEACTIVATED:
+            ((InternalFrameListener)listeners[i+1]).internalFrameDeactivated(e);
+            break;
+          default:
+            break;
+          }
+        }
       }
       /* we could do it off the event, but at the moment, that's not how
-	 I'm implementing it */
+         I'm implementing it */
       //      if (id == InternalFrameEvent.INTERNAL_FRAME_CLOSING) {
-      //	  doDefaultCloseAction();
+      //          doDefaultCloseAction();
       //      }
     }
 
     /**
-     * Fires an 
+     * Fires an
      * <code>INTERNAL_FRAME_CLOSING</code> event
      * and then performs the action specified by
      * the internal frame's default close operation.
-     * This method is typically invoked by the 
+     * This method is typically invoked by the
      * look-and-feel-implemented action handler
      * for the internal frame's close button.
      *
@@ -1592,29 +1613,29 @@ public class JInternalFrame extends JComponent implements
         fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_CLOSING);
         switch(defaultCloseOperation) {
           case DO_NOTHING_ON_CLOSE:
-	    break;
+            break;
           case HIDE_ON_CLOSE:
             setVisible(false);
-	    if (isSelected())
+            if (isSelected())
                 try {
                     setSelected(false);
                 } catch (PropertyVetoException pve) {}
-	      
-	    /* should this activate the next frame? that's really
-	       desktopmanager's policy... */
+
+            /* should this activate the next frame? that's really
+               desktopmanager's policy... */
             break;
           case DISPOSE_ON_CLOSE:
               try {
-		fireVetoableChange(IS_CLOSED_PROPERTY, Boolean.FALSE,
-				   Boolean.TRUE);
-		isClosed = true;
+                fireVetoableChange(IS_CLOSED_PROPERTY, Boolean.FALSE,
+                                   Boolean.TRUE);
+                isClosed = true;
                 setVisible(false);
-		firePropertyChange(IS_CLOSED_PROPERTY, Boolean.FALSE,
-				   Boolean.TRUE);
-		dispose();
-	      } catch (PropertyVetoException pve) {}
+                firePropertyChange(IS_CLOSED_PROPERTY, Boolean.FALSE,
+                                   Boolean.TRUE);
+                dispose();
+              } catch (PropertyVetoException pve) {}
               break;
-          default: 
+          default:
               break;
         }
     }
@@ -1625,7 +1646,7 @@ public class JInternalFrame extends JComponent implements
      * The possible choices are:
      * <p>
      * <dl>
-     * <dt><code>DO_NOTHING_ON_CLOSE</code> 
+     * <dt><code>DO_NOTHING_ON_CLOSE</code>
      * <dd> Do nothing.
      *      This requires the program to handle the operation
      *      in the <code>windowClosing</code> method
@@ -1641,7 +1662,7 @@ public class JInternalFrame extends JComponent implements
      * the internal frame fires
      * an <code>INTERNAL_FRAME_CLOSING</code> event.
      *
-     * @param operation one of the following constants defined in 
+     * @param operation one of the following constants defined in
      *                  <code>javax.swing.WindowConstants</code>
      *                  (an interface implemented by
      *                  <code>JInternalFrame</code>):
@@ -1696,13 +1717,13 @@ public class JInternalFrame extends JComponent implements
     /**
      * If the internal frame is not visible,
      * brings the internal frame to the front,
-     * makes it visible, 
+     * makes it visible,
      * and attempts to select it.
      * The first time the internal frame is made visible,
      * this method also fires an <code>INTERNAL_FRAME_OPENED</code> event.
      * This method does nothing if the internal frame is already visible.
-     * Invoking this method 
-     * has the same result as invoking 
+     * Invoking this method
+     * has the same result as invoking
      * <code>setVisible(true)</code>.
      *
      * @see #moveToFront
@@ -1711,28 +1732,28 @@ public class JInternalFrame extends JComponent implements
      * @see #setVisible
      */
     public void show() {
-	// bug 4312922
-	if (isVisible()) {
-	    //match the behavior of setVisible(true): do nothing
-	    return;
-	}
+        // bug 4312922
+        if (isVisible()) {
+            //match the behavior of setVisible(true): do nothing
+            return;
+        }
 
-	// bug 4149505
-	if (!opened) {
-	  fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_OPENED);
-	  opened = true;
-	}
-	
+        // bug 4149505
+        if (!opened) {
+          fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_OPENED);
+          opened = true;
+        }
+
         /* icon default visibility is false; set it to true so that it shows
            up when user iconifies frame */
         getDesktopIcon().setVisible(true);
 
-	toFront();
-	super.show();
+        toFront();
+        super.show();
 
-	if (isIcon) {
-	    return;
-	}
+        if (isIcon) {
+            return;
+        }
 
         if (!isSelected()) {
             try {
@@ -1757,7 +1778,7 @@ public class JInternalFrame extends JComponent implements
      * The results of invoking this method are similar to
      * <code>setClosed(true)</code>,
      * but <code>dispose</code> always succeeds in closing
-     * the internal frame and does not fire 
+     * the internal frame and does not fire
      * an <code>INTERNAL_FRAME_CLOSING</code> event.
      *
      * @see javax.swing.event.InternalFrameEvent#INTERNAL_FRAME_CLOSED
@@ -1775,10 +1796,10 @@ public class JInternalFrame extends JComponent implements
             } catch (PropertyVetoException pve) {}
         }
         if (!isClosed) {
-	  firePropertyChange(IS_CLOSED_PROPERTY, Boolean.FALSE, Boolean.TRUE);
-	  isClosed = true;
-	}
-	fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_CLOSED);
+          firePropertyChange(IS_CLOSED_PROPERTY, Boolean.FALSE, Boolean.TRUE);
+          isClosed = true;
+        }
+        fireInternalFrameEvent(InternalFrameEvent.INTERNAL_FRAME_CLOSED);
     }
 
     /**
@@ -1797,7 +1818,7 @@ public class JInternalFrame extends JComponent implements
     /**
      * Sends this internal frame to the back.
      * Places this internal frame at the bottom of the stacking order
-     * and makes the corresponding adjustment to other visible 
+     * and makes the corresponding adjustment to other visible
      * internal frames.
      *
      * @see       java.awt.Window#toBack
@@ -1809,7 +1830,7 @@ public class JInternalFrame extends JComponent implements
 
     /**
      * Does nothing because <code>JInternalFrame</code>s must always be roots of a focus
-     * traversal cycle. 
+     * traversal cycle.
      *
      * @param focusCycleRoot this value is ignored
      * @see #isFocusCycleRoot
@@ -1848,7 +1869,7 @@ public class JInternalFrame extends JComponent implements
     }
 
     /**
-     * Gets the warning string that is displayed with this internal frame. 
+     * Gets the warning string that is displayed with this internal frame.
      * Since an internal frame is always secure (since it's fully
      * contained within a window that might need a warning string)
      * this method always returns <code>null</code>.
@@ -1859,9 +1880,9 @@ public class JInternalFrame extends JComponent implements
         return null;
     }
 
-    /** 
+    /**
      * See <code>readObject</code> and <code>writeObject</code>
-     * in <code>JComponent</code> for more 
+     * in <code>JComponent</code> for more
      * information about serialization in Swing.
      */
     private void writeObject(ObjectOutputStream s) throws IOException {
@@ -1881,51 +1902,51 @@ public class JInternalFrame extends JComponent implements
         }
     }
 
-    /* Called from the JComponent's EnableSerializationFocusListener to 
+    /* Called from the JComponent's EnableSerializationFocusListener to
      * do any Swing-specific pre-serialization configuration.
      */
     void compWriteObjectNotify() {
       // need to disable rootpane checking for InternalFrame: 4172083
       boolean old = isRootPaneCheckingEnabled();
       try {
-	setRootPaneCheckingEnabled(false);
+        setRootPaneCheckingEnabled(false);
         super.compWriteObjectNotify();
-      } 
+      }
       finally {
-	setRootPaneCheckingEnabled(old);
+        setRootPaneCheckingEnabled(old);
       }
     }
 
     /**
      * Returns a string representation of this <code>JInternalFrame</code>.
-     * This method 
-     * is intended to be used only for debugging purposes, and the 
-     * content and format of the returned string may vary between      
-     * implementations. The returned string may be empty but may not 
+     * This method
+     * is intended to be used only for debugging purposes, and the
+     * content and format of the returned string may vary between
+     * implementations. The returned string may be empty but may not
      * be <code>null</code>.
-     * 
+     *
      * @return  a string representation of this <code>JInternalFrame</code>
      */
     protected String paramString() {
-	String rootPaneString = (rootPane != null ?
-				 rootPane.toString() : "");
-	String rootPaneCheckingEnabledString = (rootPaneCheckingEnabled ?
-						"true" : "false");
-	String closableString = (closable ? "true" : "false");
-	String isClosedString = (isClosed ? "true" : "false");
-	String maximizableString = (maximizable ? "true" : "false");
-	String isMaximumString = (isMaximum ? "true" : "false");
-	String iconableString = (iconable ? "true" : "false");
-	String isIconString = (isIcon ? "true" : "false");
-	String resizableString = (resizable ? "true" : "false");
-	String isSelectedString = (isSelected ? "true" : "false");
-	String frameIconString = (frameIcon != null ?
-				  frameIcon.toString() : "");
-	String titleString = (title != null ?
-			      title : "");
-	String desktopIconString = (desktopIcon != null ?
-				    desktopIcon.toString() : "");
-	String openedString = (opened ? "true" : "false");
+        String rootPaneString = (rootPane != null ?
+                                 rootPane.toString() : "");
+        String rootPaneCheckingEnabledString = (rootPaneCheckingEnabled ?
+                                                "true" : "false");
+        String closableString = (closable ? "true" : "false");
+        String isClosedString = (isClosed ? "true" : "false");
+        String maximizableString = (maximizable ? "true" : "false");
+        String isMaximumString = (isMaximum ? "true" : "false");
+        String iconableString = (iconable ? "true" : "false");
+        String isIconString = (isIcon ? "true" : "false");
+        String resizableString = (resizable ? "true" : "false");
+        String isSelectedString = (isSelected ? "true" : "false");
+        String frameIconString = (frameIcon != null ?
+                                  frameIcon.toString() : "");
+        String titleString = (title != null ?
+                              title : "");
+        String desktopIconString = (desktopIcon != null ?
+                                    desktopIcon.toString() : "");
+        String openedString = (opened ? "true" : "false");
         String defaultCloseOperationString;
         if (defaultCloseOperation == HIDE_ON_CLOSE) {
             defaultCloseOperationString = "HIDE_ON_CLOSE";
@@ -1935,22 +1956,22 @@ public class JInternalFrame extends JComponent implements
             defaultCloseOperationString = "DO_NOTHING_ON_CLOSE";
         } else defaultCloseOperationString = "";
 
-	return super.paramString() +
-	",closable=" + closableString +
-	",defaultCloseOperation=" + defaultCloseOperationString +
-	",desktopIcon=" + desktopIconString +
-	",frameIcon=" + frameIconString +
-	",iconable=" + iconableString +
-	",isClosed=" + isClosedString +
-	",isIcon=" + isIconString +
-	",isMaximum=" + isMaximumString +
-	",isSelected=" + isSelectedString +
-	",maximizable=" + maximizableString +
-	",opened=" + openedString +
-	",resizable=" + resizableString +
-	",rootPane=" + rootPaneString +
-	",rootPaneCheckingEnabled=" + rootPaneCheckingEnabledString +
-	",title=" + titleString;
+        return super.paramString() +
+        ",closable=" + closableString +
+        ",defaultCloseOperation=" + defaultCloseOperationString +
+        ",desktopIcon=" + desktopIconString +
+        ",frameIcon=" + frameIconString +
+        ",iconable=" + iconableString +
+        ",isClosed=" + isClosedString +
+        ",isIcon=" + isIconString +
+        ",isMaximum=" + isMaximumString +
+        ",isSelected=" + isSelectedString +
+        ",maximizable=" + maximizableString +
+        ",opened=" + openedString +
+        ",resizable=" + resizableString +
+        ",rootPane=" + rootPaneString +
+        ",rootPaneCheckingEnabled=" + rootPaneCheckingEnabledString +
+        ",title=" + titleString;
     }
 
     // ======= begin optimized frame dragging defence code ==============
@@ -1958,13 +1979,13 @@ public class JInternalFrame extends JComponent implements
     boolean isDragging = false;
     boolean danger = false;
 
-    /** 
-     * Overridden to allow optimized painting when the 
-     * internal frame is being dragged. 
+    /**
+     * Overridden to allow optimized painting when the
+     * internal frame is being dragged.
      */
     protected void paintComponent(Graphics g) {
       if (isDragging) {
-	//	   System.out.println("ouch");
+        //         System.out.println("ouch");
          danger = true;
       }
 
@@ -1979,13 +2000,13 @@ public class JInternalFrame extends JComponent implements
 
     /**
      * Gets the <code>AccessibleContext</code> associated with this
-     * <code>JInternalFrame</code>. 
+     * <code>JInternalFrame</code>.
      * For internal frames, the <code>AccessibleContext</code>
-     * takes the form of an 
-     * <code>AccessibleJInternalFrame</code> object. 
+     * takes the form of an
+     * <code>AccessibleJInternalFrame</code> object.
      * A new <code>AccessibleJInternalFrame</code> instance is created if necessary.
      *
-     * @return an <code>AccessibleJInternalFrame</code> that serves as the 
+     * @return an <code>AccessibleJInternalFrame</code> that serves as the
      *         <code>AccessibleContext</code> of this
      *         <code>JInternalFrame</code>
      * @see AccessibleJInternalFrame
@@ -1998,9 +2019,9 @@ public class JInternalFrame extends JComponent implements
     }
 
     /**
-     * This class implements accessibility support for the 
-     * <code>JInternalFrame</code> class.  It provides an implementation of the 
-     * Java Accessibility API appropriate to internal frame user-interface 
+     * This class implements accessibility support for the
+     * <code>JInternalFrame</code> class.  It provides an implementation of the
+     * Java Accessibility API appropriate to internal frame user-interface
      * elements.
      * <p>
      * <strong>Warning:</strong>
@@ -2012,13 +2033,13 @@ public class JInternalFrame extends JComponent implements
      * has been added to the <code>java.beans</code> package.
      * Please see {@link java.beans.XMLEncoder}.
      */
-    protected class AccessibleJInternalFrame extends AccessibleJComponent 
+    protected class AccessibleJInternalFrame extends AccessibleJComponent
         implements AccessibleValue {
 
         /**
          * Get the accessible name of this object.
          *
-         * @return the localized name of the object -- can be <code>null</code> if this 
+         * @return the localized name of the object -- can be <code>null</code> if this
          * object does not have a name
          * @see #setAccessibleName
          */
@@ -2037,7 +2058,7 @@ public class JInternalFrame extends JComponent implements
         /**
          * Get the role of this object.
          *
-         * @return an instance of AccessibleRole describing the role of the 
+         * @return an instance of AccessibleRole describing the role of the
          * object
          * @see AccessibleRole
          */
@@ -2047,11 +2068,11 @@ public class JInternalFrame extends JComponent implements
 
         /**
          * Gets the AccessibleValue associated with this object.  In the
-         * implementation of the Java Accessibility API for this class, 
-	 * returns this object, which is responsible for implementing the
+         * implementation of the Java Accessibility API for this class,
+         * returns this object, which is responsible for implementing the
          * <code>AccessibleValue</code> interface on behalf of itself.
-	 * 
-	 * @return this object
+         *
+         * @return this object
          */
         public AccessibleValue getAccessibleValue() {
             return this;
@@ -2069,7 +2090,7 @@ public class JInternalFrame extends JComponent implements
          * have a value
          */
         public Number getCurrentAccessibleValue() {
-            return new Integer(getLayer());
+            return Integer.valueOf(getLayer());
         }
 
         /**
@@ -2078,12 +2099,12 @@ public class JInternalFrame extends JComponent implements
          * @return <code>true</code> if the value was set
          */
         public boolean setCurrentAccessibleValue(Number n) {
-	    // TIGER - 4422535 
-	    if (n == null) {
-		return false;
-	    }
-	    setLayer(new Integer(n.intValue()));
-	    return true;
+            // TIGER - 4422535
+            if (n == null) {
+                return false;
+            }
+            setLayer(new Integer(n.intValue()));
+            return true;
         }
 
         /**
@@ -2093,7 +2114,7 @@ public class JInternalFrame extends JComponent implements
          * have a minimum value
          */
         public Number getMinimumAccessibleValue() {
-            return new Integer(Integer.MIN_VALUE);
+            return Integer.MIN_VALUE;
         }
 
         /**
@@ -2103,7 +2124,7 @@ public class JInternalFrame extends JComponent implements
          * have a maximum value
          */
         public Number getMaximumAccessibleValue() {
-            return new Integer(Integer.MAX_VALUE);
+            return Integer.MAX_VALUE;
         }
 
     } // AccessibleJInternalFrame
@@ -2137,10 +2158,10 @@ public class JInternalFrame extends JComponent implements
          * Creates an icon for an internal frame.
          *
          * @param f  the <code>JInternalFrame</code>
-         *		for which the icon is created
+         *              for which the icon is created
          */
         public JDesktopIcon(JInternalFrame f) {
-	    setVisible(false);
+            setVisible(false);
             setInternalFrame(f);
             updateUI();
         }
@@ -2149,7 +2170,7 @@ public class JInternalFrame extends JComponent implements
          * Returns the look-and-feel object that renders this component.
          *
          * @return the <code>DesktopIconUI</code> object that renders
-         *		this component
+         *              this component
          */
         public DesktopIconUI getUI() {
             return (DesktopIconUI)ui;
@@ -2165,23 +2186,23 @@ public class JInternalFrame extends JComponent implements
             super.setUI(ui);
         }
 
-        /** 
+        /**
          * Returns the <code>JInternalFrame</code> that this
-         * <code>DesktopIcon</code> is associated with. 
+         * <code>DesktopIcon</code> is associated with.
          *
          * @return the <code>JInternalFrame</code> with which this icon
-         *		is associated
+         *              is associated
          */
         public JInternalFrame getInternalFrame() {
             return internalFrame;
         }
 
-        /** 
+        /**
          * Sets the <code>JInternalFrame</code> with which this
          * <code>DesktopIcon</code> is associated.
          *
          * @param f  the <code>JInternalFrame</code> with which this icon
-         *		is associated
+         *              is associated
          */
         public void setInternalFrame(JInternalFrame f) {
             internalFrame = f;
@@ -2189,10 +2210,10 @@ public class JInternalFrame extends JComponent implements
 
         /**
          * Convenience method to ask the icon for the <code>Desktop</code>
-  	 * object it belongs to.
+         * object it belongs to.
          *
          * @return the <code>JDesktopPane</code> that contains this
-    	 *	     icon's internal frame, or <code>null</code> if none found
+         *           icon's internal frame, or <code>null</code> if none found
          */
         public JDesktopPane getDesktopPane() {
             if(getInternalFrame() != null)
@@ -2202,8 +2223,8 @@ public class JInternalFrame extends JComponent implements
 
         /**
          * Notification from the <code>UIManager</code> that the look and feel
-         * has changed. 
-         * Replaces the current UI object with the latest version from the 
+         * has changed.
+         * Replaces the current UI object with the latest version from the
          * <code>UIManager</code>.
          *
          * @see JComponent#updateUI
@@ -2215,7 +2236,7 @@ public class JInternalFrame extends JComponent implements
 
             Dimension r = getPreferredSize();
             setSize(r.width, r.height);
-            
+
 
             if (internalFrame != null && internalFrame.getUI() != null) {  // don't do this if UI not created yet
                 SwingUtilities.updateComponentTreeUI(internalFrame);
@@ -2231,19 +2252,19 @@ public class JInternalFrame extends JComponent implements
 
             Dimension r = getPreferredSize();
             setSize(r.width, r.height);
-            
+
             invalidate();
             Component[] children = getComponents();
             if (children != null) {
-                for(int i = 0; i < children.length; i++) {
-                    SwingUtilities.updateComponentTreeUI(children[i]);
+                for (Component child : children) {
+                    SwingUtilities.updateComponentTreeUI(child);
                 }
             }
         }
 
         /**
          * Returns the name of the look-and-feel
-	 * class that renders this component.
+         * class that renders this component.
          *
          * @return the string "DesktopIconUI"
          * @see JComponent#getUIClassID
@@ -2252,10 +2273,10 @@ public class JInternalFrame extends JComponent implements
         public String getUIClassID() {
             return "DesktopIconUI";
         }
-	////////////////
-	// Serialization support
-	////////////////
-	private void writeObject(ObjectOutputStream s) throws IOException {
+        ////////////////
+        // Serialization support
+        ////////////////
+        private void writeObject(ObjectOutputStream s) throws IOException {
             s.defaultWriteObject();
             if (getUIClassID().equals("DesktopIconUI")) {
                 byte count = JComponent.getWriteObjCounter(this);
@@ -2264,19 +2285,19 @@ public class JInternalFrame extends JComponent implements
                     ui.installUI(this);
                 }
             }
-	}
+        }
 
        /////////////////
        // Accessibility support
        ////////////////
 
         /**
-         * Gets the AccessibleContext associated with this JDesktopIcon. 
-         * For desktop icons, the AccessibleContext takes the form of an 
-         * AccessibleJDesktopIcon. 
+         * Gets the AccessibleContext associated with this JDesktopIcon.
+         * For desktop icons, the AccessibleContext takes the form of an
+         * AccessibleJDesktopIcon.
          * A new AccessibleJDesktopIcon instance is created if necessary.
          *
-         * @return an AccessibleJDesktopIcon that serves as the 
+         * @return an AccessibleJDesktopIcon that serves as the
          *         AccessibleContext of this JDesktopIcon
          */
         public AccessibleContext getAccessibleContext() {
@@ -2287,10 +2308,10 @@ public class JInternalFrame extends JComponent implements
         }
 
         /**
-         * This class implements accessibility support for the 
+         * This class implements accessibility support for the
          * <code>JInternalFrame.JDesktopIcon</code> class.  It provides an
-	 * implementation of the Java Accessibility API appropriate to 
-	 * desktop icon user-interface elements.
+         * implementation of the Java Accessibility API appropriate to
+         * desktop icon user-interface elements.
          * <p>
          * <strong>Warning:</strong>
          * Serialized objects of this class will not be compatible with
@@ -2301,13 +2322,13 @@ public class JInternalFrame extends JComponent implements
          * has been added to the <code>java.beans</code> package.
          * Please see {@link java.beans.XMLEncoder}.
          */
-        protected class AccessibleJDesktopIcon extends AccessibleJComponent 
+        protected class AccessibleJDesktopIcon extends AccessibleJComponent
             implements AccessibleValue {
 
             /**
              * Gets the role of this object.
              *
-             * @return an instance of AccessibleRole describing the role of the 
+             * @return an instance of AccessibleRole describing the role of the
              * object
              * @see AccessibleRole
              */
@@ -2317,11 +2338,11 @@ public class JInternalFrame extends JComponent implements
 
             /**
              * Gets the AccessibleValue associated with this object.  In the
-             * implementation of the Java Accessibility API for this class, 
-	     * returns this object, which is responsible for implementing the
+             * implementation of the Java Accessibility API for this class,
+             * returns this object, which is responsible for implementing the
              * <code>AccessibleValue</code> interface on behalf of itself.
-	     * 
-	     * @return this object
+             *
+             * @return this object
              */
             public AccessibleValue getAccessibleValue() {
                 return this;
@@ -2353,10 +2374,10 @@ public class JInternalFrame extends JComponent implements
              * @return <code>true</code> if the value was set
              */
             public boolean setCurrentAccessibleValue(Number n) {
-		// TIGER - 4422535 
-		if (n == null) {
-		    return false;
-		}
+                // TIGER - 4422535
+                if (n == null) {
+                    return false;
+                }
                 AccessibleContext a = JDesktopIcon.this.getInternalFrame().getAccessibleContext();
                 AccessibleValue v = a.getAccessibleValue();
                 if (v != null) {
