@@ -1,8 +1,26 @@
 /*
- * @(#)JOptionPane.java	1.100 06/08/08
+ * Copyright (c) 1997, 2011, Oracle and/or its affiliates. All rights reserved.
+ * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  *
- * Copyright 2006 Sun Microsystems, Inc. All rights reserved.
- * SUN PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
  */
 
 package javax.swing;
@@ -38,6 +56,7 @@ import javax.swing.plaf.OptionPaneUI;
 import javax.swing.event.InternalFrameEvent;
 import javax.swing.event.InternalFrameAdapter;
 import javax.accessibility.*;
+import static javax.swing.ClientPropertyKey.PopupFactory_FORCE_HEAVYWEIGHT_POPUP;
 
 /**
  * <code>JOptionPane</code> makes it easy to pop up a standard dialog box that
@@ -51,7 +70,7 @@ import javax.accessibility.*;
  *
  * While the <code>JOptionPane</code>
  * class may appear complex because of the large number of methods, almost
- * all uses of this class are one-line calls to one of the static 
+ * all uses of this class are one-line calls to one of the static
  * <code>showXxxDialog</code> methods shown below:
  * <blockquote>
  *
@@ -83,10 +102,10 @@ import javax.accessibility.*;
  * Each of these methods also comes in a <code>showInternalXXX</code>
  * flavor, which uses an internal frame to hold the dialog box (see
  * {@link JInternalFrame}).
- * Multiple convenience methods have also been defined -- overloaded 
+ * Multiple convenience methods have also been defined -- overloaded
  * versions of the basic methods that use different parameter lists.
  * <p>
- * All dialogs are modal. Each <code>showXxxDialog</code> method blocks 
+ * All dialogs are modal. Each <code>showXxxDialog</code> method blocks
  * the caller until the user's interaction is complete.
  * <p>
  *
@@ -130,17 +149,17 @@ import javax.accessibility.*;
  * A descriptive message to be placed in the dialog box.
  * In the most common usage, message is just a <code>String</code> or
  * <code>String</code> constant.
- * However, the type of this parameter is actually <code>Object</code>. Its 
+ * However, the type of this parameter is actually <code>Object</code>. Its
  * interpretation depends on its type:
  * <dl compact>
  * <dt>Object[]<dd>An array of objects is interpreted as a series of
  *                 messages (one per object) arranged in a vertical stack.
  *                 The interpretation is recursive -- each object in the
- *                 array is interpreted according to its type. 
+ *                 array is interpreted according to its type.
  * <dt>Component<dd>The <code>Component</code> is displayed in the dialog.
  * <dt>Icon<dd>The <code>Icon</code> is wrapped in a <code>JLabel</code>
- *		 and displayed in the dialog.
- * <dt>others<dd>The object is converted to a <code>String</code> by calling 
+ *               and displayed in the dialog.
+ * <dt>others<dd>The object is converted to a <code>String</code> by calling
  *               its <code>toString</code> method. The result is wrapped in a
  *               <code>JLabel</code> and displayed.
  * </dl>
@@ -165,9 +184,9 @@ import javax.accessibility.*;
  * You aren't limited to this set of option buttons.  You can provide any
  * buttons you want using the options parameter.
  * <dt>options<dd>A more detailed description of the set of option buttons
- * that will appear at the bottom of the dialog box. 
+ * that will appear at the bottom of the dialog box.
  * The usual value for the options parameter is an array of
- * <code>String</code>s. But 
+ * <code>String</code>s. But
  * the parameter type is an array of <code>Objects</code>.
  * A button is created for each object depending on its type:
  * <dl compact>
@@ -193,7 +212,7 @@ import javax.accessibility.*;
  *  can also be listened
  * to, to determine when the user has input or selected a value.
  * <p>
- * When one of the <code>showXxxDialog</code> methods returns an integer, 
+ * When one of the <code>showXxxDialog</code> methods returns an integer,
  * the possible values are:
  * <ul>
  * <li><code>YES_OPTION</code>
@@ -290,7 +309,6 @@ import javax.accessibility.*;
  *      attribute: isContainer true
  *    description: A component which implements standard dialog box controls.
  *
- * @version 1.100 08/08/06
  * @author James Gosling
  * @author Scott Violet
  */
@@ -311,7 +329,7 @@ public class JOptionPane extends JComponent implements Accessible
     // Option types
     //
 
-    /** 
+    /**
      * Type meaning Look and Feel should not supply any options -- only
      * use the options from the <code>JOptionPane</code>.
      */
@@ -409,9 +427,9 @@ public class JOptionPane extends JComponent implements Accessible
 
 
     /**
-     * Shows a question-message dialog requesting input from the user. The 
-     * dialog uses the default frame, which usually means it is centered on 
-     * the screen. 
+     * Shows a question-message dialog requesting input from the user. The
+     * dialog uses the default frame, which usually means it is centered on
+     * the screen.
      *
      * @param message the <code>Object</code> to display
      * @exception HeadlessException if
@@ -419,16 +437,16 @@ public class JOptionPane extends JComponent implements Accessible
      *   <code>true</code>
      * @see java.awt.GraphicsEnvironment#isHeadless
      */
-    public static String showInputDialog(Object message) 
-        throws HeadlessException { 
+    public static String showInputDialog(Object message)
+        throws HeadlessException {
         return showInputDialog(null, message);
     }
 
     /**
      * Shows a question-message dialog requesting input from the user, with
-     * the input value initialized to <code>initialSelectionValue</code>. The 
-     * dialog uses the default frame, which usually means it is centered on 
-     * the screen. 
+     * the input value initialized to <code>initialSelectionValue</code>. The
+     * dialog uses the default frame, which usually means it is centered on
+     * the screen.
      *
      * @param message the <code>Object</code> to display
      * @param initialSelectionValue the value used to initialize the input
@@ -443,10 +461,10 @@ public class JOptionPane extends JComponent implements Accessible
      * Shows a question-message dialog requesting input from the user
      * parented to <code>parentComponent</code>.
      * The dialog is displayed on top of the <code>Component</code>'s
-     * frame, and is usually positioned below the <code>Component</code>. 
+     * frame, and is usually positioned below the <code>Component</code>.
      *
      * @param parentComponent  the parent <code>Component</code> for the
-     *		dialog
+     *          dialog
      * @param message  the <code>Object</code> to display
      * @exception HeadlessException if
      *    <code>GraphicsEnvironment.isHeadless</code> returns
@@ -454,7 +472,7 @@ public class JOptionPane extends JComponent implements Accessible
      * @see java.awt.GraphicsEnvironment#isHeadless
      */
     public static String showInputDialog(Component parentComponent,
-        Object message) throws HeadlessException { 
+        Object message) throws HeadlessException {
         return showInputDialog(parentComponent, message, UIManager.getString(
             "OptionPane.inputDialogTitle", parentComponent), QUESTION_MESSAGE);
     }
@@ -464,17 +482,17 @@ public class JOptionPane extends JComponent implements Accessible
      * parented to <code>parentComponent</code>. The input value will be
      * initialized to <code>initialSelectionValue</code>.
      * The dialog is displayed on top of the <code>Component</code>'s
-     * frame, and is usually positioned below the <code>Component</code>.  
+     * frame, and is usually positioned below the <code>Component</code>.
      *
      * @param parentComponent  the parent <code>Component</code> for the
-     *		dialog
+     *          dialog
      * @param message the <code>Object</code> to display
      * @param initialSelectionValue the value used to initialize the input
      *                 field
      * @since 1.4
      */
-    public static String showInputDialog(Component parentComponent, Object message, 
-					 Object initialSelectionValue) {
+    public static String showInputDialog(Component parentComponent, Object message,
+                                         Object initialSelectionValue) {
         return (String)showInputDialog(parentComponent, message,
                       UIManager.getString("OptionPane.inputDialogTitle",
                       parentComponent), QUESTION_MESSAGE, null, null,
@@ -487,23 +505,23 @@ public class JOptionPane extends JComponent implements Accessible
      * <code>title</code> and message type <code>messageType</code>.
      *
      * @param parentComponent  the parent <code>Component</code> for the
-     *			dialog
+     *                  dialog
      * @param message  the <code>Object</code> to display
      * @param title    the <code>String</code> to display in the dialog
-     *			title bar
+     *                  title bar
      * @param messageType the type of message that is to be displayed:
-     *                 	<code>ERROR_MESSAGE</code>,
-     *			<code>INFORMATION_MESSAGE</code>,
-     *			<code>WARNING_MESSAGE</code>,
-     *                 	<code>QUESTION_MESSAGE</code>,
-     *			or <code>PLAIN_MESSAGE</code>
+     *                  <code>ERROR_MESSAGE</code>,
+     *                  <code>INFORMATION_MESSAGE</code>,
+     *                  <code>WARNING_MESSAGE</code>,
+     *                  <code>QUESTION_MESSAGE</code>,
+     *                  or <code>PLAIN_MESSAGE</code>
      * @exception HeadlessException if
      *   <code>GraphicsEnvironment.isHeadless</code> returns
      *   <code>true</code>
      * @see java.awt.GraphicsEnvironment#isHeadless
      */
     public static String showInputDialog(Component parentComponent,
-        Object message, String title, int messageType) 
+        Object message, String title, int messageType)
         throws HeadlessException {
         return (String)showInputDialog(parentComponent, message, title,
                                        messageType, null, null, null);
@@ -515,7 +533,7 @@ public class JOptionPane extends JComponent implements Accessible
      * be specified. The user will able to choose from
      * <code>selectionValues</code>, where <code>null</code> implies the
      * user can input
-     * whatever they wish, usually by means of a <code>JTextField</code>. 
+     * whatever they wish, usually by means of a <code>JTextField</code>.
      * <code>initialSelectionValue</code> is the initial value to prompt
      * the user with. It is up to the UI to decide how best to represent
      * the <code>selectionValues</code>, but usually a
@@ -523,23 +541,23 @@ public class JOptionPane extends JComponent implements Accessible
      * <code>JTextField</code> will be used.
      *
      * @param parentComponent  the parent <code>Component</code> for the
-     *			dialog
+     *                  dialog
      * @param message  the <code>Object</code> to display
      * @param title    the <code>String</code> to display in the
-     *			dialog title bar
+     *                  dialog title bar
      * @param messageType the type of message to be displayed:
      *                  <code>ERROR_MESSAGE</code>,
-     *			<code>INFORMATION_MESSAGE</code>,
-     *			<code>WARNING_MESSAGE</code>,
+     *                  <code>INFORMATION_MESSAGE</code>,
+     *                  <code>WARNING_MESSAGE</code>,
      *                  <code>QUESTION_MESSAGE</code>,
-     *			or <code>PLAIN_MESSAGE</code>
+     *                  or <code>PLAIN_MESSAGE</code>
      * @param icon     the <code>Icon</code> image to display
      * @param selectionValues an array of <code>Object</code>s that
-     *			gives the possible selections
+     *                  gives the possible selections
      * @param initialSelectionValue the value used to initialize the input
      *                 field
      * @return user's input, or <code>null</code> meaning the user
-     *			canceled the input
+     *                  canceled the input
      * @exception HeadlessException if
      *   <code>GraphicsEnvironment.isHeadless</code> returns
      *   <code>true</code>
@@ -547,7 +565,7 @@ public class JOptionPane extends JComponent implements Accessible
      */
     public static Object showInputDialog(Component parentComponent,
         Object message, String title, int messageType, Icon icon,
-        Object[] selectionValues, Object initialSelectionValue) 
+        Object[] selectionValues, Object initialSelectionValue)
         throws HeadlessException {
         JOptionPane    pane = new JOptionPane(message, messageType,
                                               OK_CANCEL_OPTION, icon,
@@ -557,7 +575,7 @@ public class JOptionPane extends JComponent implements Accessible
         pane.setSelectionValues(selectionValues);
         pane.setInitialSelectionValue(initialSelectionValue);
         pane.setComponentOrientation(((parentComponent == null) ?
-	    getRootFrame() : parentComponent).getComponentOrientation());
+            getRootFrame() : parentComponent).getComponentOrientation());
 
         int style = styleFromMessageType(messageType);
         JDialog dialog = pane.createDialog(parentComponent, title, style);
@@ -578,9 +596,9 @@ public class JOptionPane extends JComponent implements Accessible
      * Brings up an information-message dialog titled "Message".
      *
      * @param parentComponent determines the <code>Frame</code> in
-     *		which the dialog is displayed; if <code>null</code>,
-     *		or if the <code>parentComponent</code> has no
-     *		<code>Frame</code>, a default <code>Frame</code> is used
+     *          which the dialog is displayed; if <code>null</code>,
+     *          or if the <code>parentComponent</code> has no
+     *          <code>Frame</code>, a default <code>Frame</code> is used
      * @param message   the <code>Object</code> to display
      * @exception HeadlessException if
      *   <code>GraphicsEnvironment.isHeadless</code> returns
@@ -599,24 +617,24 @@ public class JOptionPane extends JComponent implements Accessible
      * icon determined by the <code>messageType</code> parameter.
      *
      * @param parentComponent determines the <code>Frame</code>
-     *		in which the dialog is displayed; if <code>null</code>,
-     *		or if the <code>parentComponent</code> has no
-     *		<code>Frame</code>, a default <code>Frame</code> is used
+     *          in which the dialog is displayed; if <code>null</code>,
+     *          or if the <code>parentComponent</code> has no
+     *          <code>Frame</code>, a default <code>Frame</code> is used
      * @param message   the <code>Object</code> to display
      * @param title     the title string for the dialog
      * @param messageType the type of message to be displayed:
      *                  <code>ERROR_MESSAGE</code>,
-     *			<code>INFORMATION_MESSAGE</code>,
-     *			<code>WARNING_MESSAGE</code>,
+     *                  <code>INFORMATION_MESSAGE</code>,
+     *                  <code>WARNING_MESSAGE</code>,
      *                  <code>QUESTION_MESSAGE</code>,
-     *			or <code>PLAIN_MESSAGE</code>
+     *                  or <code>PLAIN_MESSAGE</code>
      * @exception HeadlessException if
      *   <code>GraphicsEnvironment.isHeadless</code> returns
      *   <code>true</code>
      * @see java.awt.GraphicsEnvironment#isHeadless
      */
     public static void showMessageDialog(Component parentComponent,
-        Object message, String title, int messageType) 
+        Object message, String title, int messageType)
         throws HeadlessException {
         showMessageDialog(parentComponent, message, title, messageType, null);
     }
@@ -625,18 +643,18 @@ public class JOptionPane extends JComponent implements Accessible
      * Brings up a dialog displaying a message, specifying all parameters.
      *
      * @param parentComponent determines the <code>Frame</code> in which the
-     *			dialog is displayed; if <code>null</code>,
-     *			or if the <code>parentComponent</code> has no
-     *			<code>Frame</code>, a 
+     *                  dialog is displayed; if <code>null</code>,
+     *                  or if the <code>parentComponent</code> has no
+     *                  <code>Frame</code>, a
      *                  default <code>Frame</code> is used
      * @param message   the <code>Object</code> to display
      * @param title     the title string for the dialog
      * @param messageType the type of message to be displayed:
      *                  <code>ERROR_MESSAGE</code>,
-     *			<code>INFORMATION_MESSAGE</code>,
-     *			<code>WARNING_MESSAGE</code>,
+     *                  <code>INFORMATION_MESSAGE</code>,
+     *                  <code>WARNING_MESSAGE</code>,
      *                  <code>QUESTION_MESSAGE</code>,
-     *			or <code>PLAIN_MESSAGE</code>
+     *                  or <code>PLAIN_MESSAGE</code>
      * @param icon      an icon to display in the dialog that helps the user
      *                  identify the kind of message that is being displayed
      * @exception HeadlessException if
@@ -645,9 +663,9 @@ public class JOptionPane extends JComponent implements Accessible
      * @see java.awt.GraphicsEnvironment#isHeadless
      */
     public static void showMessageDialog(Component parentComponent,
-        Object message, String title, int messageType, Icon icon) 
+        Object message, String title, int messageType, Icon icon)
         throws HeadlessException {
-        showOptionDialog(parentComponent, message, title, DEFAULT_OPTION, 
+        showOptionDialog(parentComponent, message, title, DEFAULT_OPTION,
                          messageType, icon, null, null);
     }
 
@@ -657,9 +675,9 @@ public class JOptionPane extends JComponent implements Accessible
      * title, <b>Select an Option</b>.
      *
      * @param parentComponent determines the <code>Frame</code> in which the
-     *			dialog is displayed; if <code>null</code>,
-     *			or if the <code>parentComponent</code> has no
-     *			<code>Frame</code>, a 
+     *                  dialog is displayed; if <code>null</code>,
+     *                  or if the <code>parentComponent</code> has no
+     *                  <code>Frame</code>, a
      *                  default <code>Frame</code> is used
      * @param message   the <code>Object</code> to display
      * @return an integer indicating the option selected by the user
@@ -678,11 +696,11 @@ public class JOptionPane extends JComponent implements Accessible
     /**
      * Brings up a dialog where the number of choices is determined
      * by the <code>optionType</code> parameter.
-     * 
+     *
      * @param parentComponent determines the <code>Frame</code> in which the
-     *			dialog is displayed; if <code>null</code>,
-     *			or if the <code>parentComponent</code> has no
-     *			<code>Frame</code>, a 
+     *                  dialog is displayed; if <code>null</code>,
+     *                  or if the <code>parentComponent</code> has no
+     *                  <code>Frame</code>, a
      *                  default <code>Frame</code> is used
      * @param message   the <code>Object</code> to display
      * @param title     the title string for the dialog
@@ -697,7 +715,7 @@ public class JOptionPane extends JComponent implements Accessible
      * @see java.awt.GraphicsEnvironment#isHeadless
      */
     public static int showConfirmDialog(Component parentComponent,
-        Object message, String title, int optionType) 
+        Object message, String title, int optionType)
         throws HeadlessException {
         return showConfirmDialog(parentComponent, message, title, optionType,
                                  QUESTION_MESSAGE);
@@ -712,9 +730,9 @@ public class JOptionPane extends JComponent implements Accessible
      * a default icon from the Look and Feel.
      *
      * @param parentComponent determines the <code>Frame</code> in
-     *			which the dialog is displayed; if <code>null</code>,
-     *			or if the <code>parentComponent</code> has no
-     *			<code>Frame</code>, a 
+     *                  which the dialog is displayed; if <code>null</code>,
+     *                  or if the <code>parentComponent</code> has no
+     *                  <code>Frame</code>, a
      *                  default <code>Frame</code> is used.
      * @param message   the <code>Object</code> to display
      * @param title     the title string for the dialog
@@ -722,13 +740,13 @@ public class JOptionPane extends JComponent implements Accessible
      *                   on the dialog: <code>YES_NO_OPTION</code>,
      *                  <code>YES_NO_CANCEL_OPTION</code>,
      *                  or <code>OK_CANCEL_OPTION</code>
-     * @param messageType an integer designating the kind of message this is; 
+     * @param messageType an integer designating the kind of message this is;
      *                  primarily used to determine the icon from the pluggable
      *                  Look and Feel: <code>ERROR_MESSAGE</code>,
-     *			<code>INFORMATION_MESSAGE</code>, 
+     *                  <code>INFORMATION_MESSAGE</code>,
      *                  <code>WARNING_MESSAGE</code>,
      *                  <code>QUESTION_MESSAGE</code>,
-     *			or <code>PLAIN_MESSAGE</code>
+     *                  or <code>PLAIN_MESSAGE</code>
      * @return an integer indicating the option selected by the user
      * @exception HeadlessException if
      *   <code>GraphicsEnvironment.isHeadless</code> returns
@@ -736,36 +754,36 @@ public class JOptionPane extends JComponent implements Accessible
      * @see java.awt.GraphicsEnvironment#isHeadless
      */
     public static int showConfirmDialog(Component parentComponent,
-        Object message, String title, int optionType, int messageType) 
+        Object message, String title, int optionType, int messageType)
         throws HeadlessException {
         return showConfirmDialog(parentComponent, message, title, optionType,
                                 messageType, null);
     }
 
     /**
-     * Brings up a dialog with a specified icon, where the number of 
+     * Brings up a dialog with a specified icon, where the number of
      * choices is determined by the <code>optionType</code> parameter.
      * The <code>messageType</code> parameter is primarily used to supply
      * a default icon from the look and feel.
      *
      * @param parentComponent determines the <code>Frame</code> in which the
-     *			dialog is displayed; if <code>null</code>,
-     *			or if the <code>parentComponent</code> has no
-     *			<code>Frame</code>, a 
-     *			default <code>Frame</code> is used
+     *                  dialog is displayed; if <code>null</code>,
+     *                  or if the <code>parentComponent</code> has no
+     *                  <code>Frame</code>, a
+     *                  default <code>Frame</code> is used
      * @param message   the Object to display
      * @param title     the title string for the dialog
      * @param optionType an int designating the options available on the dialog:
      *                  <code>YES_NO_OPTION</code>,
      *                  <code>YES_NO_CANCEL_OPTION</code>,
      *                  or <code>OK_CANCEL_OPTION</code>
-     * @param messageType an int designating the kind of message this is, 
+     * @param messageType an int designating the kind of message this is,
      *                  primarily used to determine the icon from the pluggable
      *                  Look and Feel: <code>ERROR_MESSAGE</code>,
-     *			<code>INFORMATION_MESSAGE</code>, 
+     *                  <code>INFORMATION_MESSAGE</code>,
      *                  <code>WARNING_MESSAGE</code>,
      *                  <code>QUESTION_MESSAGE</code>,
-     *			or <code>PLAIN_MESSAGE</code>
+     *                  or <code>PLAIN_MESSAGE</code>
      * @param icon      the icon to display in the dialog
      * @return an int indicating the option selected by the user
      * @exception HeadlessException if
@@ -783,23 +801,23 @@ public class JOptionPane extends JComponent implements Accessible
     /**
      * Brings up a dialog with a specified icon, where the initial
      * choice is determined by the <code>initialValue</code> parameter and
-     * the number of choices is determined by the <code>optionType</code> 
+     * the number of choices is determined by the <code>optionType</code>
      * parameter.
      * <p>
      * If <code>optionType</code> is <code>YES_NO_OPTION</code>,
      * or <code>YES_NO_CANCEL_OPTION</code>
      * and the <code>options</code> parameter is <code>null</code>,
      * then the options are
-     * supplied by the look and feel. 
+     * supplied by the look and feel.
      * <p>
      * The <code>messageType</code> parameter is primarily used to supply
      * a default icon from the look and feel.
      *
      * @param parentComponent determines the <code>Frame</code>
-     *			in which the dialog is displayed;  if 
+     *                  in which the dialog is displayed;  if
      *                  <code>null</code>, or if the
-     *			<code>parentComponent</code> has no
-     *			<code>Frame</code>, a 
+     *                  <code>parentComponent</code> has no
+     *                  <code>Frame</code>, a
      *                  default <code>Frame</code> is used
      * @param message   the <code>Object</code> to display
      * @param title     the title string for the dialog
@@ -808,26 +826,26 @@ public class JOptionPane extends JComponent implements Accessible
      *                  <code>YES_NO_OPTION</code>,
      *                  <code>YES_NO_CANCEL_OPTION</code>,
      *                  or <code>OK_CANCEL_OPTION</code>
-     * @param messageType an integer designating the kind of message this is, 
+     * @param messageType an integer designating the kind of message this is,
      *                  primarily used to determine the icon from the
-     *			pluggable Look and Feel: <code>ERROR_MESSAGE</code>,
-     *			<code>INFORMATION_MESSAGE</code>, 
+     *                  pluggable Look and Feel: <code>ERROR_MESSAGE</code>,
+     *                  <code>INFORMATION_MESSAGE</code>,
      *                  <code>WARNING_MESSAGE</code>,
      *                  <code>QUESTION_MESSAGE</code>,
-     *			or <code>PLAIN_MESSAGE</code>
+     *                  or <code>PLAIN_MESSAGE</code>
      * @param icon      the icon to display in the dialog
      * @param options   an array of objects indicating the possible choices
      *                  the user can make; if the objects are components, they
      *                  are rendered properly; non-<code>String</code>
-     *			objects are
+     *                  objects are
      *                  rendered using their <code>toString</code> methods;
      *                  if this parameter is <code>null</code>,
-     *			the options are determined by the Look and Feel
+     *                  the options are determined by the Look and Feel
      * @param initialValue the object that represents the default selection
      *                  for the dialog; only meaningful if <code>options</code>
-     *			is used; can be <code>null</code>
-     * @return an integer indicating the option chosen by the user, 
-     *         		or <code>CLOSED_OPTION</code> if the user closed
+     *                  is used; can be <code>null</code>
+     * @return an integer indicating the option chosen by the user,
+     *                  or <code>CLOSED_OPTION</code> if the user closed
      *                  the dialog
      * @exception HeadlessException if
      *   <code>GraphicsEnvironment.isHeadless</code> returns
@@ -836,7 +854,7 @@ public class JOptionPane extends JComponent implements Accessible
      */
     public static int showOptionDialog(Component parentComponent,
         Object message, String title, int optionType, int messageType,
-        Icon icon, Object[] options, Object initialValue) 
+        Icon icon, Object[] options, Object initialValue)
         throws HeadlessException {
         JOptionPane             pane = new JOptionPane(message, messageType,
                                                        optionType, icon,
@@ -844,7 +862,7 @@ public class JOptionPane extends JComponent implements Accessible
 
         pane.setInitialValue(initialValue);
         pane.setComponentOrientation(((parentComponent == null) ?
-	    getRootFrame() : parentComponent).getComponentOrientation());
+            getRootFrame() : parentComponent).getComponentOrientation());
 
         int style = styleFromMessageType(messageType);
         JDialog dialog = pane.createDialog(parentComponent, title, style);
@@ -882,13 +900,13 @@ public class JOptionPane extends JComponent implements Accessible
      * once it is closed, or the user clicks on one of the buttons,
      * the optionpane's value property will be set accordingly and
      * the dialog will be closed.  Each time the dialog is made visible,
-     * it will reset the option pane's value property to 
+     * it will reset the option pane's value property to
      * <code>JOptionPane.UNINITIALIZED_VALUE</code> to ensure the
      * user's subsequent action closes the dialog properly.
      *
      * @param parentComponent determines the frame in which the dialog
-     *		is displayed; if the <code>parentComponent</code> has
-     *		no <code>Frame</code>, a default <code>Frame</code> is used
+     *          is displayed; if the <code>parentComponent</code> has
+     *          no <code>Frame</code>, a default <code>Frame</code> is used
      * @param title     the title string for the dialog
      * @return a new <code>JDialog</code> containing this instance
      * @exception HeadlessException if
@@ -896,7 +914,7 @@ public class JOptionPane extends JComponent implements Accessible
      *   <code>true</code>
      * @see java.awt.GraphicsEnvironment#isHeadless
      */
-    public JDialog createDialog(Component parentComponent, String title) 
+    public JDialog createDialog(Component parentComponent, String title)
         throws HeadlessException {
         int style = styleFromMessageType(getMessageType());
         return createDialog(parentComponent, title, style);
@@ -912,7 +930,7 @@ public class JOptionPane extends JComponent implements Accessible
      * once it is closed, or the user clicks on one of the buttons,
      * the optionpane's value property will be set accordingly and
      * the dialog will be closed.  Each time the dialog is made visible,
-     * it will reset the option pane's value property to 
+     * it will reset the option pane's value property to
      * <code>JOptionPane.UNINITIALIZED_VALUE</code> to ensure the
      * user's subsequent action closes the dialog properly.
      *
@@ -930,7 +948,7 @@ public class JOptionPane extends JComponent implements Accessible
         initDialog(dialog, style, null);
         return dialog;
     }
-   
+
     private JDialog createDialog(Component parentComponent, String title,
             int style)
             throws HeadlessException {
@@ -939,15 +957,15 @@ public class JOptionPane extends JComponent implements Accessible
 
         Window window = JOptionPane.getWindowForComponent(parentComponent);
         if (window instanceof Frame) {
-            dialog = new JDialog((Frame)window, title, true);	
+            dialog = new JDialog((Frame)window, title, true);
         } else {
             dialog = new JDialog((Dialog)window, title, true);
         }
- 	if (window instanceof SwingUtilities.SharedOwnerFrame) {
-	    WindowListener ownerShutdownListener =
-		(WindowListener)SwingUtilities.getSharedOwnerFrameShutdownListener();
- 	    dialog.addWindowListener(ownerShutdownListener);
- 	}
+        if (window instanceof SwingUtilities.SharedOwnerFrame) {
+            WindowListener ownerShutdownListener =
+                    SwingUtilities.getSharedOwnerFrameShutdownListener();
+            dialog.addWindowListener(ownerShutdownListener);
+        }
         initDialog(dialog, style, parentComponent);
         return dialog;
     }
@@ -969,11 +987,33 @@ public class JOptionPane extends JComponent implements Accessible
         }
         dialog.pack();
         dialog.setLocationRelativeTo(parentComponent);
+
+        final PropertyChangeListener listener = new PropertyChangeListener() {
+            public void propertyChange(PropertyChangeEvent event) {
+                // Let the defaultCloseOperation handle the closing
+                // if the user closed the window without selecting a button
+                // (newValue = null in that case).  Otherwise, close the dialog.
+                if (dialog.isVisible() && event.getSource() == JOptionPane.this &&
+                        (event.getPropertyName().equals(VALUE_PROPERTY) ||
+                                event.getPropertyName().equals(INPUT_VALUE_PROPERTY)) &&
+                        event.getNewValue() != null &&
+                        event.getNewValue() != JOptionPane.UNINITIALIZED_VALUE) {
+                    dialog.setVisible(false);
+                }
+            }
+        };
+
         WindowAdapter adapter = new WindowAdapter() {
             private boolean gotFocus = false;
             public void windowClosing(WindowEvent we) {
                 setValue(null);
             }
+
+            public void windowClosed(WindowEvent e) {
+                removePropertyChangeListener(listener);
+                dialog.getContentPane().removeAll();
+            }
+
             public void windowGainedFocus(WindowEvent we) {
                 // Once window gets focus, set initial focus
                 if (!gotFocus) {
@@ -990,19 +1030,8 @@ public class JOptionPane extends JComponent implements Accessible
                 setValue(JOptionPane.UNINITIALIZED_VALUE);
             }
         });
-        addPropertyChangeListener(new PropertyChangeListener() {
-            public void propertyChange(PropertyChangeEvent event) {
-                // Let the defaultCloseOperation handle the closing
-                // if the user closed the window without selecting a button
-                // (newValue = null in that case).  Otherwise, close the dialog.
-                if (dialog.isVisible() && event.getSource() == JOptionPane.this &&
-                  (event.getPropertyName().equals(VALUE_PROPERTY)) &&
-                  event.getNewValue() != null &&
-                  event.getNewValue() != JOptionPane.UNINITIALIZED_VALUE) {
-                    dialog.setVisible(false);
-                }
-            }
-        });
+
+        addPropertyChangeListener(listener);
     }
 
 
@@ -1011,9 +1040,9 @@ public class JOptionPane extends JComponent implements Accessible
      * is a information-message dialog titled "Message".
      *
      * @param parentComponent determines the <code>Frame</code>
-     *		in which the dialog is displayed; if <code>null</code>,
-     *		or if the <code>parentComponent</code> has no
-     *		<code>Frame</code>, a default <code>Frame</code> is used
+     *          in which the dialog is displayed; if <code>null</code>,
+     *          or if the <code>parentComponent</code> has no
+     *          <code>Frame</code>, a default <code>Frame</code> is used
      * @param message   the object to display
      */
     public static void showInternalMessageDialog(Component parentComponent,
@@ -1023,23 +1052,23 @@ public class JOptionPane extends JComponent implements Accessible
                                  parentComponent), INFORMATION_MESSAGE);
     }
 
-    /** 
-     * Brings up an internal dialog panel that displays a message 
+    /**
+     * Brings up an internal dialog panel that displays a message
      * using a default icon determined by the <code>messageType</code>
      * parameter.
      *
      * @param parentComponent determines the <code>Frame</code>
-     *		in which the dialog is displayed; if <code>null</code>,
-     *		or if the <code>parentComponent</code> has no
-     *		<code>Frame</code>, a default <code>Frame</code> is used
+     *          in which the dialog is displayed; if <code>null</code>,
+     *          or if the <code>parentComponent</code> has no
+     *          <code>Frame</code>, a default <code>Frame</code> is used
      * @param message   the <code>Object</code> to display
      * @param title     the title string for the dialog
      * @param messageType the type of message to be displayed:
      *                  <code>ERROR_MESSAGE</code>,
-     *			<code>INFORMATION_MESSAGE</code>,
-     *			<code>WARNING_MESSAGE</code>,
+     *                  <code>INFORMATION_MESSAGE</code>,
+     *                  <code>WARNING_MESSAGE</code>,
      *                  <code>QUESTION_MESSAGE</code>,
-     *			or <code>PLAIN_MESSAGE</code>
+     *                  or <code>PLAIN_MESSAGE</code>
      */
     public static void showInternalMessageDialog(Component parentComponent,
                                                  Object message, String title,
@@ -1048,21 +1077,21 @@ public class JOptionPane extends JComponent implements Accessible
     }
 
     /**
-     * Brings up an internal dialog panel displaying a message, 
+     * Brings up an internal dialog panel displaying a message,
      * specifying all parameters.
      *
      * @param parentComponent determines the <code>Frame</code>
-     *		in which the dialog is displayed; if <code>null</code>,
-     *		or if the <code>parentComponent</code> has no
-     *		<code>Frame</code>, a default <code>Frame</code> is used
+     *          in which the dialog is displayed; if <code>null</code>,
+     *          or if the <code>parentComponent</code> has no
+     *          <code>Frame</code>, a default <code>Frame</code> is used
      * @param message   the <code>Object</code> to display
      * @param title     the title string for the dialog
      * @param messageType the type of message to be displayed:
      *                  <code>ERROR_MESSAGE</code>,
-     *			<code>INFORMATION_MESSAGE</code>,
-     *			<code>WARNING_MESSAGE</code>,
+     *                  <code>INFORMATION_MESSAGE</code>,
+     *                  <code>WARNING_MESSAGE</code>,
      *                  <code>QUESTION_MESSAGE</code>,
-     *			or <code>PLAIN_MESSAGE</code>
+     *                  or <code>PLAIN_MESSAGE</code>
      * @param icon      an icon to display in the dialog that helps the user
      *                  identify the kind of message that is being displayed
      */
@@ -1078,10 +1107,10 @@ public class JOptionPane extends JComponent implements Accessible
      * Brings up an internal dialog panel with the options <i>Yes</i>, <i>No</i>
      * and <i>Cancel</i>; with the title, <b>Select an Option</b>.
      *
-     * @param parentComponent determines the <code>Frame</code> in 
-     *		which the dialog is displayed; if <code>null</code>,
-     *		or if the <code>parentComponent</code> has no
-     *		<code>Frame</code>, a default <code>Frame</code> is used
+     * @param parentComponent determines the <code>Frame</code> in
+     *          which the dialog is displayed; if <code>null</code>,
+     *          or if the <code>parentComponent</code> has no
+     *          <code>Frame</code>, a default <code>Frame</code> is used
      * @param message   the <code>Object</code> to display
      * @return an integer indicating the option selected by the user
      */
@@ -1093,23 +1122,23 @@ public class JOptionPane extends JComponent implements Accessible
     }
 
     /**
-     * Brings up a internal dialog panel where the number of choices 
+     * Brings up a internal dialog panel where the number of choices
      * is determined by the <code>optionType</code> parameter.
-     * 
+     *
      * @param parentComponent determines the <code>Frame</code>
-     *		in which the dialog is displayed; if <code>null</code>,
-     *		or if the <code>parentComponent</code> has no
-     *		<code>Frame</code>, a default <code>Frame</code> is used
+     *          in which the dialog is displayed; if <code>null</code>,
+     *          or if the <code>parentComponent</code> has no
+     *          <code>Frame</code>, a default <code>Frame</code> is used
      * @param message   the object to display in the dialog; a
-     *		<code>Component</code> object is rendered as a
-     *		<code>Component</code>; a <code>String</code>
-     *		object is rendered as a string; other objects
-     *		are converted to a <code>String</code> using the
-     *		<code>toString</code> method
+     *          <code>Component</code> object is rendered as a
+     *          <code>Component</code>; a <code>String</code>
+     *          object is rendered as a string; other objects
+     *          are converted to a <code>String</code> using the
+     *          <code>toString</code> method
      * @param title     the title string for the dialog
      * @param optionType an integer designating the options
-     *		available on the dialog: <code>YES_NO_OPTION</code>,
-     *		or <code>YES_NO_CANCEL_OPTION</code>
+     *          available on the dialog: <code>YES_NO_OPTION</code>,
+     *          or <code>YES_NO_CANCEL_OPTION</code>
      * @return an integer indicating the option selected by the user
      */
     public static int showInternalConfirmDialog(Component parentComponent,
@@ -1127,28 +1156,28 @@ public class JOptionPane extends JComponent implements Accessible
      * a default icon from the Look and Feel.
      *
      * @param parentComponent determines the <code>Frame</code> in
-     *		which the dialog is displayed; if <code>null</code>,
-     *		or if the <code>parentComponent</code> has no
-     *		<code>Frame</code>, a default <code>Frame</code> is used
+     *          which the dialog is displayed; if <code>null</code>,
+     *          or if the <code>parentComponent</code> has no
+     *          <code>Frame</code>, a default <code>Frame</code> is used
      * @param message   the object to display in the dialog; a
-     *		<code>Component</code> object is rendered as a
-     *		<code>Component</code>; a <code>String</code>
-     *		object is rendered as a string; other objects are
-     *		converted to a <code>String</code> using the
-     *		<code>toString</code> method
+     *          <code>Component</code> object is rendered as a
+     *          <code>Component</code>; a <code>String</code>
+     *          object is rendered as a string; other objects are
+     *          converted to a <code>String</code> using the
+     *          <code>toString</code> method
      * @param title     the title string for the dialog
      * @param optionType an integer designating the options
-     *		available on the dialog:
-     *		<code>YES_NO_OPTION</code>, or <code>YES_NO_CANCEL_OPTION</code>
-     * @param messageType an integer designating the kind of message this is, 
+     *          available on the dialog:
+     *          <code>YES_NO_OPTION</code>, or <code>YES_NO_CANCEL_OPTION</code>
+     * @param messageType an integer designating the kind of message this is,
      *          primarily used to determine the icon from the
-     *		pluggable Look and Feel: <code>ERROR_MESSAGE</code>,
-     *		<code>INFORMATION_MESSAGE</code>, 
-     *		<code>WARNING_MESSAGE</code>, <code>QUESTION_MESSAGE</code>,
-     *		or <code>PLAIN_MESSAGE</code>
+     *          pluggable Look and Feel: <code>ERROR_MESSAGE</code>,
+     *          <code>INFORMATION_MESSAGE</code>,
+     *          <code>WARNING_MESSAGE</code>, <code>QUESTION_MESSAGE</code>,
+     *          or <code>PLAIN_MESSAGE</code>
      * @return an integer indicating the option selected by the user
      */
-    public static int showInternalConfirmDialog(Component parentComponent, 
+    public static int showInternalConfirmDialog(Component parentComponent,
                                         Object message,
                                         String title, int optionType,
                                         int messageType) {
@@ -1159,31 +1188,31 @@ public class JOptionPane extends JComponent implements Accessible
     /**
      * Brings up an internal dialog panel with a specified icon, where
      * the number of choices is determined by the <code>optionType</code>
-     * parameter. 
+     * parameter.
      * The <code>messageType</code> parameter is primarily used to supply
      * a default icon from the look and feel.
      *
      * @param parentComponent determines the <code>Frame</code>
-     *		in which the dialog is displayed; if <code>null</code>,
-     *		or if the parentComponent has no Frame, a 
+     *          in which the dialog is displayed; if <code>null</code>,
+     *          or if the parentComponent has no Frame, a
      *          default <code>Frame</code> is used
      * @param message   the object to display in the dialog; a
-     *		<code>Component</code> object is rendered as a
-     *		<code>Component</code>; a <code>String</code>
-     *		object is rendered as a string; other objects are
-     *		converted to a <code>String</code> using the
-     *		<code>toString</code> method
+     *          <code>Component</code> object is rendered as a
+     *          <code>Component</code>; a <code>String</code>
+     *          object is rendered as a string; other objects are
+     *          converted to a <code>String</code> using the
+     *          <code>toString</code> method
      * @param title     the title string for the dialog
      * @param optionType an integer designating the options available
-     *		on the dialog:
+     *          on the dialog:
      *          <code>YES_NO_OPTION</code>, or
-     *		<code>YES_NO_CANCEL_OPTION</code>.
-     * @param messageType an integer designating the kind of message this is, 
-     *		primarily used to determine the icon from the pluggable
-     *		Look and Feel: <code>ERROR_MESSAGE</code>,
-     *		<code>INFORMATION_MESSAGE</code>, 
-     *		<code>WARNING_MESSAGE</code>, <code>QUESTION_MESSAGE</code>,
-     *		or <code>PLAIN_MESSAGE</code>
+     *          <code>YES_NO_CANCEL_OPTION</code>.
+     * @param messageType an integer designating the kind of message this is,
+     *          primarily used to determine the icon from the pluggable
+     *          Look and Feel: <code>ERROR_MESSAGE</code>,
+     *          <code>INFORMATION_MESSAGE</code>,
+     *          <code>WARNING_MESSAGE</code>, <code>QUESTION_MESSAGE</code>,
+     *          or <code>PLAIN_MESSAGE</code>
      * @param icon      the icon to display in the dialog
      * @return an integer indicating the option selected by the user
      */
@@ -1198,48 +1227,48 @@ public class JOptionPane extends JComponent implements Accessible
     /**
      * Brings up an internal dialog panel with a specified icon, where
      * the initial choice is determined by the <code>initialValue</code>
-     * parameter and the number of choices is determined by the 
+     * parameter and the number of choices is determined by the
      * <code>optionType</code> parameter.
      * <p>
      * If <code>optionType</code> is <code>YES_NO_OPTION</code>, or
      * <code>YES_NO_CANCEL_OPTION</code>
      * and the <code>options</code> parameter is <code>null</code>,
-     * then the options are supplied by the Look and Feel. 
+     * then the options are supplied by the Look and Feel.
      * <p>
      * The <code>messageType</code> parameter is primarily used to supply
      * a default icon from the look and feel.
      *
      * @param parentComponent determines the <code>Frame</code>
-     *		in which the dialog is displayed; if <code>null</code>,
-     *		or if the <code>parentComponent</code> has no
-     *		<code>Frame</code>, a default <code>Frame</code> is used
+     *          in which the dialog is displayed; if <code>null</code>,
+     *          or if the <code>parentComponent</code> has no
+     *          <code>Frame</code>, a default <code>Frame</code> is used
      * @param message   the object to display in the dialog; a
-     *		<code>Component</code> object is rendered as a
-     *		<code>Component</code>; a <code>String</code>
-     *		object is rendered as a string. Other objects are
-     *		converted to a <code>String</code> using the
-     *		<code>toString</code> method
+     *          <code>Component</code> object is rendered as a
+     *          <code>Component</code>; a <code>String</code>
+     *          object is rendered as a string. Other objects are
+     *          converted to a <code>String</code> using the
+     *          <code>toString</code> method
      * @param title     the title string for the dialog
      * @param optionType an integer designating the options available
-     *		on the dialog: <code>YES_NO_OPTION</code>,
-     *		or <code>YES_NO_CANCEL_OPTION</code>
-     * @param messageType an integer designating the kind of message this is; 
-     *		primarily used to determine the icon from the
-     *		pluggable Look and Feel: <code>ERROR_MESSAGE</code>,
-     *		<code>INFORMATION_MESSAGE</code>, 
+     *          on the dialog: <code>YES_NO_OPTION</code>,
+     *          or <code>YES_NO_CANCEL_OPTION</code>
+     * @param messageType an integer designating the kind of message this is;
+     *          primarily used to determine the icon from the
+     *          pluggable Look and Feel: <code>ERROR_MESSAGE</code>,
+     *          <code>INFORMATION_MESSAGE</code>,
      *          <code>WARNING_MESSAGE</code>, <code>QUESTION_MESSAGE</code>,
-     *		or <code>PLAIN_MESSAGE</code>
+     *          or <code>PLAIN_MESSAGE</code>
      * @param icon      the icon to display in the dialog
      * @param options   an array of objects indicating the possible choices
      *          the user can make; if the objects are components, they
      *          are rendered properly; non-<code>String</code>
-     *		objects are rendered using their <code>toString</code>
-     *		methods; if this parameter is <code>null</code>,
-     *		the options are determined by the Look and Feel
+     *          objects are rendered using their <code>toString</code>
+     *          methods; if this parameter is <code>null</code>,
+     *          the options are determined by the Look and Feel
      * @param initialValue the object that represents the default selection
      *          for the dialog; only meaningful if <code>options</code>
-     *		is used; can be <code>null</code>
-     * @return an integer indicating the option chosen by the user, 
+     *          is used; can be <code>null</code>
+     * @return an integer indicating the option chosen by the user,
      *          or <code>CLOSED_OPTION</code> if the user closed the Dialog
      */
     public static int showInternalOptionDialog(Component parentComponent,
@@ -1249,7 +1278,7 @@ public class JOptionPane extends JComponent implements Accessible
                                        Object[] options, Object initialValue) {
         JOptionPane pane = new JOptionPane(message, messageType,
                 optionType, icon, options, initialValue);
-        pane.putClientProperty(PopupFactory.forceHeavyWeightPopupKey,
+        pane.putClientProperty(PopupFactory_FORCE_HEAVYWEIGHT_POPUP,
                 Boolean.TRUE);
         Component fo = KeyboardFocusManager.getCurrentKeyboardFocusManager().
                 getFocusOwner();
@@ -1261,31 +1290,30 @@ public class JOptionPane extends JComponent implements Accessible
         pane.selectInitialValue();
         dialog.setVisible(true);
 
-	/* Since all input will be blocked until this dialog is dismissed,
-	 * make sure its parent containers are visible first (this component
-	 * is tested below).  This is necessary for JApplets, because
-	 * because an applet normally isn't made visible until after its
-	 * start() method returns -- if this method is called from start(),
-	 * the applet will appear to hang while an invisible modal frame
-	 * waits for input.
-	 */
-	if (dialog.isVisible() && !dialog.isShowing()) {
-	    Container parent = dialog.getParent();
-	    while (parent != null) {
-		if (parent.isVisible() == false) {
-		    parent.setVisible(true);
-		}
-		parent = parent.getParent();
-	    }
-	}
+        /* Since all input will be blocked until this dialog is dismissed,
+         * make sure its parent containers are visible first (this component
+         * is tested below).  This is necessary for JApplets, because
+         * because an applet normally isn't made visible until after its
+         * start() method returns -- if this method is called from start(),
+         * the applet will appear to hang while an invisible modal frame
+         * waits for input.
+         */
+        if (dialog.isVisible() && !dialog.isShowing()) {
+            Container parent = dialog.getParent();
+            while (parent != null) {
+                if (parent.isVisible() == false) {
+                    parent.setVisible(true);
+                }
+                parent = parent.getParent();
+            }
+        }
 
         // Use reflection to get Container.startLWModal.
         try {
-            Object obj;
-            obj = AccessController.doPrivileged(new ModalPrivilegedAction(
+            Method method = AccessController.doPrivileged(new ModalPrivilegedAction(
                     Container.class, "startLWModal"));
-            if (obj != null) {
-                ((Method)obj).invoke(dialog, (Object[])null);
+            if (method != null) {
+                method.invoke(dialog, (Object[])null);
             }
         } catch (IllegalAccessException ex) {
         } catch (IllegalArgumentException ex) {
@@ -1326,10 +1354,10 @@ public class JOptionPane extends JComponent implements Accessible
      * Shows an internal question-message dialog requesting input from
      * the user parented to <code>parentComponent</code>. The dialog
      * is displayed in the <code>Component</code>'s frame,
-     * and is usually positioned below the <code>Component</code>. 
+     * and is usually positioned below the <code>Component</code>.
      *
      * @param parentComponent  the parent <code>Component</code>
-     *		for the dialog
+     *          for the dialog
      * @param message  the <code>Object</code> to display
      */
     public static String showInternalInputDialog(Component parentComponent,
@@ -1347,7 +1375,7 @@ public class JOptionPane extends JComponent implements Accessible
      * @param parentComponent the parent <code>Component</code> for the dialog
      * @param message  the <code>Object</code> to display
      * @param title    the <code>String</code> to display in the
-     *		dialog title bar
+     *          dialog title bar
      * @param messageType the type of message that is to be displayed:
      *                    ERROR_MESSAGE, INFORMATION_MESSAGE, WARNING_MESSAGE,
      *                    QUESTION_MESSAGE, or PLAIN_MESSAGE
@@ -1360,11 +1388,11 @@ public class JOptionPane extends JComponent implements Accessible
 
     /**
      * Prompts the user for input in a blocking internal dialog where
-     * the initial selection, possible selections, and all other 
+     * the initial selection, possible selections, and all other
      * options can be specified. The user will able to choose from
      * <code>selectionValues</code>, where <code>null</code>
      * implies the user can input
-     * whatever they wish, usually by means of a <code>JTextField</code>. 
+     * whatever they wish, usually by means of a <code>JTextField</code>.
      * <code>initialSelectionValue</code> is the initial value to prompt
      * the user with. It is up to the UI to decide how best to represent
      * the <code>selectionValues</code>, but usually a
@@ -1374,25 +1402,25 @@ public class JOptionPane extends JComponent implements Accessible
      * @param parentComponent the parent <code>Component</code> for the dialog
      * @param message  the <code>Object</code> to display
      * @param title    the <code>String</code> to display in the dialog
-     *		title bar
+     *          title bar
      * @param messageType the type of message to be displayed:
-     *                 	<code>ERROR_MESSAGE</code>, <code>INFORMATION_MESSAGE</code>,
-     *			<code>WARNING_MESSAGE</code>,
-     *                 	<code>QUESTION_MESSAGE</code>, or <code>PLAIN_MESSAGE</code>
+     *                  <code>ERROR_MESSAGE</code>, <code>INFORMATION_MESSAGE</code>,
+     *                  <code>WARNING_MESSAGE</code>,
+     *                  <code>QUESTION_MESSAGE</code>, or <code>PLAIN_MESSAGE</code>
      * @param icon     the <code>Icon</code> image to display
      * @param selectionValues an array of <code>Objects</code> that
-     *			gives the possible selections
+     *                  gives the possible selections
      * @param initialSelectionValue the value used to initialize the input
      *                  field
      * @return user's input, or <code>null</code> meaning the user
-     *		canceled the input
+     *          canceled the input
      */
     public static Object showInternalInputDialog(Component parentComponent,
             Object message, String title, int messageType, Icon icon,
             Object[] selectionValues, Object initialSelectionValue) {
         JOptionPane pane = new JOptionPane(message, messageType,
                 OK_CANCEL_OPTION, icon, null, null);
-        pane.putClientProperty(PopupFactory.forceHeavyWeightPopupKey,
+        pane.putClientProperty(PopupFactory_FORCE_HEAVYWEIGHT_POPUP,
                 Boolean.TRUE);
         Component fo = KeyboardFocusManager.getCurrentKeyboardFocusManager().
                 getFocusOwner();
@@ -1407,31 +1435,30 @@ public class JOptionPane extends JComponent implements Accessible
         pane.selectInitialValue();
         dialog.setVisible(true);
 
-	/* Since all input will be blocked until this dialog is dismissed,
-	 * make sure its parent containers are visible first (this component
-	 * is tested below).  This is necessary for JApplets, because
-	 * because an applet normally isn't made visible until after its
-	 * start() method returns -- if this method is called from start(),
-	 * the applet will appear to hang while an invisible modal frame
-	 * waits for input.
-	 */
-	if (dialog.isVisible() && !dialog.isShowing()) {
-	    Container parent = dialog.getParent();
-	    while (parent != null) {
-		if (parent.isVisible() == false) {
-		    parent.setVisible(true);
-		}
-		parent = parent.getParent();
-	    }
-	}
+        /* Since all input will be blocked until this dialog is dismissed,
+         * make sure its parent containers are visible first (this component
+         * is tested below).  This is necessary for JApplets, because
+         * because an applet normally isn't made visible until after its
+         * start() method returns -- if this method is called from start(),
+         * the applet will appear to hang while an invisible modal frame
+         * waits for input.
+         */
+        if (dialog.isVisible() && !dialog.isShowing()) {
+            Container parent = dialog.getParent();
+            while (parent != null) {
+                if (parent.isVisible() == false) {
+                    parent.setVisible(true);
+                }
+                parent = parent.getParent();
+            }
+        }
 
         // Use reflection to get Container.startLWModal.
         try {
-            Object obj;
-            obj = AccessController.doPrivileged(new ModalPrivilegedAction(
+            Method method = AccessController.doPrivileged(new ModalPrivilegedAction(
                     Container.class, "startLWModal"));
-            if (obj != null) {
-                ((Method)obj).invoke(dialog, (Object[])null);
+            if (method != null) {
+                method.invoke(dialog, (Object[])null);
             }
         } catch (IllegalAccessException ex) {
         } catch (IllegalArgumentException ex) {
@@ -1457,7 +1484,7 @@ public class JOptionPane extends JComponent implements Accessible
     }
 
     /**
-     * Creates and returns an instance of <code>JInternalFrame</code>. 
+     * Creates and returns an instance of <code>JInternalFrame</code>.
      * The internal frame is created with the specified title,
      * and wrapping the <code>JOptionPane</code>.
      * The returned <code>JInternalFrame</code> is
@@ -1468,20 +1495,20 @@ public class JOptionPane extends JComponent implements Accessible
      * doesn't have a parent then a <code>RuntimeException</code> is thrown.
      *
      * @param parentComponent  the parent <code>Component</code> for
-     *		the internal frame
+     *          the internal frame
      * @param title    the <code>String</code> to display in the
-     *		frame's title bar
+     *          frame's title bar
      * @return a <code>JInternalFrame</code> containing a
-     *		<code>JOptionPane</code>
+     *          <code>JOptionPane</code>
      * @exception RuntimeException if <code>parentComponent</code> does
-     *		not have a valid parent
+     *          not have a valid parent
      */
     public JInternalFrame createInternalFrame(Component parentComponent,
                                  String title) {
         Container parent =
                 JOptionPane.getDesktopPaneForComponent(parentComponent);
 
-        if (parent == null && (parentComponent == null || 
+        if (parent == null && (parentComponent == null ||
                 (parent = parentComponent.getParent()) == null)) {
             throw new RuntimeException("JOptionPane: parentComponent does " +
                     "not have a valid parent");
@@ -1492,8 +1519,8 @@ public class JOptionPane extends JComponent implements Accessible
                                                            false, false);
 
         iFrame.putClientProperty("JInternalFrame.frameType", "optionDialog");
-        iFrame.putClientProperty("JInternalFrame.messageType", 
-                                 new Integer(getMessageType()));
+        iFrame.putClientProperty("JInternalFrame.messageType",
+                                 Integer.valueOf(getMessageType()));
 
         iFrame.addInternalFrameListener(new InternalFrameAdapter() {
             public void internalFrameClosing(InternalFrameEvent e) {
@@ -1512,12 +1539,11 @@ public class JOptionPane extends JComponent implements Accessible
                         event.getPropertyName().equals(VALUE_PROPERTY)) {
                 // Use reflection to get Container.stopLWModal().
                 try {
-                    Object obj;
-                    obj = AccessController.doPrivileged(
+                    Method method = AccessController.doPrivileged(
                         new ModalPrivilegedAction(
                             Container.class, "stopLWModal"));
-                    if (obj != null) {
-                        ((Method)obj).invoke(iFrame, (Object[])null);
+                    if (method != null) {
+                        method.invoke(iFrame, (Object[])null);
                     }
                 } catch (IllegalAccessException ex) {
                 } catch (IllegalArgumentException ex) {
@@ -1526,7 +1552,7 @@ public class JOptionPane extends JComponent implements Accessible
 
                 try {
                     iFrame.setClosed(true);
-                } 
+                }
                 catch (java.beans.PropertyVetoException e) {
                 }
 
@@ -1542,48 +1568,48 @@ public class JOptionPane extends JComponent implements Accessible
         }
         Dimension iFrameSize = iFrame.getPreferredSize();
         Dimension rootSize = parent.getSize();
-	Dimension parentSize = parentComponent.getSize();
+        Dimension parentSize = parentComponent.getSize();
 
-       	iFrame.setBounds((rootSize.width - iFrameSize.width) / 2,
+        iFrame.setBounds((rootSize.width - iFrameSize.width) / 2,
                          (rootSize.height - iFrameSize.height) / 2,
-                         iFrameSize.width, iFrameSize.height); 
-	// We want dialog centered relative to its parent component
-	Point iFrameCoord =
-	  SwingUtilities.convertPoint(parentComponent, 0, 0, parent);
-	int x = (parentSize.width - iFrameSize.width) / 2 + iFrameCoord.x;
-	int y = (parentSize.height - iFrameSize.height) / 2 + iFrameCoord.y;
+                         iFrameSize.width, iFrameSize.height);
+        // We want dialog centered relative to its parent component
+        Point iFrameCoord =
+          SwingUtilities.convertPoint(parentComponent, 0, 0, parent);
+        int x = (parentSize.width - iFrameSize.width) / 2 + iFrameCoord.x;
+        int y = (parentSize.height - iFrameSize.height) / 2 + iFrameCoord.y;
 
-	// If possible, dialog should be fully visible
-	int ovrx = x + iFrameSize.width - rootSize.width;
-	int ovry = y + iFrameSize.height - rootSize.height;
-	x = Math.max((ovrx > 0? x - ovrx: x), 0);
-	y = Math.max((ovry > 0? y - ovry: y), 0);
-	iFrame.setBounds(x, y, iFrameSize.width, iFrameSize.height);
+        // If possible, dialog should be fully visible
+        int ovrx = x + iFrameSize.width - rootSize.width;
+        int ovry = y + iFrameSize.height - rootSize.height;
+        x = Math.max((ovrx > 0? x - ovrx: x), 0);
+        y = Math.max((ovry > 0? y - ovry: y), 0);
+        iFrame.setBounds(x, y, iFrameSize.width, iFrameSize.height);
 
-       	parent.validate(); 
+        parent.validate();
         try {
             iFrame.setSelected(true);
         } catch (java.beans.PropertyVetoException e) {}
- 
-        return iFrame; 
+
+        return iFrame;
     }
 
     /**
      * Returns the specified component's <code>Frame</code>.
-     * 
+     *
      * @param parentComponent the <code>Component</code> to check for a
-     *		<code>Frame</code>
+     *          <code>Frame</code>
      * @return the <code>Frame</code> that contains the component,
-     *          or <code>getRootFrame</code>  
-     *          if the component is <code>null</code>,      
-     *		or does not have a valid <code>Frame</code> parent
+     *          or <code>getRootFrame</code>
+     *          if the component is <code>null</code>,
+     *          or does not have a valid <code>Frame</code> parent
      * @exception HeadlessException if
      *   <code>GraphicsEnvironment.isHeadless</code> returns
      *   <code>true</code>
      * @see #getRootFrame
      * @see java.awt.GraphicsEnvironment#isHeadless
      */
-    public static Frame getFrameForComponent(Component parentComponent) 
+    public static Frame getFrameForComponent(Component parentComponent)
         throws HeadlessException {
         if (parentComponent == null)
             return getRootFrame();
@@ -1595,20 +1621,20 @@ public class JOptionPane extends JComponent implements Accessible
     /**
      * Returns the specified component's toplevel <code>Frame</code> or
      * <code>Dialog</code>.
-     * 
-     * @param parentComponent the <code>Component</code> to check for a 
-     *		<code>Frame</code> or <code>Dialog</code>
+     *
+     * @param parentComponent the <code>Component</code> to check for a
+     *          <code>Frame</code> or <code>Dialog</code>
      * @return the <code>Frame</code> or <code>Dialog</code> that
-     *		contains the component, or the default
-     *         	frame if the component is <code>null</code>,
-     *		or does not have a valid 
-     *         	<code>Frame</code> or <code>Dialog</code> parent
+     *          contains the component, or the default
+     *          frame if the component is <code>null</code>,
+     *          or does not have a valid
+     *          <code>Frame</code> or <code>Dialog</code> parent
      * @exception HeadlessException if
      *   <code>GraphicsEnvironment.isHeadless</code> returns
      *   <code>true</code>
      * @see java.awt.GraphicsEnvironment#isHeadless
      */
-    static Window getWindowForComponent(Component parentComponent) 
+    static Window getWindowForComponent(Component parentComponent)
         throws HeadlessException {
         if (parentComponent == null)
             return getRootFrame();
@@ -1620,13 +1646,13 @@ public class JOptionPane extends JComponent implements Accessible
 
     /**
      * Returns the specified component's desktop pane.
-     * 
+     *
      * @param parentComponent the <code>Component</code> to check for a
-     *		desktop
+     *          desktop
      * @return the <code>JDesktopPane</code> that contains the component,
-     *		or <code>null</code> if the component is <code>null</code>
-     *		or does not have an ancestor that is a
-     *		<code>JInternalFrame</code>
+     *          or <code>null</code> if the component is <code>null</code>
+     *          or does not have an ancestor that is a
+     *          <code>JInternalFrame</code>
      */
     public static JDesktopPane getDesktopPaneForComponent(Component parentComponent) {
         if(parentComponent == null)
@@ -1641,9 +1667,9 @@ public class JOptionPane extends JComponent implements Accessible
     /**
      * Sets the frame to use for class methods in which a frame is
      * not provided.
-     * <p>  
-     * <strong>Note:</strong> 
-     * It is recommended that rather than using this method you supply a valid parent.     
+     * <p>
+     * <strong>Note:</strong>
+     * It is recommended that rather than using this method you supply a valid parent.
      *
      * @param newRootFrame the default <code>Frame</code> to use
      */
@@ -1667,7 +1693,7 @@ public class JOptionPane extends JComponent implements Accessible
      * @see java.awt.GraphicsEnvironment#isHeadless
      */
     public static Frame getRootFrame() throws HeadlessException {
-        Frame sharedFrame = 
+        Frame sharedFrame =
             (Frame)SwingUtilities.appContextGet(sharedFrameKey);
         if (sharedFrame == null) {
             sharedFrame = SwingUtilities.getSharedOwnerFrame();
@@ -1685,7 +1711,7 @@ public class JOptionPane extends JComponent implements Accessible
 
     /**
      * Creates a instance of <code>JOptionPane</code> to display a
-     * message using the 
+     * message using the
      * plain-message message type and the default options delivered by
      * the UI.
      *
@@ -1702,10 +1728,10 @@ public class JOptionPane extends JComponent implements Accessible
      * @param message the <code>Object</code> to display
      * @param messageType the type of message to be displayed:
      *                  <code>ERROR_MESSAGE</code>,
-     *			<code>INFORMATION_MESSAGE</code>,
-     *			<code>WARNING_MESSAGE</code>,
+     *                  <code>INFORMATION_MESSAGE</code>,
+     *                  <code>WARNING_MESSAGE</code>,
      *                  <code>QUESTION_MESSAGE</code>,
-     *			or <code>PLAIN_MESSAGE</code>
+     *                  or <code>PLAIN_MESSAGE</code>
      */
     public JOptionPane(Object message, int messageType) {
         this(message, messageType, DEFAULT_OPTION);
@@ -1718,13 +1744,13 @@ public class JOptionPane extends JComponent implements Accessible
      * @param message the <code>Object</code> to display
      * @param messageType the type of message to be displayed:
      *                  <code>ERROR_MESSAGE</code>,
-     *			<code>INFORMATION_MESSAGE</code>,
-     *			<code>WARNING_MESSAGE</code>,
+     *                  <code>INFORMATION_MESSAGE</code>,
+     *                  <code>WARNING_MESSAGE</code>,
      *                  <code>QUESTION_MESSAGE</code>,
-     *			or <code>PLAIN_MESSAGE</code>
+     *                  or <code>PLAIN_MESSAGE</code>
      * @param optionType the options to display in the pane:
      *                  <code>DEFAULT_OPTION</code>, <code>YES_NO_OPTION</code>,
-     *			<code>YES_NO_CANCEL_OPTION</code>,
+     *                  <code>YES_NO_CANCEL_OPTION</code>,
      *                  <code>OK_CANCEL_OPTION</code>
      */
     public JOptionPane(Object message, int messageType, int optionType) {
@@ -1738,13 +1764,13 @@ public class JOptionPane extends JComponent implements Accessible
      * @param message the <code>Object</code> to display
      * @param messageType the type of message to be displayed:
      *                  <code>ERROR_MESSAGE</code>,
-     *			<code>INFORMATION_MESSAGE</code>,
-     *			<code>WARNING_MESSAGE</code>,
+     *                  <code>INFORMATION_MESSAGE</code>,
+     *                  <code>WARNING_MESSAGE</code>,
      *                  <code>QUESTION_MESSAGE</code>,
-     *			or <code>PLAIN_MESSAGE</code>
+     *                  or <code>PLAIN_MESSAGE</code>
      * @param optionType the options to display in the pane:
      *                  <code>DEFAULT_OPTION</code>, <code>YES_NO_OPTION</code>,
-     *			<code>YES_NO_CANCEL_OPTION</code>,
+     *                  <code>YES_NO_CANCEL_OPTION</code>,
      *                  <code>OK_CANCEL_OPTION</code>
      * @param icon the <code>Icon</code> image to display
      */
@@ -1767,15 +1793,15 @@ public class JOptionPane extends JComponent implements Accessible
      *
      * @param message the <code>Object</code> to display
      * @param messageType the type of message to be displayed:
-     *                  <code>ERROR_MESSAGE</code>, 
-     *			<code>INFORMATION_MESSAGE</code>,
-     *			<code>WARNING_MESSAGE</code>,
+     *                  <code>ERROR_MESSAGE</code>,
+     *                  <code>INFORMATION_MESSAGE</code>,
+     *                  <code>WARNING_MESSAGE</code>,
      *                  <code>QUESTION_MESSAGE</code>,
-     *			or <code>PLAIN_MESSAGE</code>
+     *                  or <code>PLAIN_MESSAGE</code>
      * @param optionType the options to display in the pane:
      *                  <code>DEFAULT_OPTION</code>,
-     *			<code>YES_NO_OPTION</code>,
-     *			<code>YES_NO_CANCEL_OPTION</code>,
+     *                  <code>YES_NO_OPTION</code>,
+     *                  <code>YES_NO_CANCEL_OPTION</code>,
      *                  <code>OK_CANCEL_OPTION</code>
      * @param icon the <code>Icon</code> image to display
      * @param options  the choices the user can select
@@ -1787,26 +1813,26 @@ public class JOptionPane extends JComponent implements Accessible
 
     /**
      * Creates an instance of <code>JOptionPane</code> to display a message
-     * with the specified message type, icon, and options, with the 
+     * with the specified message type, icon, and options, with the
      * initially-selected option specified.
      *
      * @param message the <code>Object</code> to display
      * @param messageType the type of message to be displayed:
      *                  <code>ERROR_MESSAGE</code>,
-     *			<code>INFORMATION_MESSAGE</code>,
-     *			<code>WARNING_MESSAGE</code>,
+     *                  <code>INFORMATION_MESSAGE</code>,
+     *                  <code>WARNING_MESSAGE</code>,
      *                  <code>QUESTION_MESSAGE</code>,
-     *			or <code>PLAIN_MESSAGE</code>
+     *                  or <code>PLAIN_MESSAGE</code>
      * @param optionType the options to display in the pane:
      *                  <code>DEFAULT_OPTION</code>,
-     *			<code>YES_NO_OPTION</code>,
-     *			<code>YES_NO_CANCEL_OPTION</code>,
+     *                  <code>YES_NO_OPTION</code>,
+     *                  <code>YES_NO_CANCEL_OPTION</code>,
      *                  <code>OK_CANCEL_OPTION</code>
      * @param icon the Icon image to display
      * @param options  the choices the user can select
      * @param initialValue the choice that is initially selected; if
-     *			<code>null</code>, then nothing will be initially selected;
-     *			only meaningful if <code>options</code> is used
+     *                  <code>null</code>, then nothing will be initially selected;
+     *                  only meaningful if <code>options</code> is used
      */
     public JOptionPane(Object message, int messageType, int optionType,
                        Icon icon, Object[] options, Object initialValue) {
@@ -1833,7 +1859,7 @@ public class JOptionPane extends JComponent implements Accessible
      * description: The UI object that implements the optionpane's LookAndFeel
      */
     public void setUI(OptionPaneUI ui) {
-        if ((OptionPaneUI)this.ui != ui) {
+        if (this.ui != ui) {
             super.setUI(ui);
             invalidate();
         }
@@ -1849,8 +1875,8 @@ public class JOptionPane extends JComponent implements Accessible
     }
 
     /**
-     * Notification from the <code>UIManager</code> that the L&F has changed. 
-     * Replaces the current UI object with the latest version from the 
+     * Notification from the <code>UIManager</code> that the L&F has changed.
+     * Replaces the current UI object with the latest version from the
      * <code>UIManager</code>.
      *
      * @see JComponent#updateUI
@@ -1901,7 +1927,7 @@ public class JOptionPane extends JComponent implements Accessible
     }
 
     /**
-     * Sets the icon to display. If non-<code>null</code>, the look and feel 
+     * Sets the icon to display. If non-<code>null</code>, the look and feel
      * does not provide an icon.
      * @param newIcon the <code>Icon</code> to display
      *
@@ -1929,7 +1955,7 @@ public class JOptionPane extends JComponent implements Accessible
     }
 
     /**
-     * Sets the value the user has chosen. 
+     * Sets the value the user has chosen.
      * @param newValue  the chosen value
      *
      * @see #getValue
@@ -1970,8 +1996,8 @@ public class JOptionPane extends JComponent implements Accessible
      * otherwise a button is created for the element.
      *
      * @param newOptions an array of <code>Objects</code> that create the
-     *		buttons the user can click on, or arbitrary 
-     *		<code>Components</code> to add to the pane
+     *          buttons the user can click on, or arbitrary
+     *          <code>Components</code> to add to the pane
      *
      * @see #getOptions
      * @beaninfo
@@ -2007,7 +2033,7 @@ public class JOptionPane extends JComponent implements Accessible
      * <code>Component</code>
      * that has the focus when the pane is initially displayed.
      *
-     * @param newInitialValue the <code>Object</code> that gets the initial 
+     * @param newInitialValue the <code>Object</code> that gets the initial
      *                         keyboard focus
      *
      * @see #getInitialValue
@@ -2044,7 +2070,7 @@ public class JOptionPane extends JComponent implements Accessible
      *                <code>WARNING_MESSAGE</code>,
      *                <code>QUESTION_MESSAGE</code>, or <code>PLAIN_MESSAGE</code>
      * @exception RuntimeException if <code>newType</code> is not one of the
-     *		legal values listed above
+     *          legal values listed above
 
      * @see #getMessageType
      * @beaninfo
@@ -2076,16 +2102,16 @@ public class JOptionPane extends JComponent implements Accessible
     }
 
     /**
-     * Sets the options to display. 
+     * Sets the options to display.
      * The option type is used by the Look and Feel to
      * determine what buttons to show (unless options are supplied).
      * @param newType an integer specifying the options the L&F is to display:
-     *                	<code>DEFAULT_OPTION</code>, 
-     *			<code>YES_NO_OPTION</code>,
-     *			<code>YES_NO_CANCEL_OPTION</code>,
-     *                	or <code>OK_CANCEL_OPTION</code>
+     *                  <code>DEFAULT_OPTION</code>,
+     *                  <code>YES_NO_OPTION</code>,
+     *                  <code>YES_NO_CANCEL_OPTION</code>,
+     *                  or <code>OK_CANCEL_OPTION</code>
      * @exception RuntimeException if <code>newType</code> is not one of
-     *		the legal values listed above
+     *          the legal values listed above
      *
      * @see #getOptionType
      * @see #setOptions
@@ -2116,19 +2142,19 @@ public class JOptionPane extends JComponent implements Accessible
         return optionType;
     }
 
-    /** 
+    /**
      * Sets the input selection values for a pane that provides the user
-     * with a list of items to choose from. (The UI provides a widget 
+     * with a list of items to choose from. (The UI provides a widget
      * for choosing one of the values.)  A <code>null</code> value
-     * implies the user can input whatever they wish, usually by means 
-     * of a <code>JTextField</code>.  
+     * implies the user can input whatever they wish, usually by means
+     * of a <code>JTextField</code>.
      * <p>
      * Sets <code>wantsInput</code> to true. Use
      * <code>setInitialSelectionValue</code> to specify the initially-chosen
-     * value. After the pane as been enabled, <code>inputValue</code> is 
+     * value. After the pane as been enabled, <code>inputValue</code> is
      * set to the value the user has selected.
      * @param newValues an array of <code>Objects</code> the user to be
-     *			displayed
+     *                  displayed
      *                  (usually in a list or combo-box) from which
      *                  the user can make a selection
      * @see #setWantsInput
@@ -2158,7 +2184,7 @@ public class JOptionPane extends JComponent implements Accessible
     }
 
     /**
-     * Sets the input value that is initially displayed as selected to the user. 
+     * Sets the input value that is initially displayed as selected to the user.
      * Only used if <code>wantsInput</code> is true.
      * @param newValue the initially selected value
      * @see #setSelectionValues
@@ -2189,13 +2215,13 @@ public class JOptionPane extends JComponent implements Accessible
     /**
      * Sets the input value that was selected or input by the user.
      * Only used if <code>wantsInput</code> is true.  Note that this method
-     * is invoked internally by the option pane (in response to user action) 
+     * is invoked internally by the option pane (in response to user action)
      * and should generally not be called by client programs.  To set the
      * input value initially displayed as selected to the user, use
      * <code>setInitialSelectionValue</code>.
      *
      * @param newValue the <code>Object</code> used to set the
-     *		value that the user specified (usually in a text field)
+     *          value that the user specified (usually in a text field)
      * @see #setSelectionValues
      * @see #setInitialSelectionValue
      * @see #setWantsInput
@@ -2217,9 +2243,9 @@ public class JOptionPane extends JComponent implements Accessible
      * is true.
      *
      * @return the <code>Object</code> the user specified,
-     *		if it was one of the objects, or a 
-     *         	<code>String</code> if it was a value typed into a
-     *         	field
+     *          if it was one of the objects, or a
+     *          <code>String</code> if it was a value typed into a
+     *          field
      * @see #setSelectionValues
      * @see #setWantsInput
      * @see #setInputValue
@@ -2231,7 +2257,7 @@ public class JOptionPane extends JComponent implements Accessible
     /**
      * Returns the maximum number of characters to place on a line in a
      * message. Default is to return <code>Integer.MAX_VALUE</code>.
-     * The value can be 
+     * The value can be
      * changed by overriding this method in a subclass.
      *
      * @return an integer giving the maximum number of characters on a line
@@ -2289,7 +2315,7 @@ public class JOptionPane extends JComponent implements Accessible
         }
     }
 
-    
+
     private static int styleFromMessageType(int messageType) {
         switch (messageType) {
         case ERROR_MESSAGE:
@@ -2304,11 +2330,11 @@ public class JOptionPane extends JComponent implements Accessible
         default:
             return JRootPane.PLAIN_DIALOG;
         }
-    }    
-    
-    // Serialization support.  
+    }
+
+    // Serialization support.
     private void writeObject(ObjectOutputStream s) throws IOException {
-        Vector      values = new Vector();
+        Vector<Object> values = new Vector<Object>();
 
         s.defaultWriteObject();
         // Save the icon, if its Serializable.
@@ -2323,7 +2349,7 @@ public class JOptionPane extends JComponent implements Accessible
         }
         // Save the treeModel, if its Serializable.
         if(options != null) {
-            Vector           serOptions = new Vector();
+            Vector<Object> serOptions = new Vector<Object>();
 
             for(int counter = 0, maxCounter = options.length;
                 counter < maxCounter; counter++)
@@ -2379,7 +2405,7 @@ public class JOptionPane extends JComponent implements Accessible
         s.writeObject(values);
     }
 
-    private void readObject(ObjectInputStream s) 
+    private void readObject(ObjectInputStream s)
         throws IOException, ClassNotFoundException {
         s.defaultReadObject();
 
@@ -2439,21 +2465,21 @@ public class JOptionPane extends JComponent implements Accessible
 
     /**
      * Returns a string representation of this <code>JOptionPane</code>.
-     * This method 
-     * is intended to be used only for debugging purposes, and the 
-     * content and format of the returned string may vary between      
-     * implementations. The returned string may be empty but may not 
+     * This method
+     * is intended to be used only for debugging purposes, and the
+     * content and format of the returned string may vary between
+     * implementations. The returned string may be empty but may not
      * be <code>null</code>.
-     * 
+     *
      * @return  a string representation of this <code>JOptionPane</code>
      */
     protected String paramString() {
         String iconString = (icon != null ?
-			     icon.toString() : "");
+                             icon.toString() : "");
         String initialValueString = (initialValue != null ?
-				     initialValue.toString() : "");
+                                     initialValue.toString() : "");
         String messageString = (message != null ?
-				message.toString() : "");
+                                message.toString() : "");
         String messageTypeString;
         if (messageType == ERROR_MESSAGE) {
             messageTypeString = "ERROR_MESSAGE";
@@ -2477,7 +2503,7 @@ public class JOptionPane extends JComponent implements Accessible
             optionTypeString = "OK_CANCEL_OPTION";
         } else optionTypeString = "";
         String wantsInputString = (wantsInput ?
-				   "true" : "false");
+                                   "true" : "false");
 
         return super.paramString() +
         ",icon=" + iconString +
@@ -2491,16 +2517,16 @@ public class JOptionPane extends JComponent implements Accessible
     /**
      * Retrieves a method from the provided class and makes it accessible.
      */
-    private static class ModalPrivilegedAction implements PrivilegedAction {
-        private Class clazz;
+    private static class ModalPrivilegedAction implements PrivilegedAction<Method> {
+        private Class<?> clazz;
         private String methodName;
 
-        public ModalPrivilegedAction(Class clazz, String methodName) {
+        public ModalPrivilegedAction(Class<?> clazz, String methodName) {
             this.clazz = clazz;
             this.methodName = methodName;
         }
 
-        public Object run() {
+        public Method run() {
             Method method = null;
             try {
                 method = clazz.getDeclaredMethod(methodName, (Class[])null);
@@ -2520,12 +2546,12 @@ public class JOptionPane extends JComponent implements Accessible
 ///////////////////
 
     /**
-     * Returns the <code>AccessibleContext</code> associated with this JOptionPane. 
-     * For option panes, the <code>AccessibleContext</code> takes the form of an 
-     * <code>AccessibleJOptionPane</code>. 
+     * Returns the <code>AccessibleContext</code> associated with this JOptionPane.
+     * For option panes, the <code>AccessibleContext</code> takes the form of an
+     * <code>AccessibleJOptionPane</code>.
      * A new <code>AccessibleJOptionPane</code> instance is created if necessary.
      *
-     * @return an AccessibleJOptionPane that serves as the 
+     * @return an AccessibleJOptionPane that serves as the
      *         AccessibleContext of this AccessibleJOptionPane
      * @beaninfo
      *       expert: true
@@ -2539,9 +2565,9 @@ public class JOptionPane extends JComponent implements Accessible
     }
 
     /**
-     * This class implements accessibility support for the 
-     * <code>JOptionPane</code> class.  It provides an implementation of the 
-     * Java Accessibility API appropriate to option pane user-interface 
+     * This class implements accessibility support for the
+     * <code>JOptionPane</code> class.  It provides an implementation of the
+     * Java Accessibility API appropriate to option pane user-interface
      * elements.
      * <p>
      * <strong>Warning:</strong>
@@ -2562,17 +2588,16 @@ public class JOptionPane extends JComponent implements Accessible
          * @see AccessibleRole
          */
         public AccessibleRole getAccessibleRole() {
-	    switch (messageType) {
-	    case ERROR_MESSAGE:
-	    case INFORMATION_MESSAGE:
-	    case WARNING_MESSAGE:
-		return AccessibleRole.ALERT;
+            switch (messageType) {
+            case ERROR_MESSAGE:
+            case INFORMATION_MESSAGE:
+            case WARNING_MESSAGE:
+                return AccessibleRole.ALERT;
 
-	    default:
-		return AccessibleRole.OPTION_PANE;
-	    }
+            default:
+                return AccessibleRole.OPTION_PANE;
+            }
         }
 
     } // inner class AccessibleJOptionPane
 }
-
