@@ -1,8 +1,26 @@
 /*
- * @(#)BasicTabbedPaneUI.java	1.173 09/02/27
+ * Copyright (c) 1997, 2010, Oracle and/or its affiliates. All rights reserved.
+ * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  *
- * Copyright 2006 Sun Microsystems, Inc. All rights reserved.
- * SUN PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
  */
 
 package javax.swing.plaf.basic;
@@ -27,7 +45,6 @@ import sun.swing.UIAction;
 /**
  * A Basic L&F implementation of TabbedPaneUI.
  *
- * @version 1.87 06/08/99
  * @author Amy Fowler
  * @author Philip Milne
  * @author Steve Wilson
@@ -107,7 +124,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
     protected int tabRuns[] = new int[10];
     protected int runCount = 0;
     protected int selectedRun = -1;
-    protected Rectangle rects[] = new Rectangle[0]; 
+    protected Rectangle rects[] = new Rectangle[0];
     protected int maxTabHeight;
     protected int maxTabWidth;
 
@@ -125,9 +142,9 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
 
     private Component visibleComponent;
     // PENDING(api): See comment for ContainerHandler
-    private Vector htmlViews;
+    private Vector<View> htmlViews;
 
-    private Hashtable mnemonicToIndexMap;
+    private Hashtable<Integer, Integer> mnemonicToIndexMap;
 
     /**
      * InputMap used for mnemonics. Only non-null if the JTabbedPane has
@@ -139,7 +156,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
     private ScrollableTabSupport tabScroller;
 
     private TabContainer tabContainer;
-    
+
     /**
      * A rectangle used for general layout calculations in order
      * to avoid constructing many new Rectangles on the fly.
@@ -195,7 +212,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
     }
 
 // UI Installation/De-installation
-    
+
     public void installUI(JComponent c) {
         this.tabPane = (JTabbedPane)c;
 
@@ -204,7 +221,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         focusIndex = -1;
         c.setLayout(createLayoutManager());
         installComponents();
-        installDefaults(); 
+        installDefaults();
         installListeners();
         installKeyboardActions();
     }
@@ -215,7 +232,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         uninstallDefaults();
         uninstallComponents();
         c.setLayout(null);
- 
+
         this.tabPane = null;
     }
 
@@ -261,7 +278,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         }
         installTabContainer();
     }
-    
+
     private void installTabContainer() {
          for (int i = 0; i < tabPane.getTabCount(); i++) {
              Component tabComponent = tabPane.getTabComponentAt(i);
@@ -289,7 +306,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
      *
      * @param direction One of the SwingConstants constants:
      * SOUTH, NORTH, EAST or WEST
-     * @return Widget for user to 
+     * @return Widget for user to
      * @see javax.swing.JTabbedPane#setTabPlacement
      * @see javax.swing.SwingConstants
      * @throws IllegalArgumentException if direction is not one of
@@ -320,7 +337,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
             tabScroller = null;
         }
     }
-    
+
     private void uninstallTabContainer() {
          if(tabContainer == null) {
              return;
@@ -333,14 +350,14 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
              tabContainer.remove(tabScroller.croppedEdge);
              tabScroller.tabPanel.remove(tabContainer);
          } else {
-           tabPane.remove(tabContainer);  
+           tabPane.remove(tabContainer);
          }
          tabContainer = null;
     }
 
     protected void installDefaults() {
         LookAndFeel.installColorsAndFont(tabPane, "TabbedPane.background",
-                                    "TabbedPane.foreground", "TabbedPane.font");     
+                                    "TabbedPane.foreground", "TabbedPane.font");
         highlight = UIManager.getColor("TabbedPane.light");
         lightHighlight = UIManager.getColor("TabbedPane.highlight");
         shadow = UIManager.getColor("TabbedPane.shadow");
@@ -388,7 +405,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         if ((propertyChangeListener = createPropertyChangeListener()) != null) {
             tabPane.addPropertyChangeListener(propertyChangeListener);
         }
-        if ((tabChangeListener = createChangeListener()) != null) {            
+        if ((tabChangeListener = createChangeListener()) != null) {
             tabPane.addChangeListener(tabChangeListener);
         }
         if ((mouseListener = createMouseListener()) != null) {
@@ -414,7 +431,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
             tabPane.removeFocusListener(focusListener);
             focusListener = null;
         }
-            
+
         tabPane.removeContainerListener(getHandler());
         if (htmlViews!=null) {
             htmlViews.removeAllElements();
@@ -437,7 +454,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
 
     protected FocusListener createFocusListener() {
         return getHandler();
-    }    
+    }
 
     protected ChangeListener createChangeListener() {
         return getHandler();
@@ -530,14 +547,14 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         }
         mnemonicInputMap.put(KeyStroke.getKeyStroke(mnemonic, Event.ALT_MASK),
                              "setSelectedIndex");
-        mnemonicToIndexMap.put(new Integer(mnemonic), new Integer(index));
+        mnemonicToIndexMap.put(Integer.valueOf(mnemonic), Integer.valueOf(index));
     }
 
     /**
      * Installs the state needed for mnemonics.
      */
     private void initMnemonics() {
-        mnemonicToIndexMap = new Hashtable();
+        mnemonicToIndexMap = new Hashtable<Integer, Integer>();
         mnemonicInputMap = new ComponentInputMapUIResource(tabPane);
         mnemonicInputMap.setParent(SwingUtilities.getUIInputMap(tabPane,
                               JComponent.WHEN_IN_FOCUSED_WINDOW));
@@ -587,7 +604,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         // Default to LayoutManager's minimumLayoutSize
         return null;
     }
-    
+
     public Dimension getMaximumSize(JComponent c) {
         // Default to LayoutManager's maximumLayoutSize
         return null;
@@ -651,7 +668,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
      * Returns the baseline for the specified tab.
      *
      * @param tab index of tab to get baseline for
-     * @exception IndexOutOfBoundsException if index is out of range 
+     * @exception IndexOutOfBoundsException if index is out of range
      *            (index < 0 || index >= tab count)
      * @return baseline or a value &lt; 0 indicating there is no reasonable
      *                  baseline
@@ -761,7 +778,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         }
     }
 
-// UI Rendering 
+// UI Rendering
 
     public void paint(Graphics g, JComponent c) {
         int selectedIndex = tabPane.getSelectedIndex();
@@ -770,25 +787,25 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         ensureCurrentLayout();
 
         // Paint content border and tab area
-	if (tabsOverlapBorder) {
-	    paintContentBorder(g, tabPlacement, selectedIndex);
-	}
+        if (tabsOverlapBorder) {
+            paintContentBorder(g, tabPlacement, selectedIndex);
+        }
         // If scrollable tabs are enabled, the tab area will be
         // painted by the scrollable tab panel instead.
         //
         if (!scrollableTabLayoutEnabled()) { // WRAP_TAB_LAYOUT
             paintTabArea(g, tabPlacement, selectedIndex);
         }
-	if (!tabsOverlapBorder) {
-	    paintContentBorder(g, tabPlacement, selectedIndex);
-	}
+        if (!tabsOverlapBorder) {
+            paintContentBorder(g, tabPlacement, selectedIndex);
+        }
     }
 
     /**
      * Paints the tabs in the tab area.
      * Invoked by paint().
      * The graphics parameter must be a valid <code>Graphics</code>
-     * object.  Tab placement may be either: 
+     * object.  Tab placement may be either:
      * <code>JTabbedPane.TOP</code>, <code>JTabbedPane.BOTTOM</code>,
      * <code>JTabbedPane.LEFT</code>, or <code>JTabbedPane.RIGHT</code>.
      * The selected index must be a valid tabbed pane tab index (0 to
@@ -806,7 +823,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
 
         Rectangle iconRect = new Rectangle(),
                   textRect = new Rectangle();
-        Rectangle clipRect = g.getClipBounds();  
+        Rectangle clipRect = g.getClipBounds();
 
         // Paint tabRuns of tabs from back to front
         for (int i = runCount - 1; i >= 0; i--) {
@@ -828,7 +845,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
     }
 
     protected void paintTab(Graphics g, int tabPlacement,
-                            Rectangle[] rects, int tabIndex, 
+                            Rectangle[] rects, int tabIndex,
                             Rectangle iconRect, Rectangle textRect) {
         Rectangle tabRect = rects[tabIndex];
         int selectedIndex = tabPane.getSelectedIndex();
@@ -839,15 +856,15 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                     tabRect.width, tabRect.height, isSelected);
         }
 
-        paintTabBorder(g, tabPlacement, tabIndex, tabRect.x, tabRect.y, 
+        paintTabBorder(g, tabPlacement, tabIndex, tabRect.x, tabRect.y,
                        tabRect.width, tabRect.height, isSelected);
-        
+
         String title = tabPane.getTitleAt(tabIndex);
         Font font = tabPane.getFont();
         FontMetrics metrics = SwingUtilities2.getFontMetrics(tabPane, g, font);
         Icon icon = getIconForTab(tabIndex);
 
-        layoutLabel(tabPlacement, metrics, tabIndex, title, icon, 
+        layoutLabel(tabPlacement, metrics, tabIndex, title, icon,
                     tabRect, iconRect, textRect, isSelected);
 
         if (tabPane.getTabComponentAt(tabIndex) == null) {
@@ -865,12 +882,12 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
 
             paintIcon(g, tabPlacement, tabIndex, icon, iconRect, isSelected);
         }
-        paintFocusIndicator(g, tabPlacement, rects, tabIndex, 
+        paintFocusIndicator(g, tabPlacement, rects, tabIndex,
                   iconRect, textRect, isSelected);
     }
 
     private boolean isHorizontalTabPlacement() {
-        return tabPane.getTabPlacement() == TOP || tabPane.getTabPlacement() == BOTTOM; 
+        return tabPane.getTabPlacement() == TOP || tabPane.getTabPlacement() == BOTTOM;
     }
 
     /* This method will create and return a polygon shape for the given tab rectangle
@@ -900,10 +917,10 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
     private static final int CROP_SEGMENT = 12;
 
     private static Polygon createCroppedTabShape(int tabPlacement, Rectangle tabRect, int cropline) {
-        int rlen = 0;
-        int start = 0;
-        int end = 0;
-        int ostart = 0;
+        int rlen;
+        int start;
+        int end;
+        int ostart;
 
         switch(tabPlacement) {
           case LEFT:
@@ -916,7 +933,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
           case TOP:
           case BOTTOM:
           default:
-             rlen = tabRect.height;            
+             rlen = tabRect.height;
              start = tabRect.y;
              end = tabRect.y + tabRect.height;
              ostart = tabRect.x + tabRect.width;
@@ -929,7 +946,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         int xp[] = new int[npts];
         int yp[] = new int[npts];
         int pcnt = 0;
- 
+
         xp[pcnt] = ostart;
         yp[pcnt++] = end;
         xp[pcnt] = ostart;
@@ -944,14 +961,14 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                     break;
                 }
                 pcnt++;
-            }                           
+            }
         }
         if (tabPlacement == JTabbedPane.TOP || tabPlacement == JTabbedPane.BOTTOM) {
            return new Polygon(xp, yp, pcnt);
 
         } else { // LEFT or RIGHT
            return new Polygon(yp, xp, pcnt);
-        }           
+        }
     }
 
     /* If tabLayoutPolicy == SCROLL_TAB_LAYOUT, this method will paint an edge
@@ -960,12 +977,12 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
     private void paintCroppedTabEdge(Graphics g) {
         int tabIndex = tabScroller.croppedEdge.getTabIndex();
         int cropline = tabScroller.croppedEdge.getCropline();
-        int x,y; 
+        int x,y;
         switch(tabPane.getTabPlacement()) {
           case LEFT:
           case RIGHT:
             x = rects[tabIndex].x;
-            y = cropline; 
+            y = cropline;
             int xx = x;
             g.setColor(shadow);
             while(xx <= x+rects[tabIndex].width) {
@@ -974,14 +991,14 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                                xx+yCropLen[i+1]-1,y-xCropLen[i+1]);
                 }
                 xx+=CROP_SEGMENT;
-            }       
+            }
             break;
           case TOP:
           case BOTTOM:
           default:
             x = cropline;
-            y = rects[tabIndex].y; 
-            int yy = y;       
+            y = rects[tabIndex].y;
+            int yy = y;
             g.setColor(shadow);
             while(yy <= y+rects[tabIndex].height) {
                 for (int i=0; i < xCropLen.length; i+=2) {
@@ -989,14 +1006,14 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                                x-xCropLen[i+1],yy+yCropLen[i+1]-1);
                 }
                 yy+=CROP_SEGMENT;
-            }       
+            }
         }
     }
 
-    protected void layoutLabel(int tabPlacement, 
+    protected void layoutLabel(int tabPlacement,
                                FontMetrics metrics, int tabIndex,
                                String title, Icon icon,
-                               Rectangle tabRect, Rectangle iconRect, 
+                               Rectangle tabRect, Rectangle iconRect,
                                Rectangle textRect, boolean isSelected ) {
         textRect.x = textRect.y = iconRect.x = iconRect.y = 0;
 
@@ -1005,7 +1022,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
             tabPane.putClientProperty("html", v);
         }
 
-        SwingUtilities.layoutCompoundLabel((JComponent) tabPane,
+        SwingUtilities.layoutCompoundLabel(tabPane,
                                            metrics, title, icon,
                                            SwingUtilities.CENTER,
                                            SwingUtilities.CENTER,
@@ -1027,7 +1044,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
     }
 
     protected void paintIcon(Graphics g, int tabPlacement,
-                             int tabIndex, Icon icon, Rectangle iconRect, 
+                             int tabIndex, Icon icon, Rectangle iconRect,
                              boolean isSelected ) {
         if (icon != null) {
             icon.paintIcon(tabPane, g, iconRect.x, iconRect.y);
@@ -1036,7 +1053,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
 
     protected void paintText(Graphics g, int tabPlacement,
                              Font font, FontMetrics metrics, int tabIndex,
-                             String title, Rectangle textRect, 
+                             String title, Rectangle textRect,
                              boolean isSelected) {
 
         g.setFont(font);
@@ -1062,7 +1079,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                 SwingUtilities2.drawStringUnderlineCharAt(tabPane, g,
                              title, mnemIndex,
                              textRect.x, textRect.y + metrics.getAscent());
-                
+
             } else { // tab disabled
                 g.setColor(tabPane.getBackgroundAt(tabIndex).brighter());
                 SwingUtilities2.drawStringUnderlineCharAt(tabPane, g,
@@ -1075,47 +1092,47 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
 
             }
         }
-    } 
+    }
 
 
     protected int getTabLabelShiftX(int tabPlacement, int tabIndex, boolean isSelected) {
         Rectangle tabRect = rects[tabIndex];
-        int nudge = 0;
-        switch(tabPlacement) {
-          case LEFT:
-              nudge = isSelected? -1 : 1;
-              break;
-          case RIGHT:
-              nudge = isSelected? 1 : -1;
-              break;
-          case BOTTOM:
-          case TOP:
-          default:
-              nudge = tabRect.width % 2;
+        String propKey = (isSelected ? "selectedLabelShift" : "labelShift");
+        int nudge = DefaultLookup.getInt(
+                tabPane, this, "TabbedPane." + propKey, 1);
+
+        switch (tabPlacement) {
+            case LEFT:
+                return nudge;
+            case RIGHT:
+                return -nudge;
+            case BOTTOM:
+            case TOP:
+            default:
+                return tabRect.width % 2;
         }
-        return nudge;
     }
 
     protected int getTabLabelShiftY(int tabPlacement, int tabIndex, boolean isSelected) {
         Rectangle tabRect = rects[tabIndex];
-        int nudge = 0;
-        switch(tabPlacement) {
-           case BOTTOM:
-              nudge = isSelected? 1 : -1;
-              break;
-          case LEFT:
-          case RIGHT:
-              nudge = tabRect.height % 2;
-              break;
-          case TOP:
-          default:
-              nudge = isSelected? -1 : 1;;
+        String propKey = (isSelected ? "selectedLabelShift" : "labelShift");
+        int nudge = DefaultLookup.getInt(
+                tabPane, this, "TabbedPane." + propKey, 1);
+
+        switch (tabPlacement) {
+            case BOTTOM:
+                return -nudge;
+            case LEFT:
+            case RIGHT:
+                return tabRect.height % 2;
+            case TOP:
+            default:
+                return nudge;
         }
-        return nudge;
     }
 
     protected void paintFocusIndicator(Graphics g, int tabPlacement,
-                                       Rectangle[] rects, int tabIndex, 
+                                       Rectangle[] rects, int tabIndex,
                                        Rectangle iconRect, Rectangle textRect,
                                        boolean isSelected) {
         Rectangle tabRect = rects[tabIndex];
@@ -1159,9 +1176,9 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
       */
     protected void paintTabBorder(Graphics g, int tabPlacement,
                                   int tabIndex,
-                                  int x, int y, int w, int h, 
+                                  int x, int y, int w, int h,
                                   boolean isSelected ) {
-        g.setColor(lightHighlight);  
+        g.setColor(lightHighlight);
 
         switch (tabPlacement) {
           case LEFT:
@@ -1188,7 +1205,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
               g.drawLine(x+w-2, y+h-2, x+w-2, y+h-2); // bottom-right dark shadow
               g.drawLine(x+w-1, y+2, x+w-1, y+h-3); // right dark shadow
               g.drawLine(x, y+h-1, x+w-3, y+h-1); // bottom dark shadow
-              break;              
+              break;
           case BOTTOM:
               g.drawLine(x, y, x, y+h-3); // left highlight
               g.drawLine(x+1, y+h-2, x+1, y+h-2); // bottom-left highlight
@@ -1203,15 +1220,15 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
               g.drawLine(x+w-1, y, x+w-1, y+h-3); // right dark shadow
               break;
           case TOP:
-          default:           
+          default:
               g.drawLine(x, y+2, x, y+h-1); // left highlight
               g.drawLine(x+1, y+1, x+1, y+1); // top-left highlight
-              g.drawLine(x+2, y, x+w-3, y); // top highlight              
+              g.drawLine(x+2, y, x+w-3, y); // top highlight
 
-              g.setColor(shadow);  
+              g.setColor(shadow);
               g.drawLine(x+w-2, y+2, x+w-2, y+h-1); // right shadow
 
-              g.setColor(darkShadow); 
+              g.setColor(darkShadow);
               g.drawLine(x+w-1, y+2, x+w-1, y+h-1); // right dark-shadow
               g.drawLine(x+w-2, y+1, x+w-2, y+1); // top-right shadow
         }
@@ -1219,9 +1236,9 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
 
     protected void paintTabBackground(Graphics g, int tabPlacement,
                                       int tabIndex,
-                                      int x, int y, int w, int h, 
+                                      int x, int y, int w, int h,
                                       boolean isSelected ) {
-        g.setColor(!isSelected || selectedColor == null? 
+        g.setColor(!isSelected || selectedColor == null?
                    tabPane.getBackgroundAt(tabIndex) : selectedColor);
         switch(tabPlacement) {
           case LEFT:
@@ -1253,31 +1270,31 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         switch(tabPlacement) {
           case LEFT:
               x += calculateTabAreaWidth(tabPlacement, runCount, maxTabWidth);
-	      if (tabsOverlapBorder) {
-		  x -= tabAreaInsets.right;
-	      }
+              if (tabsOverlapBorder) {
+                  x -= tabAreaInsets.right;
+              }
               w -= (x - insets.left);
               break;
           case RIGHT:
               w -= calculateTabAreaWidth(tabPlacement, runCount, maxTabWidth);
-	      if (tabsOverlapBorder) {
-		  w += tabAreaInsets.left;
-	      }
-              break;            
-          case BOTTOM: 
+              if (tabsOverlapBorder) {
+                  w += tabAreaInsets.left;
+              }
+              break;
+          case BOTTOM:
               h -= calculateTabAreaHeight(tabPlacement, runCount, maxTabHeight);
-	      if (tabsOverlapBorder) {
-		  h += tabAreaInsets.top;
-	      }
+              if (tabsOverlapBorder) {
+                  h += tabAreaInsets.top;
+              }
               break;
           case TOP:
           default:
               y += calculateTabAreaHeight(tabPlacement, runCount, maxTabHeight);
-	      if (tabsOverlapBorder) {
-		  y -= tabAreaInsets.bottom;
-	      }
+              if (tabsOverlapBorder) {
+                  y -= tabAreaInsets.bottom;
+              }
               h -= (y - insets.top);
-        } 
+        }
 
             if ( tabPane.getTabCount() > 0 && (contentOpaque || tabPane.isOpaque()) ) {
             // Fill region behind content area
@@ -1295,14 +1312,14 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         }
 
         paintContentBorderTopEdge(g, tabPlacement, selectedIndex, x, y, w, h);
-        paintContentBorderLeftEdge(g, tabPlacement, selectedIndex, x, y, w, h); 
+        paintContentBorderLeftEdge(g, tabPlacement, selectedIndex, x, y, w, h);
         paintContentBorderBottomEdge(g, tabPlacement, selectedIndex, x, y, w, h);
-        paintContentBorderRightEdge(g, tabPlacement, selectedIndex, x, y, w, h); 
+        paintContentBorderRightEdge(g, tabPlacement, selectedIndex, x, y, w, h);
 
     }
-         
+
     protected void paintContentBorderTopEdge(Graphics g, int tabPlacement,
-                                         int selectedIndex, 
+                                         int selectedIndex,
                                          int x, int y, int w, int h) {
         Rectangle selRect = selectedIndex < 0? null :
                                getTabBounds(selectedIndex, calcRect);
@@ -1313,7 +1330,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         // selected tab is not in run adjacent to content, OR
         // selected tab is not visible (SCROLL_TAB_LAYOUT)
         //
-        if (tabPlacement != TOP || selectedIndex < 0 || 
+        if (tabPlacement != TOP || selectedIndex < 0 ||
             (selRect.y + selRect.height + 1 < y) ||
             (selRect.x < x || selRect.x > x + w)) {
             g.drawLine(x, y, x+w-2, y);
@@ -1321,10 +1338,10 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
             // Break line to show visual connection to selected tab
             g.drawLine(x, y, selRect.x - 1, y);
             if (selRect.x + selRect.width < x + w - 2) {
-                g.drawLine(selRect.x + selRect.width, y, 
+                g.drawLine(selRect.x + selRect.width, y,
                            x+w-2, y);
             } else {
-                g.setColor(shadow); 
+                g.setColor(shadow);
                 g.drawLine(x+w-2, y, x+w-2, y);
             }
         }
@@ -1332,11 +1349,11 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
 
     protected void paintContentBorderLeftEdge(Graphics g, int tabPlacement,
                                                int selectedIndex,
-                                               int x, int y, int w, int h) { 
+                                               int x, int y, int w, int h) {
         Rectangle selRect = selectedIndex < 0? null :
                                getTabBounds(selectedIndex, calcRect);
 
-        g.setColor(lightHighlight); 
+        g.setColor(lightHighlight);
 
         // Draw unbroken line if tabs are not on LEFT, OR
         // selected tab is not in run adjacent to content, OR
@@ -1350,15 +1367,15 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
             // Break line to show visual connection to selected tab
             g.drawLine(x, y, x, selRect.y - 1);
             if (selRect.y + selRect.height < y + h - 2) {
-                g.drawLine(x, selRect.y + selRect.height, 
+                g.drawLine(x, selRect.y + selRect.height,
                            x, y+h-2);
-            } 
+            }
         }
     }
 
     protected void paintContentBorderBottomEdge(Graphics g, int tabPlacement,
                                                int selectedIndex,
-                                               int x, int y, int w, int h) { 
+                                               int x, int y, int w, int h) {
         Rectangle selRect = selectedIndex < 0? null :
                                getTabBounds(selectedIndex, calcRect);
 
@@ -1384,7 +1401,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                 g.drawLine(selRect.x + selRect.width, y+h-2, x+w-2, y+h-2);
                 g.setColor(darkShadow);
                 g.drawLine(selRect.x + selRect.width, y+h-1, x+w-1, y+h-1);
-            } 
+            }
         }
 
     }
@@ -1415,29 +1432,29 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
 
             if (selRect.y + selRect.height < y + h - 2) {
                 g.setColor(shadow);
-                g.drawLine(x+w-2, selRect.y + selRect.height, 
+                g.drawLine(x+w-2, selRect.y + selRect.height,
                            x+w-2, y+h-2);
                 g.setColor(darkShadow);
-                g.drawLine(x+w-1, selRect.y + selRect.height, 
+                g.drawLine(x+w-1, selRect.y + selRect.height,
                            x+w-1, y+h-2);
-            } 
+            }
         }
     }
 
     private void ensureCurrentLayout() {
         if (!tabPane.isValid()) {
             tabPane.validate();
-        } 
+        }
         /* If tabPane doesn't have a peer yet, the validate() call will
          * silently fail.  We handle that by forcing a layout if tabPane
          * is still invalid.  See bug 4237677.
          */
         if (!tabPane.isValid()) {
             TabbedPaneLayout layout = (TabbedPaneLayout)tabPane.getLayout();
-            layout.calculateLayoutInfo();          
+            layout.calculateLayoutInfo();
         }
-    }       
-    
+    }
+
 
 // TabbedPaneUI methods
 
@@ -1445,7 +1462,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
      * Returns the bounds of the specified tab index.  The bounds are
      * with respect to the JTabbedPane's coordinate space.
      */
-    public Rectangle getTabBounds(JTabbedPane pane, int i) { 
+    public Rectangle getTabBounds(JTabbedPane pane, int i) {
         ensureCurrentLayout();
         Rectangle tabRect = new Rectangle();
         return getTabBounds(i, tabRect);
@@ -1501,7 +1518,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
      * This method should be used whenever the tab rectangle must be relative
      * to the JTabbedPane itself and the result should be placed in a
      * designated Rectangle object (rather than instantiating and returning
-     * a new Rectangle each time). The tab index parameter must be a valid 
+     * a new Rectangle each time). The tab index parameter must be a valid
      * tabbed pane tab index (0 to tab count - 1, inclusive).  The destination
      * rectangle parameter must be a valid <code>Rectangle</code> instance.
      * The handling of invalid parameters is unspecified.
@@ -1517,7 +1534,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         dest.height = rects[tabIndex].height;
 
         if (scrollableTabLayoutEnabled()) { // SCROLL_TAB_LAYOUT
-            // Need to translate coordinates based on viewport location & 
+            // Need to translate coordinates based on viewport location &
             // view position
             Point vpp = tabScroller.viewport.getLocation();
             Point viewp = tabScroller.viewport.getViewPosition();
@@ -1609,16 +1626,16 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
     }
 
     protected void assureRectsCreated(int tabCount) {
-        int rectArrayLen = rects.length; 
+        int rectArrayLen = rects.length;
         if (tabCount != rectArrayLen ) {
             Rectangle[] tempRectArray = new Rectangle[tabCount];
-            System.arraycopy(rects, 0, tempRectArray, 0, 
+            System.arraycopy(rects, 0, tempRectArray, 0,
                              Math.min(rectArrayLen, tabCount));
             rects = tempRectArray;
             for (int rectIndex = rectArrayLen; rectIndex < tabCount; rectIndex++) {
                 rects[rectIndex] = new Rectangle();
             }
-        } 
+        }
 
     }
 
@@ -1672,7 +1689,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                           tabPane.getDisabledIconAt(tabIndex) : tabPane.getIconAt(tabIndex);
     }
 
-    /** 
+    /**
      * Returns the text View object required to render stylized text (HTML) for
      * the specified tab or null if no specialized text rendering is needed
      * for this tab. This is provided to support html rendering inside tabs.
@@ -1685,7 +1702,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
      */
     protected View getTextViewForTab(int tabIndex) {
         if (htmlViews != null) {
-            return (View)htmlViews.elementAt(tabIndex);
+            return htmlViews.elementAt(tabIndex);
         }
         return null;
     }
@@ -1713,17 +1730,17 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         Insets tabInsets = getTabInsets(tabPlacement, tabIndex);
         height += tabInsets.top + tabInsets.bottom + 2;
         return height;
-    } 
+    }
 
     protected int calculateMaxTabHeight(int tabPlacement) {
         FontMetrics metrics = getFontMetrics();
         int tabCount = tabPane.getTabCount();
-        int result = 0; 
+        int result = 0;
         int fontHeight = metrics.getHeight();
         for(int i = 0; i < tabCount; i++) {
             result = Math.max(calculateTabHeight(tabPlacement, i, fontHeight), result);
         }
-        return result; 
+        return result;
     }
 
     protected int calculateTabWidth(int tabPlacement, int tabIndex, FontMetrics metrics) {
@@ -1749,32 +1766,32 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         }
         return width;
     }
-    
+
     protected int calculateMaxTabWidth(int tabPlacement) {
         FontMetrics metrics = getFontMetrics();
         int tabCount = tabPane.getTabCount();
-        int result = 0; 
+        int result = 0;
         for(int i = 0; i < tabCount; i++) {
             result = Math.max(calculateTabWidth(tabPlacement, i, metrics), result);
         }
-        return result; 
+        return result;
     }
 
     protected int calculateTabAreaHeight(int tabPlacement, int horizRunCount, int maxTabHeight) {
         Insets tabAreaInsets = getTabAreaInsets(tabPlacement);
         int tabRunOverlay = getTabRunOverlay(tabPlacement);
-        return (horizRunCount > 0? 
-                horizRunCount * (maxTabHeight-tabRunOverlay) + tabRunOverlay + 
-                tabAreaInsets.top + tabAreaInsets.bottom : 
+        return (horizRunCount > 0?
+                horizRunCount * (maxTabHeight-tabRunOverlay) + tabRunOverlay +
+                tabAreaInsets.top + tabAreaInsets.bottom :
                 0);
     }
 
-    protected int calculateTabAreaWidth(int tabPlacement, int vertRunCount, int maxTabWidth) { 
+    protected int calculateTabAreaWidth(int tabPlacement, int vertRunCount, int maxTabWidth) {
         Insets tabAreaInsets = getTabAreaInsets(tabPlacement);
         int tabRunOverlay = getTabRunOverlay(tabPlacement);
-        return (vertRunCount > 0? 
-                vertRunCount * (maxTabWidth-tabRunOverlay) + tabRunOverlay + 
-                tabAreaInsets.left + tabAreaInsets.right : 
+        return (vertRunCount > 0?
+                vertRunCount * (maxTabWidth-tabRunOverlay) + tabRunOverlay +
+                tabAreaInsets.left + tabAreaInsets.right :
                 0);
     }
 
@@ -1795,7 +1812,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
     protected Insets getContentBorderInsets(int tabPlacement) {
         return contentBorderInsets;
     }
-    
+
     protected FontMetrics getFontMetrics() {
         Font font = tabPane.getFont();
         return tabPane.getFontMetrics(font);
@@ -1904,7 +1921,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
 
     protected void selectNextTab(int current) {
         int tabIndex = getNextTabIndex(current);
-        
+
         while (tabIndex != current && !tabPane.isEnabledAt(tabIndex)) {
             tabIndex = getNextTabIndex(tabIndex);
         }
@@ -1913,36 +1930,36 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
 
     protected void selectPreviousTab(int current) {
         int tabIndex = getPreviousTabIndex(current);
-        
+
         while (tabIndex != current && !tabPane.isEnabledAt(tabIndex)) {
             tabIndex = getPreviousTabIndex(tabIndex);
         }
         navigateTo(tabIndex);
     }
 
-    protected void selectAdjacentRunTab(int tabPlacement, 
+    protected void selectAdjacentRunTab(int tabPlacement,
                                         int tabIndex, int offset) {
         if ( runCount < 2 ) {
-            return; 
+            return;
         }
         int newIndex;
-        Rectangle r = rects[tabIndex]; 
+        Rectangle r = rects[tabIndex];
         switch(tabPlacement) {
           case LEFT:
           case RIGHT:
               newIndex = tabForCoordinate(tabPane, r.x + r.width/2 + offset,
                                        r.y + r.height/2);
               break;
-          case BOTTOM:  
+          case BOTTOM:
           case TOP:
           default:
-              newIndex = tabForCoordinate(tabPane, r.x + r.width/2, 
+              newIndex = tabForCoordinate(tabPane, r.x + r.width/2,
                                        r.y + r.height/2 + offset);
         }
         if (newIndex != -1) {
             while (!tabPane.isEnabledAt(newIndex) && newIndex != tabIndex) {
                 newIndex = getNextTabIndex(newIndex);
-            }        
+            }
             navigateTo(newIndex);
         }
     }
@@ -1998,14 +2015,14 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         return focusIndex;
     }
 
-    protected int getTabRunOffset(int tabPlacement, int tabCount, 
+    protected int getTabRunOffset(int tabPlacement, int tabCount,
                                   int tabIndex, boolean forward) {
         int run = getRunForTab(tabCount, tabIndex);
         int offset;
         switch(tabPlacement) {
           case LEFT: {
               if (run == 0) {
-                  offset = (forward? 
+                  offset = (forward?
                             -(calculateTabAreaWidth(tabPlacement, runCount, maxTabWidth)-maxTabWidth) :
                             -maxTabWidth);
 
@@ -2020,7 +2037,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
           }
           case RIGHT: {
               if (run == 0) {
-                  offset = (forward? 
+                  offset = (forward?
                             maxTabWidth :
                             calculateTabAreaWidth(tabPlacement, runCount, maxTabWidth)-maxTabWidth);
               } else if (run == runCount - 1) {
@@ -2029,12 +2046,12 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                             -maxTabWidth);
               } else {
                   offset = (forward? maxTabWidth : -maxTabWidth);
-              } 
+              }
               break;
           }
           case BOTTOM: {
               if (run == 0) {
-                  offset = (forward? 
+                  offset = (forward?
                             maxTabHeight :
                             calculateTabAreaHeight(tabPlacement, runCount, maxTabHeight)-maxTabHeight);
               } else if (run == runCount - 1) {
@@ -2043,13 +2060,13 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                             -maxTabHeight);
               } else {
                   offset = (forward? maxTabHeight : -maxTabHeight);
-              } 
+              }
               break;
           }
           case TOP:
           default: {
               if (run == 0) {
-                  offset = (forward? 
+                  offset = (forward?
                             -(calculateTabAreaHeight(tabPlacement, runCount, maxTabHeight)-maxTabHeight) :
                             -maxTabHeight);
               } else if (run == runCount - 1) {
@@ -2107,7 +2124,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
     }
 
     protected static void rotateInsets(Insets topInsets, Insets targetInsets, int targetPlacement) {
-        
+
         switch(targetPlacement) {
           case LEFT:
               targetInsets.top = topInsets.left;
@@ -2119,7 +2136,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
               targetInsets.top = topInsets.bottom;
               targetInsets.left = topInsets.left;
               targetInsets.bottom = topInsets.top;
-              targetInsets.right = topInsets.right;              
+              targetInsets.right = topInsets.right;
               break;
           case RIGHT:
               targetInsets.top = topInsets.left;
@@ -2132,16 +2149,16 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
               targetInsets.top = topInsets.top;
               targetInsets.left = topInsets.left;
               targetInsets.bottom = topInsets.bottom;
-              targetInsets.right = topInsets.right;              
+              targetInsets.right = topInsets.right;
         }
-    }  
+    }
 
     // REMIND(aim,7/29/98): This method should be made
     // protected in the next release where
     // API changes are allowed
     boolean requestFocusForVisibleComponent() {
         return SwingUtilities2.tabbedPaneChangeFocusTo(getVisibleComponent());
-    }  
+    }
 
     private static class Actions extends UIAction {
         final static String NEXT = "navigateNext";
@@ -2194,7 +2211,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
             else if (key == PAGE_UP) {
                 int tabPlacement = pane.getTabPlacement();
                 if (tabPlacement == TOP|| tabPlacement == BOTTOM) {
-                    ui.navigateSelectedTab(SwingConstants.WEST); 
+                    ui.navigateSelectedTab(SwingConstants.WEST);
                 } else {
                     ui.navigateSelectedTab(SwingConstants.NORTH);
                 }
@@ -2202,7 +2219,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
             else if (key == PAGE_DOWN) {
                 int tabPlacement = pane.getTabPlacement();
                 if (tabPlacement == TOP || tabPlacement == BOTTOM) {
-                    ui.navigateSelectedTab(SwingConstants.EAST); 
+                    ui.navigateSelectedTab(SwingConstants.EAST);
                 } else {
                     ui.navigateSelectedTab(SwingConstants.SOUTH);
                 }
@@ -2221,8 +2238,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                     if (mnemonic >= 'a' && mnemonic <='z') {
                         mnemonic  -= ('a' - 'A');
                     }
-                    Integer index = (Integer)ui.mnemonicToIndexMap.
-                                 get(new Integer(mnemonic));
+                    Integer index = ui.mnemonicToIndexMap.get(Integer.valueOf(mnemonic));
                     if (index != null && pane.isEnabledAt(index.intValue())) {
                         pane.setSelectedIndex(index.intValue());
                     }
@@ -2250,13 +2266,13 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
     /**
      * This class should be treated as a &quot;protected&quot; inner class.
      * Instantiate it only within subclasses of BasicTabbedPaneUI.
-     */  
+     */
     public class TabbedPaneLayout implements LayoutManager {
 
         public void addLayoutComponent(String name, Component comp) {}
-    
+
         public void removeLayoutComponent(Component comp) {}
-    
+
         public Dimension preferredLayoutSize(Container parent) {
             return calculateSize(false);
         }
@@ -2272,7 +2288,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
             Insets tabAreaInsets = getTabAreaInsets(tabPlacement);
 
             Dimension zeroSize = new Dimension(0,0);
-            int height = 0; 
+            int height = 0;
             int width = 0;
             int cWidth = 0;
             int cHeight = 0;
@@ -2283,10 +2299,9 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
             for (int i = 0; i < tabPane.getTabCount(); i++) {
                 Component component = tabPane.getComponentAt(i);
                 if (component != null) {
-                    Dimension size = zeroSize;
-                    size = minimum? component.getMinimumSize() : 
+                    Dimension size = minimum ? component.getMinimumSize() :
                                 component.getPreferredSize();
-                      
+
                     if (size != null) {
                         cHeight = Math.max(size.height, cHeight);
                         cWidth = Math.max(size.width, cWidth);
@@ -2296,7 +2311,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
             // Add content border insets to minimum size
             width += cWidth;
             height += cHeight;
-            int tabExtent = 0;
+            int tabExtent;
 
             // Calculate how much space the tabs will need, based on the
             // minimum size required to display largest child + content border
@@ -2315,7 +2330,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                   tabExtent = preferredTabAreaHeight(tabPlacement, width - tabAreaInsets.left - tabAreaInsets.right);
                   height += tabExtent;
             }
-            return new Dimension(width + insets.left + insets.right + contentInsets.left + contentInsets.right, 
+            return new Dimension(width + insets.left + insets.right + contentInsets.left + contentInsets.right,
                              height + insets.bottom + insets.top + contentInsets.top + contentInsets.bottom);
 
         }
@@ -2329,14 +2344,14 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                 int x = 0;
 
                 int maxTabHeight = calculateMaxTabHeight(tabPlacement);
-        
+
                 for (int i = 0; i < tabCount; i++) {
                     int tabWidth = calculateTabWidth(tabPlacement, i, metrics);
 
                     if (x != 0 && x + tabWidth > width) {
                         rows++;
                         x = 0;
-                    } 
+                    }
                     x += tabWidth;
                 }
                 total = calculateTabAreaHeight(tabPlacement, rows, maxTabHeight);
@@ -2354,16 +2369,16 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                 int fontHeight = metrics.getHeight();
 
                 maxTabWidth = calculateMaxTabWidth(tabPlacement);
-        
+
                 for (int i = 0; i < tabCount; i++) {
                     int tabHeight = calculateTabHeight(tabPlacement, i, fontHeight);
 
-                    if (y != 0 && y + tabHeight > height) { 
+                    if (y != 0 && y + tabHeight > height) {
                         columns++;
                         y = 0;
                     }
                     y += tabHeight;
-                }                    
+                }
                 total = calculateTabAreaWidth(tabPlacement, columns, maxTabWidth);
             }
             return total;
@@ -2462,11 +2477,11 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                     Component child = tabPane.getComponent(i);
                     if(child == tabContainer) {
 
-                        int tabContainerWidth = totalTabWidth == 0 ? bounds.width : 
-                                totalTabWidth + insets.left + insets.right + 
+                        int tabContainerWidth = totalTabWidth == 0 ? bounds.width :
+                                totalTabWidth + insets.left + insets.right +
                                         contentInsets.left + contentInsets.right;
-                        int tabContainerHeight = totalTabHeight == 0 ? bounds.height : 
-                                totalTabHeight + insets.top + insets.bottom + 
+                        int tabContainerHeight = totalTabHeight == 0 ? bounds.height :
+                                totalTabHeight + insets.top + insets.bottom +
                                         contentInsets.top + contentInsets.bottom;
 
                         int tabContainerX = 0;
@@ -2491,12 +2506,12 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         }
 
         public void calculateLayoutInfo() {
-            int tabCount = tabPane.getTabCount(); 
+            int tabCount = tabPane.getTabCount();
             assureRectsCreated(tabCount);
-            calculateTabRects(tabPane.getTabPlacement(), tabCount);    
+            calculateTabRects(tabPane.getTabPlacement(), tabCount);
             isRunsDirty = false;
         }
-        
+
         private void layoutTabComponents() {
             if (tabContainer == null) {
                 return;
@@ -2527,12 +2542,12 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                             y + getTabLabelShiftY(tabPlacement, i, isSeleceted),
                         preferredSize.width, preferredSize.height);
             }
-        }                    
+        }
 
         protected void calculateTabRects(int tabPlacement, int tabCount) {
             FontMetrics metrics = getFontMetrics();
             Dimension size = tabPane.getSize();
-            Insets insets = tabPane.getInsets(); 
+            Insets insets = tabPane.getInsets();
             Insets tabAreaInsets = getTabAreaInsets(tabPlacement);
             int fontHeight = metrics.getHeight();
             int selectedIndex = tabPane.getSelectedIndex();
@@ -2601,8 +2616,8 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                     rect.width = calculateTabWidth(tabPlacement, i, metrics);
                     maxTabWidth = Math.max(maxTabWidth, rect.width);
 
-                    // Never move a TAB down a run if it is in the first column. 
-                    // Even if there isn't enough room, moving it to a fresh 
+                    // Never move a TAB down a run if it is in the first column.
+                    // Even if there isn't enough room, moving it to a fresh
                     // line won't help.
                     if (rect.x != 2 + insets.left && rect.x + rect.width > returnAt) {
                         if (runCount > tabRuns.length - 1) {
@@ -2629,8 +2644,8 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                     rect.height = calculateTabHeight(tabPlacement, i, fontHeight);
                     maxTabHeight = Math.max(maxTabHeight, rect.height);
 
-                    // Never move a TAB over a run if it is in the first run. 
-                    // Even if there isn't enough room, moving it to a fresh 
+                    // Never move a TAB over a run if it is in the first run.
+                    // Even if there isn't enough room, moving it to a fresh
                     // column won't help.
                     if (rect.y != 2 + insets.top && rect.y + rect.height > returnAt) {
                         if (runCount > tabRuns.length - 1) {
@@ -2644,7 +2659,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                     rect.x = x;
                     rect.width = maxTabWidth/* - 2*/;
 
-                }            
+                }
                 if (i == selectedIndex) {
                     selectedRun = runCount - 1;
                 }
@@ -2696,7 +2711,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                     } else {
                         x += (maxTabWidth - tabRunOverlay);
                     }
-                }           
+                }
             }
 
             // Pad the selected tab so that it appears raised in front
@@ -2705,7 +2720,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
             // if right to left and tab placement on the top or
             // the bottom, flip x positions and adjust by widths
             if (!leftToRight && !verticalTabRuns) {
-                int rightMargin = size.width 
+                int rightMargin = size.width
                                   - (insets.right + tabAreaInsets.right);
                 for (i = 0; i < tabCount; i++) {
                     rects[i].x = rightMargin - rects[i].x - rects[i].width;
@@ -2714,20 +2729,20 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         }
 
 
-       /* 
+       /*
        * Rotates the run-index array so that the selected run is run[0]
        */
         protected void rotateTabRuns(int tabPlacement, int selectedRun) {
             for (int i = 0; i < selectedRun; i++) {
                 int save = tabRuns[0];
-                for (int j = 1; j < runCount; j++) { 
+                for (int j = 1; j < runCount; j++) {
                     tabRuns[j - 1] = tabRuns[j];
                 }
                 tabRuns[runCount-1] = save;
-            }        
+            }
         }
 
-        protected void normalizeTabRuns(int tabPlacement, int tabCount, 
+        protected void normalizeTabRuns(int tabPlacement, int tabCount,
                                      int start, int max) {
             boolean verticalTabRuns = (tabPlacement == LEFT || tabPlacement == RIGHT);
             int run = runCount - 1;
@@ -2743,7 +2758,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
             // Starting with the last run, determine whether the last tab in
             // the previous run would fit (generously) in this run; if so,
             // move tab to current run and shift tabs accordingly.  Cycle
-            // through remaining runs using the same algorithm.  
+            // through remaining runs using the same algorithm.
             //
             while (keepAdjusting) {
                 int last = lastTabInRun(tabCount, run);
@@ -2758,7 +2773,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                     end = rects[last].y + rects[last].height;
                     prevLastLen = (int)(maxTabHeight*weight*2);
                 }
- 
+
                 // Check if the run has enough extra space to fit the last tab
                 // from the previous row...
                 if (max - end > prevLastLen) {
@@ -2776,8 +2791,8 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                         } else {
                             rects[i].y = rects[i-1].y + rects[i-1].height;
                         }
-                    } 
- 
+                    }
+
                 } else if (run == runCount - 1) {
                     // no more room left in last run, so we're done!
                     keepAdjusting = false;
@@ -2792,7 +2807,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                     run = runCount - 1;
                     weight += .25;
                 }
-            }                       
+            }
         }
 
         protected void padTabRun(int tabPlacement, int start, int end, int max) {
@@ -2824,14 +2839,14 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                 }
                 lastRect.height = max - lastRect.y;
             }
-        } 
+        }
 
         protected void padSelectedTab(int tabPlacement, int selectedIndex) {
 
             if (selectedIndex >= 0) {
                 Rectangle selRect = rects[selectedIndex];
                 Insets padInsets = getSelectedTabPadInsets(tabPlacement);
-                selRect.x -= padInsets.left;            
+                selRect.x -= padInsets.left;
                 selRect.width += (padInsets.left + padInsets.right);
                 selRect.y -= padInsets.top;
                 selRect.height += (padInsets.top + padInsets.bottom);
@@ -2864,7 +2879,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                     }
                 }
             }
-        } 
+        }
     }
 
     private class TabbedPaneScrollLayout extends TabbedPaneLayout {
@@ -2908,14 +2923,14 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
             } else {
                 selectedComponent = tabPane.getComponentAt(selectedIndex);
             }
-            
+
             if (tabPane.getTabCount() == 0) {
                 tabScroller.croppedEdge.resetParams();
                 tabScroller.scrollForwardButton.setVisible(false);
                 tabScroller.scrollBackwardButton.setVisible(false);
                 return;
             }
-            
+
             boolean shouldChangeFocus = false;
 
             // In order to allow programs to use a single component
@@ -3099,7 +3114,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                 }
             }
         }
-        
+
         private void layoutCroppedEdge() {
             tabScroller.croppedEdge.resetParams();
             Rectangle viewRect = tabScroller.viewport.getViewRect();
@@ -3130,11 +3145,11 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         protected void calculateTabRects(int tabPlacement, int tabCount) {
             FontMetrics metrics = getFontMetrics();
             Dimension size = tabPane.getSize();
-            Insets insets = tabPane.getInsets(); 
+            Insets insets = tabPane.getInsets();
             Insets tabAreaInsets = getTabAreaInsets(tabPlacement);
             int fontHeight = metrics.getHeight();
             int selectedIndex = tabPane.getSelectedIndex();
-            int i, j;
+            int i;
             boolean verticalTabRuns = (tabPlacement == LEFT || tabPlacement == RIGHT);
             boolean leftToRight = BasicGraphicsUtils.isLeftToRight(tabPane);
             int x = tabAreaInsets.left;
@@ -3205,18 +3220,18 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                     rect.x = x;
                     rect.width = maxTabWidth/* - 2*/;
 
-                }            
+                }
             }
 
-	    if (tabsOverlapBorder) {
-		// Pad the selected tab so that it appears raised in front
-		padSelectedTab(tabPlacement, selectedIndex);
-	    }
+            if (tabsOverlapBorder) {
+                // Pad the selected tab so that it appears raised in front
+                padSelectedTab(tabPlacement, selectedIndex);
+            }
 
             // if right to left and tab placement on the top or
             // the bottom, flip x positions and adjust by widths
             if (!leftToRight && !verticalTabRuns) {
-                int rightMargin = size.width 
+                int rightMargin = size.width
                                   - (insets.right + tabAreaInsets.right);
                 for (i = 0; i < tabCount; i++) {
                     rects[i].x = rightMargin - rects[i].x - rects[i].width;
@@ -3238,7 +3253,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         private Point tabViewPosition = new Point(0,0);
 
         ScrollableTabSupport(int tabPlacement) {
-            viewport = new ScrollableTabViewport();  
+            viewport = new ScrollableTabViewport();
             tabPanel = new ScrollableTabPanel();
             viewport.setView(tabPanel);
             viewport.addChangeListener(this);
@@ -3295,7 +3310,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         }
 
         public void setLeadingTabIndex(int tabPlacement, int index) {
-            leadingTabIndex = index;       
+            leadingTabIndex = index;
             Dimension viewSize = viewport.getViewSize();
             Rectangle viewRect = viewport.getViewRect();
 
@@ -3307,7 +3322,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                 if ((viewSize.width - tabViewPosition.x) < viewRect.width) {
                     // We've scrolled to the end, so adjust the viewport size
                     // to ensure the view position remains aligned on a tab boundary
-                    Dimension extentSize = new Dimension(viewSize.width - tabViewPosition.x, 
+                    Dimension extentSize = new Dimension(viewSize.width - tabViewPosition.x,
                                                          viewRect.height);
                     viewport.setExtentSize(extentSize);
                 }
@@ -3319,7 +3334,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                 if ((viewSize.height - tabViewPosition.y) < viewRect.height) {
                 // We've scrolled to the end, so adjust the viewport size
                 // to ensure the view position remains aligned on a tab boundary
-                     Dimension extentSize = new Dimension(viewRect.width, 
+                     Dimension extentSize = new Dimension(viewRect.width,
                                                           viewSize.height - tabViewPosition.y);
                      viewport.setExtentSize(extentSize);
                 }
@@ -3424,10 +3439,10 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         }
 
         public String toString() {
-            return new String("viewport.viewSize="+viewport.getViewSize()+"\n"+
+            return "viewport.viewSize=" + viewport.getViewSize() + "\n" +
                               "viewport.viewRectangle="+viewport.getViewRect()+"\n"+
                               "leadingTabIndex="+leadingTabIndex+"\n"+
-                              "tabViewPosition="+tabViewPosition);
+                              "tabViewPosition=" + tabViewPosition;
         }
 
     }
@@ -3467,7 +3482,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                 g.translate(-croppedRect.x, -croppedRect.y);
             }
         }
-        
+
         public void doLayout() {
             if (getComponentCount() > 0) {
                 Component child = getComponent(0);
@@ -3476,7 +3491,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         }
     }
 
-    private class ScrollableTabButton extends BasicArrowButton implements UIResource, 
+    private class ScrollableTabButton extends BasicArrowButton implements UIResource,
                                                                             SwingConstants {
         public ScrollableTabButton(int direction) {
             super(direction,
@@ -3486,7 +3501,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                   UIManager.getColor("TabbedPane.highlight"));
         }
     }
-        
+
 
 // Controller: event listeners
 
@@ -3509,7 +3524,13 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
             }
             else if (name =="indexForTitle") {
                 calculatedBaseline = false;
-                updateHtmlViews((Integer)e.getNewValue());
+                Integer index = (Integer) e.getNewValue();
+                // remove the current index
+                // to let updateHtmlViews() insert the correct one
+                if (htmlViews != null) {
+                    htmlViews.removeElementAt(index);
+                }
+                updateHtmlViews(index);
             } else if (name == "tabLayoutPolicy") {
                 BasicTabbedPaneUI.this.uninstallUI(pane);
                 BasicTabbedPaneUI.this.installUI(pane);
@@ -3553,7 +3574,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                 calculatedBaseline = false;
             }
         }
-        
+
         private void updateHtmlViews(int index) {
             String title = tabPane.getTitleAt(index);
             boolean isHTML = BasicHTML.isHTMLString(title);
@@ -3571,10 +3592,10 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
             }
             updateMnemonics();
         }
-        
+
         //
         // ChangeListener
-        // 
+        //
         public void stateChanged(ChangeEvent e) {
             JTabbedPane tabPane = (JTabbedPane)e.getSource();
             tabPane.revalidate();
@@ -3642,9 +3663,9 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         //
         // FocusListener
         //
-        public void focusGained(FocusEvent e) { 
+        public void focusGained(FocusEvent e) {
            setFocusIndex(tabPane.getSelectedIndex(), true);
-        }            
+        }
         public void focusLost(FocusEvent e) {
            repaintTab(focusIndex);
         }
@@ -3656,33 +3677,33 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
     /* GES 2/3/99:
        The container listener code was added to support HTML
        rendering of tab titles.
-       
+
        Ideally, we would be able to listen for property changes
-       when a tab is added or its text modified.  At the moment 
+       when a tab is added or its text modified.  At the moment
        there are no such events because the Beans spec doesn't
-       allow 'indexed' property changes (i.e. tab 2's text changed 
+       allow 'indexed' property changes (i.e. tab 2's text changed
        from A to B).
-       
+
        In order to get around this, we listen for tabs to be added
        or removed by listening for the container events.  we then
        queue up a runnable (so the component has a chance to complete
        the add) which checks the tab title of the new component to see
        if it requires HTML rendering.
-       
+
        The Views (one per tab title requiring HTML rendering) are
        stored in the htmlViews Vector, which is only allocated after
        the first time we run into an HTML tab.  Note that this vector
        is kept in step with the number of pages, and nulls are added
        for those pages whose tab title do not require HTML rendering.
-       
+
        This makes it easy for the paint and layout code to tell
        whether to invoke the HTML engine without having to check
        the string during time-sensitive operations.
-       
+
        When we have added a way to listen for tab additions and
        changes to tab text, this code should be removed and
        replaced by something which uses that.  */
-    
+
         public void componentAdded(ContainerEvent e) {
             JTabbedPane tp = (JTabbedPane)e.getContainer();
             Component child = e.getChild();
@@ -3710,7 +3731,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
                 int index = indexObj.intValue();
                 if (htmlViews != null && htmlViews.size() > index) {
                     htmlViews.removeElementAt(index);
-                }           
+                }
                 tp.putClientProperty("__index_to_remove__", null);
             }
             isRunsDirty = true;
@@ -3723,11 +3744,11 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
     /**
      * This class should be treated as a &quot;protected&quot; inner class.
      * Instantiate it only within subclasses of BasicTabbedPaneUI.
-     */  
+     */
     public class PropertyChangeHandler implements PropertyChangeListener {
         // NOTE: This class exists only for backward compatability. All
         // its functionality has been moved into Handler. If you need to add
-        // new functionality add it to the Handler, but make sure this      
+        // new functionality add it to the Handler, but make sure this
         // class calls into the Handler.
         public void propertyChange(PropertyChangeEvent e) {
             getHandler().propertyChange(e);
@@ -3737,11 +3758,11 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
     /**
      * This class should be treated as a &quot;protected&quot; inner class.
      * Instantiate it only within subclasses of BasicTabbedPaneUI.
-     */  
+     */
     public class TabSelectionHandler implements ChangeListener {
         // NOTE: This class exists only for backward compatability. All
         // its functionality has been moved into Handler. If you need to add
-        // new functionality add it to the Handler, but make sure this      
+        // new functionality add it to the Handler, but make sure this
         // class calls into the Handler.
         public void stateChanged(ChangeEvent e) {
             getHandler().stateChanged(e);
@@ -3751,11 +3772,11 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
     /**
      * This class should be treated as a &quot;protected&quot; inner class.
      * Instantiate it only within subclasses of BasicTabbedPaneUI.
-     */  
+     */
     public class MouseHandler extends MouseAdapter {
         // NOTE: This class exists only for backward compatability. All
         // its functionality has been moved into Handler. If you need to add
-        // new functionality add it to the Handler, but make sure this      
+        // new functionality add it to the Handler, but make sure this
         // class calls into the Handler.
         public void mousePressed(MouseEvent e) {
             getHandler().mousePressed(e);
@@ -3765,22 +3786,22 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
     /**
      * This class should be treated as a &quot;protected&quot; inner class.
      * Instantiate it only within subclasses of BasicTabbedPaneUI.
-     */  
+     */
     public class FocusHandler extends FocusAdapter {
         // NOTE: This class exists only for backward compatability. All
         // its functionality has been moved into Handler. If you need to add
-        // new functionality add it to the Handler, but make sure this      
+        // new functionality add it to the Handler, but make sure this
         // class calls into the Handler.
-        public void focusGained(FocusEvent e) { 
+        public void focusGained(FocusEvent e) {
             getHandler().focusGained(e);
-        }            
+        }
         public void focusLost(FocusEvent e) {
             getHandler().focusLost(e);
         }
     }
 
-    private Vector createHTMLVector() {
-        Vector htmlViews = new Vector();
+    private Vector<View> createHTMLVector() {
+        Vector<View> htmlViews = new Vector<View>();
         int count = tabPane.getTabCount();
         if (count>0) {
             for (int i=0 ; i<count; i++) {
@@ -3794,7 +3815,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         }
         return htmlViews;
     }
-    
+
     private class TabContainer extends JPanel implements UIResource {
         private boolean notifyTabbedPane = true;
 
@@ -3829,7 +3850,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
         public void doLayout() {
             // We layout tabComponents in JTabbedPane's layout manager
             // and use this method as a hook for repainting tabs
-            // to update tabs area e.g. when the size of tabComponent was changed 
+            // to update tabs area e.g. when the size of tabComponent was changed
             if (scrollableTabLayoutEnabled()) {
                 tabScroller.tabPanel.repaint();
                 tabScroller.updateView();
@@ -3895,7 +3916,7 @@ public class BasicTabbedPaneUI extends TabbedPaneUI implements SwingConstants {
             }
             return UIManager.getColor("control");
         }
-        
+
         protected void paintComponent(Graphics g) {
             super.paintComponent(g);
             if (isParamsSet() && g instanceof Graphics2D) {
