@@ -1,8 +1,26 @@
 /*
- * @(#)SynthSplitPaneUI.java	1.17 06/06/07
+ * Copyright (c) 2002, 2010, Oracle and/or its affiliates. All rights reserved.
+ * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  *
- * Copyright 2006 Sun Microsystems, Inc. All rights reserved.
- * SUN PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
  */
 
 package javax.swing.plaf.synth;
@@ -13,31 +31,30 @@ import java.awt.event.*;
 import java.beans.*;
 import java.util.*;
 import javax.swing.*;
-import javax.swing.event.*;
 import javax.swing.plaf.*;
 import javax.swing.plaf.basic.*;
-import sun.swing.plaf.synth.SynthUI;
 
 
 /**
- * Synth's SplitPaneUI.
+ * Provides the Synth L&F UI delegate for
+ * {@link javax.swing.JSplitPane}.
  *
- * @version 1.17, 06/07/06
  * @author Scott Violet
+ * @since 1.7
  */
-class SynthSplitPaneUI extends BasicSplitPaneUI implements
-                                    PropertyChangeListener, SynthUI {
+public class SynthSplitPaneUI extends BasicSplitPaneUI
+                              implements PropertyChangeListener, SynthUI {
     /**
      * Keys to use for forward focus traversal when the JComponent is
      * managing focus.
      */
-    private static Set managingFocusForwardTraversalKeys;
+    private static Set<KeyStroke> managingFocusForwardTraversalKeys;
 
     /**
      * Keys to use for backward focus traversal when the JComponent is
      * managing focus.
      */
-    private static Set managingFocusBackwardTraversalKeys;
+    private static Set<KeyStroke> managingFocusBackwardTraversalKeys;
 
     /**
      * Style for the JSplitPane.
@@ -51,6 +68,9 @@ class SynthSplitPaneUI extends BasicSplitPaneUI implements
 
     /**
      * Creates a new SynthSplitPaneUI instance
+     *
+     * @param x component to create UI object for
+     * @return the UI object
      */
     public static ComponentUI createUI(JComponent x) {
         return new SynthSplitPaneUI();
@@ -59,6 +79,7 @@ class SynthSplitPaneUI extends BasicSplitPaneUI implements
     /**
      * Installs the UI defaults.
      */
+    @Override
     protected void installDefaults() {
         updateStyle(splitPane);
 
@@ -77,22 +98,22 @@ class SynthSplitPaneUI extends BasicSplitPaneUI implements
             setNonContinuousLayoutDivider(nonContinuousLayoutDivider, true);
         }
 
-	// focus forward traversal key
-	if (managingFocusForwardTraversalKeys==null) {
-	    managingFocusForwardTraversalKeys = new HashSet();
-	    managingFocusForwardTraversalKeys.add(
-		KeyStroke.getKeyStroke(KeyEvent.VK_TAB, 0));
-	}
-	splitPane.setFocusTraversalKeys(KeyboardFocusManager.FORWARD_TRAVERSAL_KEYS,
-					managingFocusForwardTraversalKeys);
-	// focus backward traversal key
-	if (managingFocusBackwardTraversalKeys==null) {
-	    managingFocusBackwardTraversalKeys = new HashSet();
-	    managingFocusBackwardTraversalKeys.add(
-		KeyStroke.getKeyStroke(KeyEvent.VK_TAB, InputEvent.SHIFT_MASK));
-	}
-	splitPane.setFocusTraversalKeys(KeyboardFocusManager.BACKWARD_TRAVERSAL_KEYS,
-					managingFocusBackwardTraversalKeys);
+        // focus forward traversal key
+        if (managingFocusForwardTraversalKeys==null) {
+            managingFocusForwardTraversalKeys = new HashSet<KeyStroke>();
+            managingFocusForwardTraversalKeys.add(
+                KeyStroke.getKeyStroke(KeyEvent.VK_TAB, 0));
+        }
+        splitPane.setFocusTraversalKeys(KeyboardFocusManager.FORWARD_TRAVERSAL_KEYS,
+                                        managingFocusForwardTraversalKeys);
+        // focus backward traversal key
+        if (managingFocusBackwardTraversalKeys==null) {
+            managingFocusBackwardTraversalKeys = new HashSet<KeyStroke>();
+            managingFocusBackwardTraversalKeys.add(
+                KeyStroke.getKeyStroke(KeyEvent.VK_TAB, InputEvent.SHIFT_MASK));
+        }
+        splitPane.setFocusTraversalKeys(KeyboardFocusManager.BACKWARD_TRAVERSAL_KEYS,
+                                        managingFocusBackwardTraversalKeys);
     }
 
     private void updateStyle(JSplitPane splitPane) {
@@ -110,7 +131,7 @@ class SynthSplitPaneUI extends BasicSplitPaneUI implements
         if (style != oldStyle) {
             Object value = style.get(context, "SplitPane.size");
             if (value == null) {
-                value = new Integer(6);
+                value = Integer.valueOf(6);
             }
             LookAndFeel.installProperty(splitPane, "dividerSize", value);
 
@@ -144,6 +165,7 @@ class SynthSplitPaneUI extends BasicSplitPaneUI implements
     /**
      * Installs the event listeners for the UI.
      */
+    @Override
     protected void installListeners() {
         super.installListeners();
         splitPane.addPropertyChangeListener(this);
@@ -152,6 +174,7 @@ class SynthSplitPaneUI extends BasicSplitPaneUI implements
     /**
      * Uninstalls the UI defaults.
      */
+    @Override
     protected void uninstallDefaults() {
         SynthContext context = getContext(splitPane, ENABLED);
 
@@ -169,29 +192,25 @@ class SynthSplitPaneUI extends BasicSplitPaneUI implements
 
 
     /**
-     * Uninstalls the event listeners for the UI.
+     * Uninstalls the event listeners from the UI.
      */
+    @Override
     protected void uninstallListeners() {
         super.uninstallListeners();
         splitPane.removePropertyChangeListener(this);
     }
 
-
+    /**
+     * @inheritDoc
+     */
+    @Override
     public SynthContext getContext(JComponent c) {
-        return getContext(c, getComponentState(c));
+        return getContext(c, SynthLookAndFeel.getComponentState(c));
     }
 
     private SynthContext getContext(JComponent c, int state) {
         return SynthContext.getContext(SynthContext.class, c,
                     SynthLookAndFeel.getRegion(c), style, state);
-    }
-
-    private Region getRegion(JComponent c) {
-        return SynthLookAndFeel.getRegion(c);
-    }
-
-    private int getComponentState(JComponent c) {
-        return SynthLookAndFeel.getComponentState(c);
     }
 
     SynthContext getContext(JComponent c, Region region) {
@@ -216,7 +235,10 @@ class SynthSplitPaneUI extends BasicSplitPaneUI implements
         return state;
     }
 
-
+    /**
+     * @inheritDoc
+     */
+    @Override
     public void propertyChange(PropertyChangeEvent e) {
         if (SynthLookAndFeel.shouldUpdateStyle(e)) {
             updateStyle((JSplitPane)e.getSource());
@@ -226,6 +248,7 @@ class SynthSplitPaneUI extends BasicSplitPaneUI implements
     /**
      * Creates the default divider.
      */
+    @Override
     public BasicSplitPaneDivider createDefaultDivider() {
         SynthSplitPaneDivider divider = new SynthSplitPaneDivider(this);
 
@@ -233,6 +256,10 @@ class SynthSplitPaneUI extends BasicSplitPaneUI implements
         return divider;
     }
 
+    /**
+     * @inheritDoc
+     */
+    @Override
     protected Component createDefaultNonContinuousLayoutDivider() {
         return new Canvas() {
             public void paint(Graphics g) {
@@ -241,6 +268,19 @@ class SynthSplitPaneUI extends BasicSplitPaneUI implements
         };
     }
 
+    /**
+     * Notifies this UI delegate to repaint the specified component.
+     * This method paints the component background, then calls
+     * the {@link #paint(SynthContext,Graphics)} method.
+     *
+     * <p>In general, this method does not need to be overridden by subclasses.
+     * All Look and Feel rendering code should reside in the {@code paint} method.
+     *
+     * @param g the {@code Graphics} object used for painting
+     * @param c the component being painted
+     * @see #paint(SynthContext,Graphics)
+     */
+    @Override
     public void update(Graphics g, JComponent c) {
         SynthContext context = getContext(c);
 
@@ -251,6 +291,16 @@ class SynthSplitPaneUI extends BasicSplitPaneUI implements
         context.dispose();
     }
 
+    /**
+     * Paints the specified component according to the Look and Feel.
+     * <p>This method is not used by Synth Look and Feel.
+     * Painting is handled by the {@link #paint(SynthContext,Graphics)} method.
+     *
+     * @param g the {@code Graphics} object used for painting
+     * @param c the component being painted
+     * @see #paint(SynthContext,Graphics)
+     */
+    @Override
     public void paint(Graphics g, JComponent c) {
         SynthContext context = getContext(c);
 
@@ -258,13 +308,23 @@ class SynthSplitPaneUI extends BasicSplitPaneUI implements
         context.dispose();
     }
 
+    /**
+     * Paints the specified component. This implementation does nothing.
+     *
+     * @param context context for the component being painted
+     * @param g the {@code Graphics} object used for painting
+     * @see #update(Graphics,JComponent)
+     */
     protected void paint(SynthContext context, Graphics g) {
         // This is done to update package private variables in
         // BasicSplitPaneUI
         super.paint(g, splitPane);
     }
 
-
+    /**
+     * @inheritDoc
+     */
+    @Override
     public void paintBorder(SynthContext context, Graphics g, int x,
                             int y, int w, int h) {
         context.getPainter().paintSplitPaneBorder(context, g, x, y, w, h);
@@ -282,6 +342,10 @@ class SynthSplitPaneUI extends BasicSplitPaneUI implements
         context.dispose();
     }
 
+    /**
+     * @inheritDoc
+     */
+    @Override
     public void finishedPaintingChildren(JSplitPane jc, Graphics g) {
         if(jc == splitPane && getLastDragLocation() != -1 &&
                               !isContinuousLayout() && !draggingHW) {
