@@ -1,8 +1,26 @@
 /*
- * @(#)AttributeList.java	1.12 05/11/17
+ * Copyright (c) 1998, 2008, Oracle and/or its affiliates. All rights reserved.
+ * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  *
- * Copyright 2006 Sun Microsystems, Inc. All rights reserved.
- * SUN PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
  */
 
 package javax.swing.text.html.parser;
@@ -22,9 +40,8 @@ import java.io.*;
  * getNext() method repeatedly to enumerate all the attributes
  * of an element.
  *
- * @see		Element
+ * @see         Element
  * @author      Arthur Van Hoff
- * @version 	1.12 11/17/05
  *
  */
 public final
@@ -43,26 +60,26 @@ class AttributeList implements DTDConstants, Serializable {
      * Create an attribute list element.
      */
     public AttributeList(String name) {
-	this.name = name;
+        this.name = name;
     }
 
     /**
      * Create an attribute list element.
      */
     public AttributeList(String name, int type, int modifier, String value, Vector<?> values, AttributeList next) {
-	this.name = name;
-	this.type = type;
-	this.modifier = modifier;
-	this.value = value;
-	this.values = values;
-	this.next = next;
+        this.name = name;
+        this.type = type;
+        this.modifier = modifier;
+        this.value = value;
+        this.values = values;
+        this.next = next;
     }
 
     /**
      * @return attribute name
      */
     public String getName() {
-	return name;
+        return name;
     }
 
     /**
@@ -70,7 +87,7 @@ class AttributeList implements DTDConstants, Serializable {
      * @see DTDConstants
      */
     public int getType() {
-	return type;
+        return type;
     }
 
     /**
@@ -78,78 +95,78 @@ class AttributeList implements DTDConstants, Serializable {
      * @see DTDConstants
      */
     public int getModifier() {
-	return modifier;
+        return modifier;
     }
 
     /**
      * @return possible attribute values
      */
     public Enumeration<?> getValues() {
-	return (values != null) ? values.elements() : null;
+        return (values != null) ? values.elements() : null;
     }
 
     /**
      * @return default attribute value
      */
     public String getValue() {
-	return value;
+        return value;
     }
 
     /**
      * @return the next attribute in the list
      */
     public AttributeList getNext() {
-	return next;
+        return next;
     }
 
     /**
      * @return string representation
      */
     public String toString() {
-	return name;
+        return name;
     }
 
     /**
      * Create a hashtable of attribute types.
      */
-    static Hashtable attributeTypes = new Hashtable();
+    static Hashtable<Object, Object> attributeTypes = new Hashtable<Object, Object>();
 
     static void defineAttributeType(String nm, int val) {
-	Integer num = new Integer(val);
-	attributeTypes.put(nm, num);
-	attributeTypes.put(num, nm);
+        Integer num = Integer.valueOf(val);
+        attributeTypes.put(nm, num);
+        attributeTypes.put(num, nm);
     }
 
     static {
-	defineAttributeType("CDATA", CDATA);
-	defineAttributeType("ENTITY", ENTITY);
-	defineAttributeType("ENTITIES", ENTITIES);
-	defineAttributeType("ID", ID);
-	defineAttributeType("IDREF", IDREF);
-	defineAttributeType("IDREFS", IDREFS);
-	defineAttributeType("NAME", NAME);
-	defineAttributeType("NAMES", NAMES);
-	defineAttributeType("NMTOKEN", NMTOKEN);
-	defineAttributeType("NMTOKENS", NMTOKENS);
-	defineAttributeType("NOTATION", NOTATION);
-	defineAttributeType("NUMBER", NUMBER);
-	defineAttributeType("NUMBERS", NUMBERS);
-	defineAttributeType("NUTOKEN", NUTOKEN);
-	defineAttributeType("NUTOKENS", NUTOKENS);
+        defineAttributeType("CDATA", CDATA);
+        defineAttributeType("ENTITY", ENTITY);
+        defineAttributeType("ENTITIES", ENTITIES);
+        defineAttributeType("ID", ID);
+        defineAttributeType("IDREF", IDREF);
+        defineAttributeType("IDREFS", IDREFS);
+        defineAttributeType("NAME", NAME);
+        defineAttributeType("NAMES", NAMES);
+        defineAttributeType("NMTOKEN", NMTOKEN);
+        defineAttributeType("NMTOKENS", NMTOKENS);
+        defineAttributeType("NOTATION", NOTATION);
+        defineAttributeType("NUMBER", NUMBER);
+        defineAttributeType("NUMBERS", NUMBERS);
+        defineAttributeType("NUTOKEN", NUTOKEN);
+        defineAttributeType("NUTOKENS", NUTOKENS);
 
-	attributeTypes.put("fixed", new Integer(FIXED));
-	attributeTypes.put("required", new Integer(REQUIRED));
-	attributeTypes.put("current", new Integer(CURRENT));
-	attributeTypes.put("conref", new Integer(CONREF));
-	attributeTypes.put("implied", new Integer(IMPLIED));
+        attributeTypes.put("fixed", Integer.valueOf(FIXED));
+        attributeTypes.put("required", Integer.valueOf(REQUIRED));
+        attributeTypes.put("current", Integer.valueOf(CURRENT));
+        attributeTypes.put("conref", Integer.valueOf(CONREF));
+        attributeTypes.put("implied", Integer.valueOf(IMPLIED));
     }
 
     public static int name2type(String nm) {
-	Integer i = (Integer)attributeTypes.get(nm);
-	return (i == null) ? CDATA : i.intValue();
+        Integer i = (Integer)attributeTypes.get(nm);
+        return (i == null) ? CDATA : i.intValue();
     }
 
     public static String type2name(int tp) {
-	return (String)attributeTypes.get(new Integer(tp));
+        return (String)attributeTypes.get(Integer.valueOf(tp));
     }
 }
